--- a/计算机系统结构复习.md
+++ b/计算机系统结构复习.md
@@ -11,7 +11,7 @@
 >     - 操作系统机器级、M2
 >     - 传统机器语言机器级、M1
 >     - 微程序机器级，M0
->   - **M0用硬件实现，M1用微程序（固件）实现，M2到M5大多数都是用软件实现**
+>   - **M0 用硬件实现，M1 用微程序（固件）实现，M2 到 M5 大多数都是用软件实现**
 >   - 固件是什么？
 >     - **一种具有软件功能的硬件**
 >     - **以软件为主**实现的机器称为：**虚拟机器**
@@ -27,7 +27,7 @@
 >     - **主存**的**最小编址单位**、编址方式、容量、最大可编址空间等的**存贮系统组织**
 >     - **中断的分类与分级、中断处理程序**功能及入口地址等的中断机构
 >     - **系统机器级的管态和用户态**的定义和切换
->     - **输入输出设备**的连接、使用方式、流量、操作结束、出错指示等的**机器级IO结构**
+>     - **输入输出设备**的连接、使用方式、流量、操作结束、出错指示等的**机器级 IO 结构**
 >     - 系统各部分的**信息保护方式**和**保护机构**
 > - **计算机组成**
 >   - **计算机组成**(Computer Organization)指的是**计算机系统结构**的**逻辑实现**，包括机器级内的**数据流**和**控制流**的组成以及**逻辑设计**等。
@@ -43,11 +43,11 @@
 >   - **组成也会影响结构**
 > - **软、硬件取舍的原则**
 >   - **软、硬件的功能分配是计算机系统结构的主要任务**
->   - 原则1：
+>   - 原则 1：
 >     - **系统要有高的性能价格比**
->   - 原则2：
+>   - 原则 2：
 >     - 要考虑`准备采用`和`可能采用`的**组成技术**，尽可能不要过多或不合理地限制各种组成、实现技术的采用。
->   - 原则3：
+>   - 原则 3：
 >     - 不能仅**从“硬”的角度**考虑如何便于应用组成技术的成果和便于发挥器件技术的进展，**还应从“软”的角度**把如何为编译和操作系统的实现以及如何为高级语言程序的设计提供更多、更好的硬件支持放在首位。
 > - **软、硬件功能分配比例对计算机系统性能的影响**
 >   - **提高硬件功能的比例可提高解题速度**，减少程序所需的存储空间，**但会增加硬件成本，降低**硬件利用率和计算机系统的**灵活性及适应性**。
@@ -82,7 +82,7 @@
 >     - 维持价格、提高性能维持性能、降低价格
 >   - 从**系统结构的观点**看
 >     - 各型计算机性能随时间的推移其实就是**在低档(型)机上引用甚至照搬高档(型)机的结构和组成**
->   - **计算机应用**可归纳为向上升级的4类
+>   - **计算机应用**可归纳为向上升级的 4 类
 >     - 数据处理、信息处理、知识处理、智能处理
 > - 器件的发展改变了**逻辑设计**的传统方法
 > - **器件的发展促进了：算法、语言、软件的发展**
@@ -97,13 +97,13 @@
 >       - **指令内部、指令之间、任务或进程之间、作业或程序之间**
 >     - 从计算机系统中**处理数据的并行性来看**，并行性等级**从低到高**可以分为：
 >       - **位串字串、位并字串、位片串字并、全并行**
->       - 2个串是最低的，全并，是最高的
+>       - 2 个串是最低的，全并，是最高的
 >     - **并行性**是贯穿于**计算机信息加工**的各个步骤和阶段的，从这个角度来看，并行性等级又可分为：
 >       - **存储器操作并行、处理器操作步骤并行、处理器操作并行、指令任务作业并行**
 >   - **并行性的开发途径**
 >     - 开发并行性的途径有：**时间重叠、资源重复、资源共享**等。
 > - **计算机系统的分类**
->   - **FLynn弗林分类法**
+>   - **FLynn 弗林分类法**
 >   - 从**并行性的角度**对计算机系统分类的方法有很多种。
 >   - **先给出如下定义**
 >     - **指令流**(instruction stream)———机器执行的指令序列。
@@ -116,31 +116,31 @@
 
 ### 选择填空
 
-> 例题：1. 下列对应用程序员不透明的是( B )(2012年单选题)
+> 例题：1. 下列对应用程序员不透明的是( B )(2012 年单选题)
 >
-> A.标志符数据表示中的标志符     B.输入输出系统硬件的功能
+> A.标志符数据表示中的标志符 B.输入输出系统硬件的功能
 >
-> C.虚拟地址到主存实地址的变换  D.“执行”指令
+> C.虚拟地址到主存实地址的变换 D.“执行”指令
 >
 > 解析：对应用程序员来说**只需要知道输入输出系统硬件的功能**，就能进行应用系统的开发，而**标志符、虚地址与实地址如何变换、“执行”指令**均属于**底层机器级所要确定的**问题，对其是透明的。
 >
 > 例题：2. 下列对**系统程序员不透明**的是? D
 >
-> A.Cache存储器    B.数据通路宽度
+> A.Cache 存储器 B.数据通路宽度
 >
 > C.指令缓冲寄存器 D.虚拟存储器
 >
 > 例题：3. 下列各项中对**机器语言程序员透明**的是? B
 >
-> A.中断字寄存器   B.主存地址寄存器
+> A.中断字寄存器 B.主存地址寄存器
 >
-> C.通用寄存器      D.条件码寄存器
+> C.通用寄存器 D.条件码寄存器
 >
 > 例题：4. 下列选项对**机器(汇编)语言程序员透明**的是?C
 >
 > A．指令地址寄存器 B．通用寄存器
 >
-> C．先行进位链       D.中断字寄存器
+> C．先行进位链 D.中断字寄存器
 >
 > 例题：5．程序状态字对**（）**程序员是透明的，对**（）**程序员是不透明的。
 >
@@ -152,21 +152,21 @@
 >
 > 例题：7. 主存的逻辑结构属于( B )
 >
-> A.计算机实现       B.计算机组成  
+> A.计算机实现 B.计算机组成
 >
 > C.计算机系统结构 D.计算机应用
 >
-> 解析：逻辑结构，那么就属于计算机组成。根据计算机系统结构的属性，**主存的容量、编址方式等属于计算机系统结构**，为达到性能价格要求，**主存速度为多少或者逻辑结构是否采用多体交叉属于计算机组成**。所以B选项正确。
+> 解析：逻辑结构，那么就属于计算机组成。根据计算机系统结构的属性，**主存的容量、编址方式等属于计算机系统结构**，为达到性能价格要求，**主存速度为多少或者逻辑结构是否采用多体交叉属于计算机组成**。所以 B 选项正确。
 >
 > 例题：12. 用微程序直接解释另一种机器指令系统的方法称为？B
 >
-> A.编译	B.仿真	C.翻译	D.模拟
+> A.编译 B.仿真 C.翻译 D.模拟
 >
 > 例题：13. 下列不属于软件移植技术的是？D
 >
-> A.统一高级语言	B.采用系列机
+> A.统一高级语言 B.采用系列机
 >
-> C.模拟               D.编译
+> C.模拟 D.编译
 >
 > 例题：14. 计算机仿真是用**（）**解释，其解释程序存储于**（）**中。P42
 >
@@ -174,21 +174,21 @@
 >
 > **例题：15. 简述模拟和仿真的区别？P42**
 >
-> 例题：16. 提高计算机系统并行性的主要技术途径有**时间重叠、资源重复、资源共享**。(2012年填空题)，P48。
+> 例题：16. 提高计算机系统并行性的主要技术途径有**时间重叠、资源重复、资源共享**。(2012 年填空题)，P48。
 >
 > 例题：17. 从**计算机信息加工**的各个步骤和阶段的角度来看，并行性等级最低的是：B。P47-p48
 >
-> A.处理器操作步骤并行	B.存储器操作并行
+> A.处理器操作步骤并行 B.存储器操作并行
 >
-> C.处理器操作并行         D.指令、任务作业并行
+> C.处理器操作并行 D.指令、任务作业并行
 >
 > 例题：18. 从计算机系统中处理数据的角度来看，并行性等级最低的是：C
 >
-> A.位并字串	B．位片串字并	C．位串字串	D.全并行
+> A.位并字串 B．位片串字并 C．位串字串 D.全并行
 >
 > 例题：19. 下列选项中，不是并行性开发途径的是：A。P48
 >
-> A．器件改进	B．时间重叠	C．资源重复	D．资源共享
+> A．器件改进 B．时间重叠 C．资源重复 D．资源共享
 >
 > 例题：20. 从计算机**执行程序的并行性**看，由低到高的并行性等级可分为**（）**、指令之间、**（）**、作业或程序之间四级。
 >
@@ -202,11 +202,11 @@
 >
 > **（资源共享、资源重复）**
 >
-> 例题：24. 按弗林(Flynn)提出的计算机系统分类方法，并行处理机属于**（）**系统。(2012年填空题)
+> 例题：24. 按弗林(Flynn)提出的计算机系统分类方法，并行处理机属于**（）**系统。(2012 年填空题)
 >
 > **（SIMD）**
 >
-> 解析：**并行处理机又叫 SIMD计算机**。它是**单一控制部件控制下的多个处理单元**构成的阵列，所以又称为**阵列处理机**。
+> 解析：**并行处理机又叫 SIMD 计算机**。它是**单一控制部件控制下的多个处理单元**构成的阵列，所以又称为**阵列处理机**。
 
 ## 第二章 数据表示、寻址方式和指令系统
 
@@ -218,7 +218,9 @@
 >     - **数据表示的确定实质上是软、硬件的取舍问题**。
 >     - 计算机的**运算类指令**和**运算器结构**主要是按计算机有什么样的**数据表示**来确定的。
 > - **高级数据表示**
+>
 >   - **自定义数据表示**
+>
 >     - 包括：**标志符、数据描述符。**
 >     - **标志符数据表示的优点：**
 >       - （1）**简化了指令系统**和程序设计。
@@ -230,12 +232,13 @@
 >     - **数据描述符**
 >
 >       - 为进一步**减少标志符所占存储空间**。
+>
 >   - **向量、数组数据表示**
 >     - 含义：有序排列的数据元素称为**向量**(向量数据)
 >     - **向量数据的三要素:**
->       * **基地址**：存放第一个向量数据的地址
->       * **向量长度**：向量数据个数
->       * **位移量**：与基地址的距离
+>       - **基地址**：存放第一个向量数据的地址
+>       - **向量长度**：向量数据个数
+>       - **位移量**：与基地址的距离
 >   - **堆栈数据表示**
 >     - **有堆栈数据表示**的机器称为**堆栈计算机**
 >     - **堆栈计算机表现于**
@@ -243,22 +246,23 @@
 >       - （2）有丰富的**堆栈指令**，直接对堆栈中的数据进行各种运算
 >       - （3）有力地支持**高级语言程序**的**编译**
 >       - （4）有力地支持**子程序的嵌套和递归调用**
+>
 > - **浮点数尾数基值的选择**
 >   - $m' = m/[log_2r_m]$，`！！向上取整！！3.1=4`
 >   - **规格化正尾数**
 >     - 所谓**规格化正尾数**，就是**正尾数**小数点后的第 **1** 个 $r_m$ 进制数位不是 **0** 的数。
->   - ![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](.\imgSytemS\数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
+>   - ![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](imgSytemS\数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
 > - **浮点数尾数下溢处理方法**
 >   - **截断法**
 >     - 实现简单，不增加硬件，不需要处理时间
 >     - **将尾数超出的部分截取。**
 >   - **舍入法**
->     - 增加硬件很少，最大误差小，**平均误差接近于0**
+>     - 增加硬件很少，最大误差小，**平均误差接近于 0**
 >   - **恒置"1"法**
->     - 平均误差趋于0，实现简单，不增加硬件，不需要处理时间。
+>     - 平均误差趋于 0，实现简单，不增加硬件，不需要处理时间。
 >     - 缺点是**最大误差最大，比截断法还大**
 >   - **查表舍入法**
->     - **平均误差可调节到0，是最好的方法**
+>     - **平均误差可调节到 0，是最好的方法**
 >     - 缺点是**硬件量大**
 >   - 计算机组成设计必须解决好数的**下溢处理**，因为这种**精度损失**对**系统程序和应用程序设计者都是透明的。**
 > - **寻址方式**
@@ -292,9 +296,9 @@
 >     - 五：**大多数指令都采用硬联控制实现**，少数指令采用微程序实现。
 >     - 六：**精简指令和优化设计编译程序**。
 >   - **基本技术**
->     - 按**设计RISC的一般原则**来设计
+>     - 按**设计 RISC 的一般原则**来设计
 >     - **逻辑实现采用硬联和微程序相结合。**
->     - 在CPU中**设置大量工作寄存器**并采用**重叠寄存器窗口**
+>     - 在 CPU 中**设置大量工作寄存器**并采用**重叠寄存器窗口**
 
 ### 选择填空
 
@@ -312,37 +316,37 @@
 >
 > 例题：4. 自定义数据表示包括标志符数据表示和：B。P55
 >
-> A.标题数据表示	B.数据描述符
+> A.标题数据表示 B.数据描述符
 >
-> C.向量数据表示	D.堆栈数据表示
+> C.向量数据表示 D.堆栈数据表示
 >
 > 例题：5. 下列选项中属于高级数据表示的是：A。P55-57
 >
-> A.向量	B.定点数	C.逻辑数	D.字符串
+> A.向量 B.定点数 C.逻辑数 D.字符串
 >
 > 例题：7. 下列选项中，属于高级数据表示的是：D。P55
 >
-> A．定点数据表示	B．浮点数据表示
+> A．定点数据表示 B．浮点数据表示
 >
-> C．逻辑数据表示	D.标志符数据表示
+> C．逻辑数据表示 D.标志符数据表示
 >
 > 例题：10. 浮点数表示中，当阶值位数一定时，不会受到尾数进制影响的是：B。P62
 >
-> A．精度	B．数符	C．范围	D．离散程度
+> A．精度 B．数符 C．范围 D．离散程度
 >
-> 例题：11. 正尾数小数点后的第1个$R_m$进制数位不为0的数称为：A。P63
+> 例题：11. 正尾数小数点后的第 1 个$R_m$进制数位不为 0 的数称为：A。P63
 >
-> A．规格化正尾数	B．有效正尾数
+> A．规格化正尾数 B．有效正尾数
 >
-> C．定点正尾数		D．单精度正尾数
+> C．定点正尾数 D．单精度正尾数
 >
-> 例题：12. 浮点数系统使用的阶基r,=2，阶值位数P=2，尾数位数m=4,尾数基值rm=2时，在非负阶正尾数、规格化的情况下可表示最大值是：。p63最大值=$r_m^{2p-1}*(1-r_m^{m'})$
+> 例题：12. 浮点数系统使用的阶基 r,=2，阶值位数 P=2，尾数位数 m=4,尾数基值 rm=2 时，在非负阶正尾数、规格化的情况下可表示最大值是：。p63 最大值=$r_m^{2p-1}*(1-r_m^{m'})$
 >
-> A. 7.5	B.6.5	C. 5.5	D.4.5
+> A. 7.5 B.6.5 C. 5.5 D.4.5
 >
-> 例题：13. 浮点数尾数的基值 $r_m$  =8，尾数的计算机位数m =8位，可表示的尾数的个数为：A。P63
+> 例题：13. 浮点数尾数的基值 $r_m$ =8，尾数的计算机位数 m =8 位，可表示的尾数的个数为：A。P63
 >
-> A.2^3×7	B.2^4×7	C.2^5×7	D.2^6×7
+> A.2^3×7 B.2^4×7 C.2^5×7 D.2^6×7
 >
 > 例题：14. 浮点数阶值的位数主要影响可表示数的**（）**大小，而尾数的位数主要影响可表示区中能表示值的**（）**。P62
 >
@@ -356,61 +360,61 @@
 >
 > **（阶、尾数）**
 >
-> 例题：17. 浮点数尾数基值 $r_m$ =16，除尾符之外的尾数机器位数为8位时，可表示的规格化最大尾数数值为：D。P63
+> 例题：17. 浮点数尾数基值 $r_m$ =16，除尾符之外的尾数机器位数为 8 位时，可表示的规格化最大尾数数值为：D。P63
 >
-> A.1/ 2	B. 15/ 16	C. 1 / 256	D. 255/ 256
+> A.1/ 2 B. 15/ 16 C. 1 / 256 D. 255/ 256
 >
 > 解析：$1-r_m^{-m'} = 1-16^{-2}=255/256$
 >
-> 例题：18. 浮点数尾数基值$r_m$=8，尾数数值部分长6位，可表示的规格化最小正尾数为：C。
+> 例题：18. 浮点数尾数基值$r_m$=8，尾数数值部分长 6 位，可表示的规格化最小正尾数为：C。
 >
-> A.0.5	B.0.25	C.0.125	D.0.015625
+> A.0.5 B.0.25 C.0.125 D.0.015625
 >
 > 解析：$r_m^{-1}=1/8$
 >
-> 例题：19. 例:浮点数尾数基值$r_m$=8，尾数数值部分长6位，可表示规格化正尾数的个数是：A。
+> 例题：19. 例:浮点数尾数基值$r_m$=8，尾数数值部分长 6 位，可表示规格化正尾数的个数是：A。
 >
-> A. 56个	B.63个	C..64个	D.84个
+> A. 56 个 B.63 个 C..64 个 D.84 个
 >
 > 解析：$r_m^{m'}*(r_m-1)/r_m=64*7/8=56$
 >
-> 例题：20. 浮点数尾数基值$r_m$=8，以rm为基的尾数位数m'=2，则可表示的规格化最大尾数值为：D。
+> 例题：20. 浮点数尾数基值$r_m$=8，以 rm 为基的尾数位数 m'=2，则可表示的规格化最大尾数值为：D。
 >
-> A.1/64	B.1/8	C.7/8	D.63/64
+> A.1/64 B.1/8 C.7/8 D.63/64
 >
 > 解析：$1-r_m^{m'}$
 >
-> 例题：21. 浮点数系统使用的阶基r,=2，阶值位数P=2，尾数基值$r_m$=10，以$r_m$为基的尾数位数m '=1，在非负阶正尾数、规格化情况下的最小尾数值为：B。 P62-63
+> 例题：21. 浮点数系统使用的阶基 r,=2，阶值位数 P=2，尾数基值$r_m$=10，以$r_m$为基的尾数位数 m '=1，在非负阶正尾数、规格化情况下的最小尾数值为：B。 P62-63
 >
-> A.0.5	B.0.1	C.0.01	D.0.05
+> A.0.5 B.0.1 C.0.01 D.0.05
 >
 > 解析：基值$r_m=10$，规范化最小正尾数为：1/$r_m$
 >
-> 例题：22. 浮点数系统使用的阶基rp=2，阶值位数P=2，尾数基值$r_m$=10，以$r_m$为基的尾数位数m'为1，在非负阶正尾数、规格化情况下的最大尾数值为：D。P63
+> 例题：22. 浮点数系统使用的阶基 rp=2，阶值位数 P=2，尾数基值$r_m$=10，以$r_m$为基的尾数位数 m'为 1，在非负阶正尾数、规格化情况下的最大尾数值为：D。P63
 >
-> A.0.1	B.0.2	C.0.5	D.0.9
+> A.0.1 B.0.2 C.0.5 D.0.9
 >
 > 解析：$1-r_m^{-m'}$
 >
 > 【例题】23. 四种浮点数尾数下溢处理方法中，实现最简单的方法是：A。
 >
-> A.截断	B.舍入法	C.恒置“1”法	D.查表舍入法
+> A.截断 B.舍入法 C.恒置“1”法 D.查表舍入法
 >
-> 例题：24. **寻址方式**指的是指令按什么方式寻找(或访问)到所需的操作数或信息的，具有分别面向**（）**、**（）**和**（）**的寻址方式。(2012填空题)，P69
+> 例题：24. **寻址方式**指的是指令按什么方式寻找(或访问)到所需的操作数或信息的，具有分别面向**（）**、**（）**和**（）**的寻址方式。(2012 填空题)，P69
 >
 > **（主存、寄存器、堆栈）**
 >
 > 例题：25. 程序员编写程序时使用的地址是：C。P70
 >
-> A.主存物理地址	B.有效地址	C.逻辑地址	D.基址
+> A.主存物理地址 B.有效地址 C.逻辑地址 D.基址
 >
 > 例题：26. RISC 采用重叠寄存器窗口技术，可以减少：C。p90
 >
-> A.绝大多数指令的执行时间	B.目标程序的指令条数
+> A.绝大多数指令的执行时间 B.目标程序的指令条数
 >
-> C.程序调用引起的访存次数	D.CPU 访存的访问周期
+> C.程序调用引起的访存次数 D.CPU 访存的访问周期
 >
-> 解析：在CPU中**设置大量工作寄存器并采用重叠寄存器窗口**，可以**减少访存**，尽量让指令的操作在寄存器之间进行，以提高执行速度，缩短指令周期。
+> 解析：在 CPU 中**设置大量工作寄存器并采用重叠寄存器窗口**，可以**减少访存**，尽量让指令的操作在寄存器之间进行，以提高执行速度，缩短指令周期。
 >
 > 例题：27. 在机器指令系统的设计、发展和改进上有**（）**和**（）**两种不同的途径和方向。P83
 >
@@ -423,37 +427,30 @@
 > 例题：29. 指令系统的改进是以**（）**原有指令系统为前提的，通过增加少量**（）**新指令代替常用指令串。P85
 >
 > **（不删改、强功能）**
->
-> 
 
 ### 大题
 
 - 数据表示图
-  - ![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](.\imgSytemS\数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
+  - ![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](imgSytemS\数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
 
-
-
-> 例题：9. 浮点数系统使用的阶基$r_p$=2，阶值位数P=2，尾数基值$r_m$=10,以$r_m$为基的尾数，位数m'=1。在非负阶、正尾数、规格化情况下，试计算:
+> 例题：9. 浮点数系统使用的阶基$r_p$=2，阶值位数 P=2，尾数基值$r_m$=10,以$r_m$为基的尾数，位数 m'=1。在非负阶、正尾数、规格化情况下，试计算:
 >
 > (1)最小尾数值;(2)最大尾数值;(3)最大阶值;(4)可表示的最小值;(5)可表示的最大值;(6)可表示数的个数。
->
 
 ![ROM表查表舍入处理](./imgSytemSRe/ROM表查表舍入处理.png)
 
-
-
-## 第三章 存储、中断、总线与I/O系统
+## 第三章 存储、中断、总线与 I/O 系统
 
 > - **存储系统的基本要求**
 >   - 对存储系统的基本要求是：**大容量、高速度、低价格**
 >   - （1）存储器的**容量**：$S_M = W * 1 * m$
->   - （2）m个存储器最大带宽：$B_M = W * m / T_M$
+>   - （2）m 个存储器最大带宽：$B_M = W * m / T_M$
 >   - （3）每位价格：$c = C/S_M$
 > - **中断系统**
 >   - 中断分为**内部中断、外部中断和软件中断**三类。
 >   - **引起中断的各种事件**称为**中断源**。
 >   - 中断源向中断系统发出请求中断的申请，称为**中断请求**。
->   - **中断分为六类**，IBM370系统分的
+>   - **中断分为六类**，IBM370 系统分的
 >     - **机器校验中断**
 >     - **管理程序调用(访管)中断**
 >     - **程序性中断**
@@ -465,74 +462,74 @@
 >   - **双向传输**又有**半双向**和**全双向**的不同。
 >   - 总线按其**用法**可以分成**专用**的和**非专用**的。
 >     - 只连接一对物理部件的总线称为**专用总线**。
->   - 如果**N个部件**用**双向专用总线**在所有可能路径都互连，则需**N×(N —1)/2**组总线。
->   - 总线的集中控制方式可分为**集中式串行链接、集中式定时查询、集中式独立请求，3种**。
+>   - 如果**N 个部件**用**双向专用总线**在所有可能路径都互连，则需**N×(N —1)/2**组总线。
+>   - 总线的集中控制方式可分为**集中式串行链接、集中式定时查询、集中式独立请求，3 种**。
 > - **总线系统通信技术**
 >   - 信息在总线上的传送方法基本上可分为**同步**和**异步**两种。
-> - **I/O系统**
->   - 输入/输出系统的发展经历了3个阶段，对应3种方式
->     - **程序控制I/O方式**
+> - **I/O 系统**
+>   - 输入/输出系统的发展经历了 3 个阶段，对应 3 种方式
+>     - **程序控制 I/O 方式**
 >     - **直接存储器访问(DMA)方式**
->     - **I/O处理机方式**
->   - 对于**I/O处理机方式**，又分为**通道(Channel)方式**和**外围处理机(PPU)方式**
+>     - **I/O 处理机方式**
+>   - 对于**I/O 处理机方式**，又分为**通道(Channel)方式**和**外围处理机(PPU)方式**
 >   - **通道处理机的工作原理和流量设计**
->     - **字节多路、数组多路和选择3类通道。**
+>     - **字节多路、数组多路和选择 3 类通道。**
 >   - **字节多路通道**每选择一台设备只传送一个字节，其**通道极限流量**为
 >     - $f_{max·byte}=1 / (T_s + T_D)$
->   - **数组多路通道每选择一台设备**就能传送完**K个字节**。如果要传送**N**个字节，就得分**[N/K]**次传送才行，每次传送都要选一次设备，通道极限流量为
+>   - **数组多路通道每选择一台设备**就能传送完**K 个字节**。如果要传送**N**个字节，就得分**[N/K]**次传送才行，每次传送都要选一次设备，通道极限流量为
 >     - $f_{max·block}= K/(T_s+KT_D) =1 / (T_s/K + T_D)$
 >   - **选择通道**每选择一台设备就把**N**个字节全部传送完，通道极限流量为
 >     - $f_{max·select}= N/(T_s+NT_D) =1 / (T_s/N + T_D)$
 
 ### 选择填空
 
-> 例题：2. 除数为0引起的中断属于：A。P103
+> 例题：2. 除数为 0 引起的中断属于：A。P103
 >
-> A.程序性中断	B.外部中断	C.机器校验中断	D.输入/输出中断
+> A.程序性中断 B.外部中断 C.机器校验中断 D.输入/输出中断
 >
 > 例题：4. 实现中断响应次序的器件称为：B。P105
 >
-> A.计数器	B.排队器	C.定时器	D.触发器
+> A.计数器 B.排队器 C.定时器 D.触发器
 >
 > 解析：中断响应的次序用排队器硬件实现，次序是由高到低固定的。
 >
 > 例题：6. 下列属于外部中断的是：C。P103
 >
-> A．主存访问方式保护中断	B．寻址超过主存容量中断
+> A．主存访问方式保护中断 B．寻址超过主存容量中断
 >
-> C．定时器中断	D．指令和数据格式出错中断
+> C．定时器中断 D．指令和数据格式出错中断
 >
-> 例题：7. 下列选项中，属于IBM370系统外部中断的是：B。 P103
+> 例题：7. 下列选项中，属于 IBM370 系统外部中断的是：B。 P103
 >
-> A．访问中断	B．定时器中断	C．重新启动中断	D. frO中断
+> A．访问中断 B．定时器中断 C．重新启动中断 D. frO 中断
 >
-> 例题：8. IBM370系统将中断的类型分为：D。P103
+> 例题：8. IBM370 系统将中断的类型分为：D。P103
 >
-> A.3类	B.4类	C.5类	D.6类
+> A.3 类 B.4 类 C.5 类 D.6 类
 >
 > 例题：9. 中断可分为的种类数为：B。p103
 >
-> A. 2类	B.3类	C.4类	D.5类
+> A. 2 类 B.3 类 C.4 类 D.5 类
 >
 > **（内部中断、外部中断和软件中断）**
 >
 > 例题：10. 实现中断响应次序的器件称为：B。P105
 >
-> A.计数器	B.排队器	C.定时器	D.触发器
+> A.计数器 B.排队器 C.定时器 D.触发器
 >
 > 解析：中断响应的次序用排队器硬件实现，次序是由高到低固定的。
 >
 > 例题：11. **主存出错**引起的中断类型属于：A。P103
 >
-> A.机器校验中断	B.访管中断	C.程序性中断	D.外中断
+> A.机器校验中断 B.访管中断 C.程序性中断 D.外中断
 >
 > 例题：12. 计算机**外部中断**不包括：A。p103
 >
-> A.机器校验中断	B.定时器中断	C.外部信号中断	D.中断键中断
+> A.机器校验中断 B.定时器中断 C.外部信号中断 D.中断键中断
 >
-> 例题：13. IBM 370系统中，**通道动作故障**引起的中断属于：A。P103
+> 例题：13. IBM 370 系统中，**通道动作故障**引起的中断属于：A。P103
 >
-> A.机器校验中断	B.访管中断	C.程序性中断	D.IO中断
+> A.机器校验中断 B.访管中断 C.程序性中断 D.IO 中断
 >
 > 例题：14. 中断可分**（）**、**（）**和**（）**三类。P103
 >
@@ -547,23 +544,23 @@
 > **（响应速度、灵活性）**
 >
 > - `总线系统`
-> 例题：21. 总线按用法可分为**（）**和**（）**两类，P109
+>   例题：21. 总线按用法可分为**（）**和**（）**两类，P109
 >
 > **（专用、非专用）**
 >
-> 例题：22. 若有8个部件之间采用双向专用总线互连，则需要的专用总线组数是：C。
+> 例题：22. 若有 8 个部件之间采用双向专用总线互连，则需要的专用总线组数是：C。
 >
-> A.8	B.16	C.28	D.256
+> A.8 B.16 C.28 D.256
 >
 > 【解析】根据双向专用总线互连组数计算公式
 >
-> N*(N-1)/2，当N=8时，共28组。所以答案应该为C。
+> N\*(N-1)/2，当 N=8 时，共 28 组。所以答案应该为 C。
 >
 > 例题：26. 集中式**总线仲裁**方式分为**（）**，**（）**和**独立请求**等三种。P110
 >
 > **（串行链接、定时查询）**
 >
-> 例题：27. 总线按在系统中的**位置**分**（）**、**（）**和**系统级**等3级。P109
+> 例题：27. 总线按在系统中的**位置**分**（）**、**（）**和**系统级**等 3 级。P109
 >
 > **（芯片级、板级）**
 >
@@ -571,7 +568,7 @@
 >
 > **（同步、异步）**
 >
-> 例题：29. 总线的集中式**控制方式**主要有集中式**串行链接**、**（）**和**（）**3种不同方式。P110
+> 例题：29. 总线的集中式**控制方式**主要有集中式**串行链接**、**（）**和**（）**3 种不同方式。P110
 >
 > **（集中式定时查询、集中式独立请求）**
 >
@@ -585,114 +582,104 @@
 >
 > 例题：31. 下列属于**总线标准**的是：D。P114
 >
-> A.吞吐率	B.速率	C.流量	D.电气
+> A.吞吐率 B.速率 C.流量 D.电气
 >
 > 例题：32. 总线按在系统中的**位置**分的级别数为：A。P109
-> A.3级	B.4级	C.5级	D.6级
+> A.3 级 B.4 级 C.5 级 D.6 级
 >
 > 例题：33. 下列选项中，不属于**减少总线数量**的方法是：D。P114
-> A．线的组合	B．编码	C．并/串——串/并转换	D．编程
+> A．线的组合 B．编码 C．并/串——串/并转换 D．编程
 > 例题：34. 下列**不属于**集中式总线控制优先次序方式的是：B。P110
 >
-> A.串行链接	B. DMA	C.定时查询	D.独立请求
+> A.串行链接 B. DMA C.定时查询 D.独立请求
 >
 > 例题：35. 下列选项中，**不属于**集中式总线控制方式的是：A。P110
 >
-> A．环形链接	B．串行链接	C．定时查询	D．独立请求
+> A．环形链接 B．串行链接 C．定时查询 D．独立请求
 > 例题：36. 总线控制定时查询方式的控制线的**线数**为：C。p111
 >
-> A. [log2N]	B. 1+[log2N]	c.2+[log2N]	D.3+[log2N]
+> A. [log2N] B. 1+[log2N] c.2+[log2N] D.3+[log2N]
 >
 > - `输入输出系统`
 >
-> 例题：37. I/O处理机方式有**（）**方式和**（）**方式。P115
+> 例题：37. I/O 处理机方式有**（）**方式和**（）**方式。P115
 >
 > **（通道、外围处理机）**
 
 ### 大题
 
-> 例题：1. 设主存采用**模m**多分体交叉存取，每个分体的存取周期为$T_m=2us$，要求主存**实际频宽为8MB / s**，但实际频宽只能达到最大频宽的**0.6倍**。2016.10
+> 例题：1. 设主存采用**模 m**多分体交叉存取，每个分体的存取周期为$T_m=2us$，要求主存**实际频宽为 8MB / s**，但实际频宽只能达到最大频宽的**0.6 倍**。2016.10
 >
-> （1）若分体宽度**W=4字节**，则主存模数应取多少才能满足要求?（m取2的幂）
+> （1）若分体宽度**W=4 字节**，则主存模数应取多少才能满足要求?（m 取 2 的幂）
 >
-> （2）若主存**模数为8**，则分体宽度应为多少才能满足要求?
+> （2）若主存**模数为 8**，则分体宽度应为多少才能满足要求?
 
-
-
-****
-
-
+---
 
 - **中断系统**
-  - ![存储、中断、总线与IO系统-中断图3-2](.\imgSytemS\存储、中断、总线与IO系统-中断图3-2.png)
+  - ![存储、中断、总线与IO系统-中断图3-2](imgSytemS\存储、中断、总线与IO系统-中断图3-2.png)
 
-> 例题：17. ![存储、中断、总线与IO系统-中断例题](.\imgSytemS\存储、中断、总线与IO系统-中断例题.png)
+> 例题：17. ![存储、中断、总线与IO系统-中断例题](imgSytemS\存储、中断、总线与IO系统-中断例题.png)
 >
-> （1）当中断响应优先次序为1→2一3一4时，其**中断处理次序是什么**?
+> （1）当中断响应优先次序为 1→2 一 3 一 4 时，其**中断处理次序是什么**?
 >
-> （2）如果所有的中断处理都各**需3个单位时间**，中断响应和中断返回时间相对中断处理时间少得多。当机器正在运行用户程序时，同时发生第2，3级中断请求，过两个单位时间，又同时发生第1，4级中断请求，试画出程序运行过程示意图。
+> （2）如果所有的中断处理都各**需 3 个单位时间**，中断响应和中断返回时间相对中断处理时间少得多。当机器正在运行用户程序时，同时发生第 2，3 级中断请求，过两个单位时间，又同时发生第 1，4 级中断请求，试画出程序运行过程示意图。
 >
-> 例题：18. 若机器共有5级中断，中断响应优先次序为1→2→3→4→5，要求其实际的中断处理次序为1→4→5→2→3。
+> 例题：18. 若机器共有 5 级中断，中断响应优先次序为 1→2→3→4→5，要求其实际的中断处理次序为 1→4→5→2→3。
 >
 > （1）设计各级中断处理程序的中断级屏蔽位(令“1”对应于开放，“0”对应于屏蔽，反之也行)
 >
-> （2）若在运行用户程序时，同时出现第4，2级中断请求，而在处理第2级中断未完成时，又同时出现第1，3，5级中断请求，请画出此程序运行过程示意图。
+> （2）若在运行用户程序时，同时出现第 4，2 级中断请求，而在处理第 2 级中断未完成时，又同时出现第 1，3，5 级中断请求，请画出此程序运行过程示意图。
 >
-> 例题：19. 机器有5级中断，中断响应次序为1→2→3→4>5，现要求实际中断处理次序为2→3→1→5→4。
+> 例题：19. 机器有 5 级中断，中断响应次序为 1→2→3→4>5，现要求实际中断处理次序为 2→3→1→5→4。
 >
-> （1）设计各级中断处理程序的中断级屏蔽位的状态，令“0”为开放，“1为屏蔽"
+> （1）设计各级中断处理程序的中断级屏蔽位的状态，令“0”为开放，“1 为屏蔽"
 >
-> （2）若运行用户程序时，同时发生1、3级中断请求，而在1级中断服务未完成时，又发生2、3、4、5级中断，请画出处理机执行程序全过程的示意图（标出交换PSW的时间)。
+> （2）若运行用户程序时，同时发生 1、3 级中断请求，而在 1 级中断服务未完成时，又发生 2、3、4、5 级中断，请画出处理机执行程序全过程的示意图（标出交换 PSW 的时间)。
 >
-> 例题：20. 机器有5级中断，中断响应次序为1>2→3→4>5，现要求实际中断处理次序为1→4→5→2→3。
+> 例题：20. 机器有 5 级中断，中断响应次序为 1>2→3→4>5，现要求实际中断处理次序为 1→4→5→2→3。
 >
-> （1）设计各级中断处理程序的中断级屏蔽位的状态，令“0”为开放，“1为屏蔽"
+> （1）设计各级中断处理程序的中断级屏蔽位的状态，令“0”为开放，“1 为屏蔽"
 >
-> （2）若运行用户程序时，同时发生4、2级中断请求，而在第2级中断服务未完成时，又发生1，3，5级中断，请画出处理机执行程序全过程的示意图。
+> （2）若运行用户程序时，同时发生 4、2 级中断请求，而在第 2 级中断服务未完成时，又发生 1，3，5 级中断，请画出处理机执行程序全过程的示意图。
 
-
-
-*****
-
-
+---
 
 > 例题：39. 如果通道在数据传送期中，选择设备需**9.8 us**，传送一个字节数据需**0.2us**。某低速设备每隔**500us**发出一个字节数据请求，那么至多可接几台这种低速设备?
 >
-> 对于如下**A-F6种高速设备**，一次通信传送的字节数**不少于1024个字节**，则哪些设备可挂，哪些不能挂?其中，A~F设备每发一个字节数据传送请求的时间间隔分别如表所示。
-> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间](.\imgSytemS\存储、中断、总线与IO系统-例题A-F设备法请求间隔时间.png)
+> 对于如下**A-F6 种高速设备**，一次通信传送的字节数**不少于 1024 个字节**，则哪些设备可挂，哪些不能挂?其中，A~F 设备每发一个字节数据传送请求的时间间隔分别如表所示。
+> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间](imgSytemS\存储、中断、总线与IO系统-例题A-F设备法请求间隔时间.png)
 >
-> （2）**一次传送**，意味着是**选择通道**，如果有n台设备，意味着选择通道的极限流量为：
+> （2）**一次传送**，意味着是**选择通道**，如果有 n 台设备，意味着选择通道的极限流量为：
 >
-> 例题：40. 如果通道在数据传送期中，**选择设备的时间 $T_s$ 为10us**，**传送一个字节数据需要的时间 $T_D$ 为0.5us**。(1)某低速设备每隔500us发出一个字节数据请求，至多可接几台这种设备?(2)对于题28表所示的低速设备，一次通信传送的字节数不少于1024个字节，则哪些设备可挂?哪些设备不可挂?201604
+> 例题：40. 如果通道在数据传送期中，**选择设备的时间 $T_s$ 为 10us**，**传送一个字节数据需要的时间 $T_D$ 为 0.5us**。(1)某低速设备每隔 500us 发出一个字节数据请求，至多可接几台这种设备?(2)对于题 28 表所示的低速设备，一次通信传送的字节数不少于 1024 个字节，则哪些设备可挂?哪些设备不可挂?201604
 >
-> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2](.\imgSytemS\存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2.png)
+> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2](imgSytemS\存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2.png)
 >
-> 例题：41. 设通道在数据传送期内，选择设备需4.9us，传送一个字节数据需0.1us。⑴某低速设备每隔250u s 发出一个字节数据传送请求，问至多可接几台这种低速设备?。(2)对于如下5种高速设备A~E，要求字节传送请求的时间间隔如题28表所示。若一次通信传送的字节数不少于1024字节，问哪些设备可以挂在此通道上﹖哪些不能?
+> 例题：41. 设通道在数据传送期内，选择设备需 4.9us，传送一个字节数据需 0.1us。⑴ 某低速设备每隔 250u s 发出一个字节数据传送请求，问至多可接几台这种低速设备?。(2)对于如下 5 种高速设备 A~E，要求字节传送请求的时间间隔如题 28 表所示。若一次通信传送的字节数不少于 1024 字节，问哪些设备可以挂在此通道上﹖哪些不能?
 >
-> ![存储、中断、总线与IO系统-例题2](.\imgSytemS\存储、中断、总线与IO系统-例题2.png)
+> ![存储、中断、总线与IO系统-例题2](imgSytemS\存储、中断、总线与IO系统-例题2.png)
 >
-> 例题：42. 有10台外设，各设备要求传送信息的工作速率如表所示，现设计的通道在数据传送期，每选择一次设备需2us，每送一个字节数据需要0.5us，若用作**字节多路通道**，则：201910
+> 例题：42. 有 10 台外设，各设备要求传送信息的工作速率如表所示，现设计的通道在数据传送期，每选择一次设备需 2us，每送一个字节数据需要 0.5us，若用作**字节多路通道**，则：201910
 >
 > （1）通道工作时的最高流量是多少?
-> （2）如果希望同时不少于5台设备挂在此通道上，最好多挂一些
+> （2）如果希望同时不少于 5 台设备挂在此通道上，最好多挂一些
 > 且高速设备尽量多挂一些，请问应选哪些设备挂在此通道上?为什么?
 >
-> （3）如果定长块大小为512B，求通道工作时的最高流量。
+> （3）如果定长块大小为 512B，求通道工作时的最高流量。
 >
 > （4）请问应选哪些设备挂在此通道上?为什么?
 >
-> ![存储、中断、总线与IO系统-例题3](.\imgSytemS\存储、中断、总线与IO系统-例题3.png)
-
-
+> ![存储、中断、总线与IO系统-例题3](imgSytemS\存储、中断、总线与IO系统-例题3.png)
 
 ## 第四章 存储体系
 
 > - **虚地址与实地址**
 >   - **应用程序员**可用**机器指令的地址**对整个程序**统一编址**，称该地址为**虚地址**。
 >   - 而把**实际主存地址**称为**实地址**。
-> - **Cache主存的存储层次**
->   - **从CPU看，速度是接近于主存的，容量是辅存的，每位价格是接近于辅存的。**
->   - 因**主存速度**满足不了要求而引出了**Cache存储器**。在**CPU和主存之间**增设**高速、小容量**、每位价格较高的**Cache**，用辅助硬件将其和主存构成整体。
+> - **Cache 主存的存储层次**
+>   - **从 CPU 看，速度是接近于主存的，容量是辅存的，每位价格是接近于辅存的。**
+>   - 因**主存速度**满足不了要求而引出了**Cache 存储器**。在**CPU 和主存之间**增设**高速、小容量**、每位价格较高的**Cache**，用辅助硬件将其和主存构成整体。
 > - **虚拟存储器的管理方式**
 >   - **段式**管理：**主存按段分配**的存储管理方式。.
 >   - **页式**管理：将**主存空间**和**程序空间**机械地分成**固定大小的页**
@@ -704,17 +691,17 @@
 >     - `（如果没被替换也没被命中，那么还是原来的那个,T11~T12）`
 >   - **优化替换算法（OPT）**
 >   - 计算命中率
->     - 命中率 = 命中次数 / 页地址流（时间t）
+>     - 命中率 = 命中次数 / 页地址流（时间 t）
 >   - `命中率与分配给程序的主存页数有关`
->     - **一般来说，分配给程序的主存页数越多**，**命中率也就可能越高**，除了FIFO，但LRU是不会发生这种情况。
->   - **Cache存储器分2组**
->     - 0145一组、2367一组
+>     - **一般来说，分配给程序的主存页数越多**，**命中率也就可能越高**，除了 FIFO，但 LRU 是不会发生这种情况。
+>   - **Cache 存储器分 2 组**
+>     - 0145 一组、2367 一组
 
 ### 选择填空
 
 > 例题：1. 系统存储体系的平均成本应取决于：D 。
 >
-> A.主存的价格	B.Cache的价格	C.虚存的价格	D.存储系统的位价格
+> A.主存的价格 B.Cache 的价格 C.虚存的价格 D.存储系统的位价格
 >
 > 例题：2. 虚拟存储器的管理方式有**（）**、**（）**和**（）**。P129
 >
@@ -722,73 +709,65 @@
 >
 > 例题：3. 页式存储器管理中，与**主存中的每个页面**能**对应多少个虚页**有关的是：D。P134
 >
-> A.地址	B.存储速度	C.页面号	D.映像方式
+> A.地址 B.存储速度 C.页面号 D.映像方式
 
-****
-
-
+---
 
 ### 大题
 
-> 例题：4. 设有一道程序，有1~5页，执行时的页地址流(即依次用到的程序页页号)为
+> 例题：4. 设有一道程序，有 1~5 页，执行时的页地址流(即依次用到的程序页页号)为
 > 2，3，2，1，5，2，4， 5，3，2， 5，2
 >
-> 若分配给该道程序的**主存有3页**，则图4- 15表示FIFO、LRU、OPT这3种替换算法对这3页的使用和替换过程。
+> 若分配给该道程序的**主存有 3 页**，则图 4- 15 表示 FIFO、LRU、OPT 这 3 种替换算法对这 3 页的使用和替换过程。
 
-
-
-> 例题：6. .考虑一个920个字的程序，其访问虚存的地址流为20，22，208，214，146，618，370，490，492，868，916，728。
+> 例题：6. .考虑一个 920 个字的程序，其访问虚存的地址流为 20，22，208，214，146，618，370，490，492，868，916，728。
 >
-> (1)若**页面大小为200字，主存容量为400字**，采用**FIFO替换算法**，请按访存的各个时刻，写出其虚页地址流，计算主存的命中率;
+> (1)若**页面大小为 200 字，主存容量为 400 字**，采用**FIFO 替换算法**，请按访存的各个时刻，写出其虚页地址流，计算主存的命中率;
 >
 > `INT(618/200)=3`，取小的
 >
-> (2)若页面大小为100字，再做一遍;
+> (2)若页面大小为 100 字，再做一遍;
 >
-> (3)若页面大小为400字，再做一遍;
+> (3)若页面大小为 400 字，再做一遍;
 >
 > (4)由(1)、(2)、(3)的结果可得出什么结论?
 >
-> 由以上结论可得，FIFO算法的条件下，当页面大小发生变化时，其命中率变化是:一开始随页面大小增大命中率增加(第一步与第二步比较），但当页面大小增到一定时，命中率不再增加（第一步与第三步比较）。
+> 由以上结论可得，FIFO 算法的条件下，当页面大小发生变化时，其命中率变化是:一开始随页面大小增大命中率增加(第一步与第二步比较），但当页面大小增到一定时，命中率不再增加（第一步与第三步比较）。
 >
-> (5)若把主存容量增加到800字，按第(1)小题再做一遍，又可得出什么结论?
+> (5)若把主存容量增加到 800 字，按第(1)小题再做一遍，又可得出什么结论?
 >
-> 命中率为58%，结论是如果分配给主存容量增加时可以提高命中率。
+> 命中率为 58%，结论是如果分配给主存容量增加时可以提高命中率。
 
-> 例题：7. 考虑一个920个字的程序，其访问虚存的地址流为22、215、156、618、373，491、492、868、916、528，若页面大小为200字，主存容量为400字，采用LRU替换算法，请按访存的各个时刻，写出其虚页地址流，给出替换过程并计算主存的命中率。
+> 例题：7. 考虑一个 920 个字的程序，其访问虚存的地址流为 22、215、156、618、373，491、492、868、916、528，若页面大小为 200 字，主存容量为 400 字，采用 LRU 替换算法，请按访存的各个时刻，写出其虚页地址流，给出替换过程并计算主存的命中率。
 >
-> 例题：9.设有一道程序，有1-5页，执行时的页地址流（即依次用到的程序页页号）为:2，3，2，5，1，5，3，4，3，5若分配给该道程序的主存有3页，给出采用FIFO替换算法的装入和替换过程。
+> 例题：9.设有一道程序，有 1-5 页，执行时的页地址流（即依次用到的程序页页号）为:2，3，2，5，1，5，3，4，3，5 若分配给该道程序的主存有 3 页，给出采用 FIFO 替换算法的装入和替换过程。
 >
-> 例题：10. 设有一道程序，有0～4共5个页，分配给该程序的主存有3页，若执行时的页地址流为1、2、1、0、4、1、3、4、3，采用LRU算法进行页面替换。
-> (1)请按访存的各个时刻，画出页面替换过程模拟图，并标出命中情况;(2)计算主存的命中率H。
+> 例题：10. 设有一道程序，有 0 ～ 4 共 5 个页，分配给该程序的主存有 3 页，若执行时的页地址流为 1、2、1、0、4、1、3、4、3，采用 LRU 算法进行页面替换。
+> (1)请按访存的各个时刻，画出页面替换过程模拟图，并标出命中情况;(2)计算主存的命中率 H。
 >
-> 例题：11.采用**LRU替换算法**的页式虚拟存储器共有9页空间准备分配给A、B两道程序。已知B道程序若给其分配4页时，命中率为8/15;若分配5页时，命中率可达10/15。现在给出**A道程序的页地址流**为2、3、2、1、5、2、4、5、3、2、5、2、1、4、5。(1)画出用堆栈对A道程序页地址流的模拟处理过程图;(2)统计给其分配4页和5页时的命中率。P141/p166/p295 4-8 2017.10
+> 例题：11.采用**LRU 替换算法**的页式虚拟存储器共有 9 页空间准备分配给 A、B 两道程序。已知 B 道程序若给其分配 4 页时，命中率为 8/15;若分配 5 页时，命中率可达 10/15。现在给出**A 道程序的页地址流**为 2、3、2、1、5、2、4、5、3、2、5、2、1、4、5。(1)画出用堆栈对 A 道程序页地址流的模拟处理过程图;(2)统计给其分配 4 页和 5 页时的命中率。P141/p166/p295 4-8 2017.10
 
-
-
-> 例题：8. 有一个虚拟存储器，**主存有4个实页**，**页号为0-3**，程序有8个虚页，页号为0~7，采用**全相联映像**和**FIFO替换算法**。给出如下程序页地址流：**2、3、5、2、4、0、1、2、4、6**。
+> 例题：8. 有一个虚拟存储器，**主存有 4 个实页**，**页号为 0-3**，程序有 8 个虚页，页号为 0~7，采用**全相联映像**和**FIFO 替换算法**。给出如下程序页地址流：**2、3、5、2、4、0、1、2、4、6**。
 >
-> (1)假设程序的**2（先入）、3、5页已先后装入主存的第3、2、0页位置**，请画出上述页地址流工作过程中，主存各页位置上装入程序各页号的变化过程图，标出命中时刻;
+> (1)假设程序的**2（先入）、3、5 页已先后装入主存的第 3、2、0 页位置**，请画出上述页地址流工作过程中，主存各页位置上装入程序各页号的变化过程图，标出命中时刻;
 >
-> (2)求出此期间主存的命中率H。
+> (2)求出此期间主存的命中率 H。
 >
-> 例题：12.有一个Cache存储器，主存有0～7共8块，Cache为4块，采用**组相联映像**，设Cache已先后预取进了主存的第1、5、3、7块，现访存块地址流又为1、2、1、3、7、0、1、2、5、6时，在Cache分2组的条件下:(P168/p301 4-16)201710
-> (1)画出用**FIFO替换算法**时，Cache内各块的实际替换过程图，并标出命中时刻。
-> (2)求出在此期间的Cache命中率。
+> 例题：12.有一个 Cache 存储器，主存有 0 ～ 7 共 8 块，Cache 为 4 块，采用**组相联映像**，设 Cache 已先后预取进了主存的第 1、5、3、7 块，现访存块地址流又为 1、2、1、3、7、0、1、2、5、6 时，在 Cache 分 2 组的条件下:(P168/p301 4-16)201710
+> (1)画出用**FIFO 替换算法**时，Cache 内各块的实际替换过程图，并标出命中时刻。
+> (2)求出在此期间的 Cache 命中率。
 >
-> 例题：13. 有一个Cache存储器，主存有0～7共8块，Cache有4块，采用**组相联映像，分2组**。假设Cache已**先后访问并预取**进了主存的第5、1、3、7块，现访存块地址流又为3、2、6、5、6、5、O、4、1、5、7、6时:
-> (1画出用**LRU替换算法**时，Cache内各块的实际替换过程图，并标出命中时刻。
-> (2)求出此期问的Cache命中率。
+> 例题：13. 有一个 Cache 存储器，主存有 0 ～ 7 共 8 块，Cache 有 4 块，采用**组相联映像，分 2 组**。假设 Cache 已**先后访问并预取**进了主存的第 5、1、3、7 块，现访存块地址流又为 3、2、6、5、6、5、O、4、1、5、7、6 时:
+> (1 画出用**LRU 替换算法**时，Cache 内各块的实际替换过程图，并标出命中时刻。
+> (2)求出此期问的 Cache 命中率。
 >
-> 例题：14. 在一个采用**组相联映象**的**Cache**系统中，主存由0~15共16块组成，Cache分为2组，每组2块，每块大小为16个存储字。在某个程序执行时，访存的主存块地址流为:6、2、4、1、4、6、3、0、4、5、7、3。 P154，p167\p300，4-14
-> (1)写出主存块地址和Cache块地址的格式，并指出各字段的长度。
-> (2)采用LRU替换算法时，画出Cache内各块实际替换过程图，并计算Cache命中率
+> 例题：14. 在一个采用**组相联映象**的**Cache**系统中，主存由 0~15 共 16 块组成，Cache 分为 2 组，每组 2 块，每块大小为 16 个存储字。在某个程序执行时，访存的主存块地址流为:6、2、4、1、4、6、3、0、4、5、7、3。 P154，p167\p300，4-14
+> (1)写出主存块地址和 Cache 块地址的格式，并指出各字段的长度。
+> (2)采用 LRU 替换算法时，画出 Cache 内各块实际替换过程图，并计算 Cache 命中率
 >
-> 例题：15. 考虑一个1000个字的程序，其访问虚存的地址流为16、219136、156、332、480、503、868、916 , 999。若页面大小为**200字**，主存容量为**400字**，采用**FIFO替换算法**，请按访存的各个时刻，写出其虚页地址流，计算主存命中率。
+> 例题：15. 考虑一个 1000 个字的程序，其访问虚存的地址流为 16、219136、156、332、480、503、868、916 , 999。若页面大小为**200 字**，主存容量为**400 字**，采用**FIFO 替换算法**，请按访存的各个时刻，写出其虚页地址流，计算主存命中率。
 >
-> 例题：16. 考虑一个920个字的程序，其访问**虚存的地址流**为23、216、156、618、382、490、492、868、916、728。若页面大小为**200字**，主存容量为**400字**，采用**FIFO替换算法**，请按访存的各个时刻，写出其虚页地址流，计算主存命中率。
-
-
+> 例题：16. 考虑一个 920 个字的程序，其访问**虚存的地址流**为 23、216、156、618、382、490、492、868、916、728。若页面大小为**200 字**，主存容量为**400 字**，采用**FIFO 替换算法**，请按访存的各个时刻，写出其虚页地址流，计算主存命中率。
 
 ## 第五章 标量处理机
 
@@ -807,7 +786,7 @@
 >       - 指令解释方式中，**指令分析部件**和**指令执行部件**任何时候都只有**相邻两条指令**在重叠解释的方式称为“**一次重叠**”。
 >     - （3）要解决“分析”与“执行”操作**控制上的同步**。
 >     - （4）要解决**指令间各种相关的处理**。
->   - **一次重叠分为4个部分**
+>   - **一次重叠分为 4 个部分**
 >     - 取指令
 >     - 指令译码
 >     - 取操作数
@@ -826,7 +805,7 @@
 >   - 任务在流水线中流动顺序的安排有**顺序流动方式**或**同步流动方式**和**异步流动方式**。
 >   - 延迟禁止表：大的拍数减小的拍数
 >   - 冲突向量：二进制
->   - 状态转移表：为0的位向右移动相应的位数
+>   - 状态转移表：为 0 的位向右移动相应的位数
 >   - 平均延迟：最佳线路/个数
 >   - 最大吞吐量：1/平均延迟
 
@@ -838,9 +817,9 @@
 >
 > 例题：3. 静态流水线是指：D。P179
 >
-> A.功能不能改变的流水线	B.各段之间的连接是固定不变的流水线
+> A.功能不能改变的流水线 B.各段之间的连接是固定不变的流水线
 >
-> C.可同时执行多种功能的流水线	D.同时只能完成一种功能的多功能流水线
+> C.可同时执行多种功能的流水线 D.同时只能完成一种功能的多功能流水线
 >
 > 例题：4.下列对静态流水线描述正确的是：C。P179
 >
@@ -852,60 +831,52 @@
 >
 > D.静态流水线是在某一时间内各段静止的流水线
 >
-> 例题：5. Amdahl 470V/6属于：B。P180
+> 例题：5. Amdahl 470V/6 属于：B。P180
 >
-> A.向量流水机惇	B．标量流水机	C.并行处理机	D.阵列机
+> A.向量流水机惇 B．标量流水机 C.并行处理机 D.阵列机
 
 ### 大题
 
-> 例题：2. 假设指令的解释分取指、分析与执行3步，每步的时间相应为t取指、1分析、‘执行，分别计算下列情况下，执行完100条指令所需时间的一般关系式:201504，P169，P200，P303，5-1
+> 例题：2. 假设指令的解释分取指、分析与执行 3 步，每步的时间相应为 t 取指、1 分析、‘执行，分别计算下列情况下，执行完 100 条指令所需时间的一般关系式:201504，P169，P200，P303，5-1
 >
-> （1）顺序方式（2）仅“执行,”与“取指,”重叠;（3）仅“执行,”、“分析k:”与“取指k”重叠。
+> （1）顺序方式（2）仅“执行,”与“取指,”重叠;（3）仅“执行,”、“分析 k:”与“取指 k”重叠。
 >
-> 例题：6. 设向量A和B各有4个元素，要在图5 - 24(a)所示的静态双功能流水线上计算向量点积：![标量处理机-向量点积](.\imgSytemS\标量处理机-向量点积.png)，按此算法可画出流水线工作的时空图如图5- 24(b)所示。
+> 例题：6. 设向量 A 和 B 各有 4 个元素，要在图 5 - 24(a)所示的静态双功能流水线上计算向量点积：![标量处理机-向量点积](imgSytemS\标量处理机-向量点积.png)，按此算法可画出流水线工作的时空图如图 5- 24(b)所示。
 >
-> **（1）流水线的效率是多少？** 
+> **（1）流水线的效率是多少？**
 
-> 例题：7. 现有**长度为8的向量A和B**，请分别画出下列2种结构的处理器上求点积A·B的时空图，并求完成全部结果的最少时钟拍数。设处理器中每个部件的输出均可直接送到任何部件的输入或存入缓冲器中，其间的传送延时不计，指令和源操作数均能连续提供。201704,P202
+> 例题：7. 现有**长度为 8 的向量 A 和 B**，请分别画出下列 2 种结构的处理器上求点积 A·B 的时空图，并求完成全部结果的最少时钟拍数。设处理器中每个部件的输出均可直接送到任何部件的输入或存入缓冲器中，其间的传送延时不计，指令和源操作数均能连续提供。201704,P202
 >
-> (1处理器有**一个乘法部件**和**一个加法部件**，不能同时工作，部件内也只能以**顺序方式**工作，完成一次加法或乘法均需**5拍**。
+> (1 处理器有**一个乘法部件**和**一个加法部件**，不能同时工作，部件内也只能以**顺序方式**工作，完成一次加法或乘法均需**5 拍**。
 >
-> (2)处理器有一个乘法部件和一个加法部件，乘法部件和加法部件可**并行工作**，部件完成一次加法或乘法均需**5拍**。
+> (2)处理器有一个乘法部件和一个加法部件，乘法部件和加法部件可**并行工作**，部件完成一次加法或乘法均需**5 拍**。
 
-
-
-****
-
-
+---
 
 - `流水线`
 
-> 例题：现设**流水线由5段组成**，**段号k分别为1~5**，任务经过流水线总共需**9拍**，其预约表如图5 - 28(a)所示。求延迟禁止表，求冲突向量，画单功能流水的状态转移事宜图，求平均间隔拍数（平均延迟）。
+> 例题：现设**流水线由 5 段组成**，**段号 k 分别为 1~5**，任务经过流水线总共需**9 拍**，其预约表如图 5 - 28(a)所示。求延迟禁止表，求冲突向量，画单功能流水的状态转移事宜图，求平均间隔拍数（平均延迟）。
 >
-> ![标量处理机-例题4题目](.\imgSytemS\标量处理机-例题4题目.png)
+> ![标量处理机-例题4题目](imgSytemS\标量处理机-例题4题目.png)
 
-> 在一个4段的流水线处理机上需经7拍才能完成一个任务，其预约表如表5-2所示。
+> 在一个 4 段的流水线处理机上需经 7 拍才能完成一个任务，其预约表如表 5-2 所示。
 >
-> - 状态转移图如图5 - 29所示。
-> - 各种调度方案及其相应的平均延迟如表5-3所示。
-> - ![标量处理机-例题5状态预约表](.\imgSytemS\标量处理机-例题5状态预约表.png)
+> - 状态转移图如图 5 - 29 所示。
+> - 各种调度方案及其相应的平均延迟如表 5-3 所示。
+> - ![标量处理机-例题5状态预约表](imgSytemS\标量处理机-例题5状态预约表.png)
 > - 求延迟禁止表，求冲突向量，画单功能流水的状态转移事宜图，求平均间隔拍数（平均延迟）
 
-> 例题：11. 现设流水线由5段组成，段号k分别为1 ~5，任务经过流水线总共需要9拍，其预约表如表所示，201904，P1931p312,5-11
+> 例题：11. 现设流水线由 5 段组成，段号 k 分别为 1 ~5，任务经过流水线总共需要 9 拍，其预约表如表所示，201904，P1931p312,5-11
 >
-> ![标量处理机-例题6状态预约表](.\imgSytemS\标量处理机-例题6状态预约表.png)(1)写出延迟禁止表F、冲突向量C;
+> ![标量处理机-例题6状态预约表](imgSytemS\标量处理机-例题6状态预约表.png)(1)写出延迟禁止表 F、冲突向量 C;
 > (2)画出流水线状态转移图;
 > (3)求出最佳调度方案、最小平均延迟及流水线的最大吞吐率。
 >
-> 例题：12. 在一个5段的流水线处理机上需经9拍才能完成一个任务，其预约表如题28表所示。P193，P202Np312，5-11，201804
+> 例题：12. 在一个 5 段的流水线处理机上需经 9 拍才能完成一个任务，其预约表如题 28 表所示。P193，P202Np312，5-11，201804
 >
-> ![标量处理机-例题7状态预约表](.\imgSytemS\标量处理机-例题7状态预约表.png)(1)分别写出延迟禁止表F、冲突向量C;
+> ![标量处理机-例题7状态预约表](imgSytemS\标量处理机-例题7状态预约表.png)(1)分别写出延迟禁止表 F、冲突向量 C;
 > (2)画出流水线状态转移图;
 > (3)求出最小平均延迟及流水线的最大吞吐率。
-
-
-
-
 
 ## 第六章 向量处理机
 
@@ -923,25 +894,25 @@
 >     - （1）**阵列处理机的单指令流多数据流处理方式**
 >     - （2）**阵列处理机**利用的是**资源重复**，**而不是时间重叠**；利用**并行性中的同时性，而不是并发性**。
 >     - （3）依靠**增大处理单元个数**来提高运算速度，比起**向量流水线处理机主要依靠缩短时钟周期**来说，速度提高的潜力要大得多。
-> - **SIMD计算机的互连网络**
+> - **SIMD 计算机的互连网络**
 >   - 设计目标
 >     - （1）结构不要过分复杂;
 >     - （2）互连要灵活;
 >     - （3）处理单元间信息交换所需的传送步数要尽可能少，以提高速度性能;
->     - （4）能用规整单一的基本构建组合而成，或经多次通过或者经多级连接来实现复杂的互连，使模块性好，以便用VLSI实现，并满足可扩充性。
+>     - （4）能用规整单一的基本构建组合而成，或经多次通过或者经多级连接来实现复杂的互连，使模块性好，以便用 VLSI 实现，并满足可扩充性。
 >   - **互连网络应抉择的几个问题**
->     - 在确定PE之间通信的互连网络时，需要对**操作方式、控制策略、交换方法和网络的拓扑结构**作出抉择。
+>     - 在确定 PE 之间通信的互连网络时，需要对**操作方式、控制策略、交换方法和网络的拓扑结构**作出抉择。
 >   - 操作方式有**同步**、**异步**及**同步与异步**组合三种。
 >   - **基本的单级互连网络**
 >     - 立方体单级网络
->     - PM2I单级网络
+>     - PM2I 单级网络
 >       - $PM2_{+-i}(j)=j+2^imod N$
 >     - 混洗交换单级网络
 >       - 蝶形，`Shuffle`，左移一位。`001→010`
 >   - **基本的多级互连网络**
 >     - 直连、交换、上播、下播
 >     - 控制方式有三种：级控制、单元控制、部分控制
-> - 分体数m必须是大于n的质数，$m=2^{2p}+1$（P位整整数），因此m至少为5
+> - 分体数 m 必须是大于 n 的质数，$m=2^{2p}+1$（P 位整整数），因此 m 至少为 5
 
 ### 选择填空
 
@@ -971,69 +942,67 @@
 >
 > 例题：7. 分布式存储器阵列处理机属于：A。P209
 >
-> A.SIMD系统	B SISD系统	C.MISD系统	D.MIMD系统
+> A.SIMD 系统 B SISD 系统 C.MISD 系统 D.MIMD 系统
 >
-> 例题：8. 有N个处理单元的集中式共享存储器的阵列处理机构形，为了对长度为N的向量中各元素能同时并行处理，存储器分体个数K与处理单元数N的关系是：D。P209
+> 例题：8. 有 N 个处理单元的集中式共享存储器的阵列处理机构形，为了对长度为 N 的向量中各元素能同时并行处理，存储器分体个数 K 与处理单元数 N 的关系是：D。P209
 >
-> A．K与N无关	B．K小于N	C. K小于或等于N	D.K等于或大于N
+> A．K 与 N 无关 B．K 小于 N C. K 小于或等于 N D.K 等于或大于 N
 >
-> 例题：10. 编号为0、1、2、...、15的16个处理器，用单级互连网络互连，用 Cube0互连函数时，与第10号处理器相连的处理器的编号是：C。
+> 例题：10. 编号为 0、1、2、...、15 的 16 个处理器，用单级互连网络互连，用 Cube0 互连函数时，与第 10 号处理器相连的处理器的编号是：C。
 >
-> A.9	B.10	C.11	D.12
+> A.9 B.10 C.11 D.12
 >
-> 解析：Cube0(1010)=1011。10的二进制是1010。
+> 解析：Cube0(1010)=1011。10 的二进制是 1010。
 >
-> 例题：11. 编号为0，1，...，15的16个处理器，当互连网络函数为Cube3时，13号处理器连接到的处理器的号数是：C。P217
+> 例题：11. 编号为 0，1，...，15 的 16 个处理器，当互连网络函数为 Cube3 时，13 号处理器连接到的处理器的号数是：C。P217
 >
-> A.3	B.4	C.5	D.6
+> A.3 B.4 C.5 D.6
 >
-> 例题：12. 编号为0，1，...，15的16个处理器，当互连网络函数为Cube3时，3号处理器连接到的处理器的号数是：C。P217
+> 例题：12. 编号为 0，1，...，15 的 16 个处理器，当互连网络函数为 Cube3 时，3 号处理器连接到的处理器的号数是：C。P217
 >
-> A.9	B. 10	C. 11	D. 12
+> A.9 B. 10 C. 11 D. 12
 >
-> 例题：13. 编号为0、1、2、...、15的 16个处理器，用单级互连网络互连，用 $PM2_{+1}$，互连函数时，与第7号处理器相连的处理器的编号是：B。
+> 例题：13. 编号为 0、1、2、...、15 的 16 个处理器，用单级互连网络互连，用 $PM2_{+1}$，互连函数时，与第 7 号处理器相连的处理器的编号是：B。
 >
-> A.8	B.9	C.10	D.11
+> A.8 B.9 C.10 D.11
 >
-> 例题：14. 对于N=8的互连网络，处理单元编号为0～7，当用$PM2_{+1}I$数时，下列正确的是：B。P218
+> 例题：14. 对于 N=8 的互连网络，处理单元编号为 0 ～ 7，当用$PM2_{+1}I$数时，下列正确的是：B。P218
 >
-> A. (6420)(7531)	B. (0246)(1357)	C. (0123)(4567)	D.(7654)(3210)
+> A. (6420)(7531) B. (0246)(1357) C. (0123)(4567) D.(7654)(3210)
 >
-> 例题：15. 实现16个处理单元互连的PM2I单级网络。2017.4 (P218)
+> 例题：15. 实现 16 个处理单元互连的 PM2I 单级网络。2017.4 (P218)
 >
-> （1）写出所有各种单级PM2I互连函数的一般式。
+> （1）写出所有各种单级 PM2I 互连函数的一般式。
 >
-> （2）3号处理单元用单级 PM2I 网络可以将数据直接传送到哪些处理单元上。
+> （2）3 号处理单元用单级 PM2I 网络可以将数据直接传送到哪些处理单元上。
 >
-> 例题：16. 编号为0，1，...，15的16个处理器，当互连网络函数为Shuffle时，9号处理器连接到的处理器的号数是：D。p219
+> 例题：16. 编号为 0，1，...，15 的 16 个处理器，当互连网络函数为 Shuffle 时，9 号处理器连接到的处理器的号数是：D。p219
 >
-> A. 0	B. 1	C.2	D.3
+> A. 0 B. 1 C.2 D.3
 >
-> 例题：17. 编号为0~15的16个处理器，互连函数采用Shuffle(Shuffle)**单级互连网络互连**，则与9号处理器连接的处理器号为：B。P219
+> 例题：17. 编号为 0~15 的 16 个处理器，互连函数采用 Shuffle(Shuffle)**单级互连网络互连**，则与 9 号处理器连接的处理器号为：B。P219
 >
-> A. 5	B. 6	C.7	D. 8
+> A. 5 B. 6 C.7 D. 8
 >
-> 例题：18. 编号为0，1，...，15的16个处理器，用单级互连网络互连,当用Shuffle(Shuffle)互连函数时，第13号处理器连至的处理器号数是：A。P219
+> 例题：18. 编号为 0，1，...，15 的 16 个处理器，用单级互连网络互连,当用 Shuffle(Shuffle)互连函数时，第 13 号处理器连至的处理器号数是：A。P219
 >
-> A.7	B.11	C.13	D.14
+> A.7 B.11 C.13 D.14
 
 ### 大题
 
-> ![向量处理机-例题1题目](.\imgSytemS\向量处理机-例题1题目.png)
+> ![向量处理机-例题1题目](imgSytemS\向量处理机-例题1题目.png)
 
-> 重点提示：-1mod16如何计算？$-1=-1*16+X$,这个X就是答案
+> 重点提示：-1mod16 如何计算？$-1=-1*16+X$,这个 X 就是答案
 
-> 例题：19. ![向量处理机-例题4题目](.\imgSytemS\向量处理机-例题4题目.png)
+> 例题：19. ![向量处理机-例题4题目](imgSytemS\向量处理机-例题4题目.png)
 >
 > ![image-20210401160423151](imgSytemSRe/image-20210401160423151.png)
-
-
 
 ## 第七章 多处理机
 
 > - **多处理机**
 >
->   - `概念`：**多处理机**是指有**两台以上的处理机**，**共享IO子系统**，机间经共享主存或高速通信网络通信，在统一操作系统控制下，协同求解大而复杂问题的计算机系统。
+>   - `概念`：**多处理机**是指有**两台以上的处理机**，**共享 IO 子系统**，机间经共享主存或高速通信网络通信，在统一操作系统控制下，协同求解大而复杂问题的计算机系统。
 >   - `目标`
 >     - （1）对多个作业、多个任务**并行执行**来提高解题速度，从而**提高整体性能**;
 >     - （2）使用冗余的多个处理机通过重新组织来**提高系统的可靠性、适应性和可用性**。
@@ -1063,22 +1032,22 @@
 >     - (3)交叉开关形式
 >     - (4)多端口存储器形式
 >     - (5)蠕虫穿洞寻径网络
->     - (6)开关枢纽结构形式■
+>     - (6)开关枢纽结构形式 ■
 >
-> - **紧耦合多处理机多Cache的一致性问题**
+> - **紧耦合多处理机多 Cache 的一致性问题**
 >
->   - 为了解决价格合理的大容量**主存的访问速度低于处理机速度一个数量级**的现实问题，系统**在多处理机和主存之间**，通常配置有一个**高速缓冲存储器Cache**。
+>   - 为了解决价格合理的大容量**主存的访问速度低于处理机速度一个数量级**的现实问题，系统**在多处理机和主存之间**，通常配置有一个**高速缓冲存储器 Cache**。
 >   - 解决办法
->     - 1.解决进程迁移引起的多Cache不一致性
->     - 2.以硬件为基础实现多Cache的一致性
->     - 3.以软件为基础实现多Cache的一致性
+>     - 1.解决进程迁移引起的多 Cache 不一致性
+>     - 2.以硬件为基础实现多 Cache 的一致性
+>     - 3.以软件为基础实现多 Cache 的一致性
 >
 > - **并行算法**
 >
 >   - **并行算法的分类：**
 >     - ⑴**按运算对象**：**数值型和非数值型**;
 >     - (2)按并行进程的**操作顺序**：**同步、异步和独立型;**
->     - ⑶按处理计算机**任务大小**：**细粒度、中粒度和粗粒度。**
+>     - ⑶ 按处理计算机**任务大小**：**细粒度、中粒度和粗粒度。**
 >
 > - **求加速比和效率**
 >
@@ -1092,10 +1061,10 @@
 
 ### 选择填空
 
-> 例题：2. **（）**是指有两台以上的处理机，共享I/O系统，机间经共享主存或高速通信网络通信，在统一操作系统控制下，协同求解大而复杂问题的计算机系统。
+> 例题：2. **（）**是指有两台以上的处理机，共享 I/O 系统，机间经共享主存或高速通信网络通信，在统一操作系统控制下，协同求解大而复杂问题的计算机系统。
 > **（多处理机）**
 >
-> 例题：3. 我国的**曙光1号**多处理机是典型的同构对称型**紧耦合多处理机**。
+> 例题：3. 我国的**曙光 1 号**多处理机是典型的同构对称型**紧耦合多处理机**。
 >
 > 例题：4. 松耦合多处理机可分为**（）**和**（）**两种不同的构形。P240
 >
@@ -1103,43 +1072,39 @@
 >
 > 例题：5. **机间互连的多端口存储器形式**适合应用于：C。P245
 >
-> A.紧耦合多处理机系统	B.机数很多的多处理机系统
+> A.紧耦合多处理机系统 B.机数很多的多处理机系统
 >
-> C.机数较少的多处理机系统	D.松耦合多处理机系统
+> C.机数较少的多处理机系统 D.松耦合多处理机系统
 >
 > 例题：6. 通过**通道互连**实现通信，或通过**消息传送系统**交换信息的计算机系统是：C。P240
 >
-> A.向量处理机	B.紧耦合多处理机	C.松耦合多处理机	D.标量处理机
+> A.向量处理机 B.紧耦合多处理机 C.松耦合多处理机 D.标量处理机
 >
 > 例题：7. 紧耦合多处理机系统的机间通信是通过：D。P238
 >
-> A.共享总线实现	B.共享Cache实现	C.共享虚拟存储器实现	D.共享主存实现
+> A.共享总线实现 B.共享 Cache 实现 C.共享虚拟存储器实现 D.共享主存实现
 
 ### 大题
 
-> 例题：9. ![多处理机-例题2答案2](.\imgSytemS\多处理机-例题2答案2.png)
+> 例题：9. ![多处理机-例题2答案2](imgSytemS\多处理机-例题2答案2.png)
 >
-> 例题：10. 
+> 例题：10.
 >
-> ![多处理机-例题3题目](.\imgSytemS\多处理机-例题3题目.png)
+> ![多处理机-例题3题目](imgSytemS\多处理机-例题3题目.png)
 >
-> 例题：11. ![多处理机-例题4题目](.\imgSytemS\多处理机-例题4题目.png)
+> 例题：11. ![多处理机-例题4题目](imgSytemS\多处理机-例题4题目.png)
 >
-> 例题：12. ![多处理机-例题5题目](.\imgSytemS\多处理机-例题5题目.png)
+> 例题：12. ![多处理机-例题5题目](imgSytemS\多处理机-例题5题目.png)
 >
-> 例题：13. ![多处理机-例题6题目](.\imgSytemS\多处理机-例题6题目.png)
+> 例题：13. ![多处理机-例题6题目](imgSytemS\多处理机-例题6题目.png)
 
+- **FORK 语句**
 
-
-- **FORK语句**
-
-> 例题：14. ![多处理机-例题9题目](.\imgSytemS\多处理机-例题9题目.png)
+> 例题：14. ![多处理机-例题9题目](imgSytemS\多处理机-例题9题目.png)
 >
-> 例题：15. 
+> 例题：15.
 >
-> ![多处理机-例题10题目](.\imgSytemS\多处理机-例题10题目.png)
-
-
+> ![多处理机-例题10题目](imgSytemS\多处理机-例题10题目.png)
 
 ## 第八章 数据流计算机和归约机
 
@@ -1153,9 +1118,9 @@
 >     - 1.静态数据流机
 >     - 2.动态数据流机
 >   - **数据流计算机的进展**
->     - 1．采用**提高并行度等级**的数据流机■
->     - 2．采用**同步、异步结合**的数据流机■
->     - 3．采用**控制流与数据流相结合**的数据流机■
+>     - 1．采用**提高并行度等级**的数据流机 ■
+>     - 2．采用**同步、异步结合**的数据流机 ■
+>     - 3．采用**控制流与数据流相结合**的数据流机 ■
 > - 归约机
 >   - **归约机**和数据流机一样，都是**基于数据流**的计算模型，只是其采用的**驱动方式不同**。
 >   - **数据流计算机采用数据驱动**而**归约机则是需求驱动**
@@ -1194,13 +1159,11 @@
 >
 > **第五节**
 >
->  ![image-20210401133536917](imgSytemSRe/image-20210401133536917.png)
+> ![image-20210401133536917](imgSytemSRe/image-20210401133536917.png)
 >
 > ![image-20210401133613674](imgSytemSRe/image-20210401133613674.png)
 >
 > ![image-20210401133624432](imgSytemSRe/image-20210401133624432.png)
-
-
 
 ### 第二章
 
@@ -1227,11 +1190,11 @@
 > ![image-20210401135222031](imgSytemSRe/image-20210401135222031.png)
 >
 > - 地址：`110`和`111`
->   - 根据第一条，k和k-1位全1的时候，内容填k-1个1。
+>   - 根据第一条，k 和 k-1 位全 1 的时候，内容填 k-1 个 1。
 > - 地址：`000`和`010`和`100`
->   - 根据第二条，最低位是0，就舍弃
+>   - 根据第二条，最低位是 0，就舍弃
 > - 地址：`001`和`011`和`101`
->   - 根据第三条，最低位是1，那么就进一位
+>   - 根据第三条，最低位是 1，那么就进一位
 >
 > **第二节**
 >
@@ -1256,8 +1219,6 @@
 > ![image-20210401143751036](imgSytemSRe/image-20210401143751036.png)
 >
 > ![image-20210401143757110](imgSytemSRe/image-20210401143757110.png)
-
-
 
 ### 第三章
 
@@ -1297,8 +1258,6 @@
 >
 > ![image-20210401150353478](imgSytemSRe/image-20210401150353478.png)
 
-
-
 ### 第四章
 
 > ![image-20210401150454233](imgSytemSRe/image-20210401150454233.png)
@@ -1316,8 +1275,6 @@
 > ![image-20210401151221208](imgSytemSRe/image-20210401151221208.png)
 >
 > ![image-20210401151359565](imgSytemSRe/image-20210401151359565.png)
-
-
 
 ### 第五章
 
@@ -1344,8 +1301,6 @@
 > ![image-20210401153834578](imgSytemSRe/image-20210401153834578.png)
 >
 > ![image-20210401153852764](imgSytemSRe/image-20210401153852764.png)
-
-
 
 ### 第六章
 
@@ -1383,15 +1338,13 @@
 >
 > **第四节**
 >
-> - 19年10月考过
->   - （1）m需要大于n的质数，$m=2^{2p}+1$（P位整整数），因此m至少为5
->   - （2）根据分体数m=5，那么分体号是0~4
->     - 第一列：a00他题目定下来在2，然后向右排，a010203
->     - 第二列：a00在分体号2，他的**后一位需要空着**。那么a10在4号位，以此类推
-> 
+> - 19 年 10 月考过
+>   - （1）m 需要大于 n 的质数，$m=2^{2p}+1$（P 位整整数），因此 m 至少为 5
+>   - （2）根据分体数 m=5，那么分体号是 0~4
+>     - 第一列：a00 他题目定下来在 2，然后向右排，a010203
+>     - 第二列：a00 在分体号 2，他的**后一位需要空着**。那么 a10 在 4 号位，以此类推
+>
 > ![image-20210401160423151](imgSytemSRe/image-20210401160423151.png)
-
-
 
 ### 第七章
 
@@ -1411,7 +1364,7 @@
 >
 > ![image-20210401162449873](imgSytemSRe/image-20210401162449873.png)
 >
->  **第三节**
+> **第三节**
 >
 > ![image-20210401162752447](imgSytemSRe/image-20210401162752447.png)
 >
@@ -1439,8 +1392,6 @@
 >
 > ![image-20210401163613026](imgSytemSRe/image-20210401163613026.png)
 
-
-
 ### 第八章
 
 > ![image-20210401163631044](imgSytemSRe/image-20210401163631044.png)
@@ -1452,8 +1403,6 @@
 > ![image-20210401163705701](imgSytemSRe/image-20210401163705701.png)
 >
 > ![image-20210401163713692](imgSytemSRe/image-20210401163713692.png)
-
-
 
 ### 真题讲解
 
@@ -1480,8 +1429,6 @@
 > ![image-20210401164404394](imgSytemSRe/image-20210401164404394.png)
 >
 > ![image-20210401164410233](imgSytemSRe/image-20210401164410233.png)
-
-
 
 - 201810
 
