--- a/数据结构.md
+++ b/数据结构.md
@@ -18,7 +18,7 @@
 - 数据项
   - 数据元素常常还可分为若干个数据项，数据项是数据具有意义的最小单位
 
-![概论-数据和数据源是和数据项的关](imgDS\概论-数据和数据源是和数据项的关系.png)
+![概论-数据和数据源是和数据项的关](imgDS/概论-数据和数据源是和数据项的关系.png)
 
 - 逻辑结构
   - 数据元素之间的结构关系
@@ -39,7 +39,7 @@
 - 图状结构
   - (D, {R})构成一个图
 
-![概论-数据的四类逻辑结构](imgDS\概论-数据的四类逻辑结构.png)
+![概论-数据的四类逻辑结构](imgDS/概论-数据的四类逻辑结构.png)
 
 - 逻辑结构与数据元素本身形式、内容无关
 - 逻辑结构与数据元素的相对位置无关
@@ -296,7 +296,7 @@ struct  [结构体类型名]
 } 变量名 = {成员1的值，成员2的值， …， 成员n的值}；
 ```
 
-![线性表-线性表顺序存储结构示意图](imgDS\线性表-线性表顺序存储结构示意图.png)
+![线性表-线性表顺序存储结构示意图](imgDS/线性表-线性表顺序存储结构示意图.png)
 
 ---
 
@@ -347,11 +347,11 @@ struct  [结构体类型名]
 - NULL 称为 空指针
 - Head 称为 头指针变量，存放链表中第一个结点地址
 
-![线性表-单链式存储](imgDS\线性表-单链式存储.png)
+![线性表-单链式存储](imgDS/线性表-单链式存储.png)
 
 - 单链表头节点不存数据，头结点是存放该节点的**结点地址**，增加头结点的原因是**方便运算**
 
-![线性表-单链表一般图例](imgDS\线性表-单链表一般图例.png)
+![线性表-单链表一般图例](imgDS/线性表-单链表一般图例.png)
 
 ---
 
@@ -377,7 +377,7 @@ struct  node
 - Hear 是链表的头指针，指针类型变量
 - Head 内存放的是：头结点地址
 
-![线性表-单链表Head图](imgDS\线性表-单链表Head图.png)
+![线性表-单链表Head图](imgDS/线性表-单链表Head图.png)
 
 - 初始化
 - 头结点由 malloc 函数生成一个新节点
@@ -506,7 +506,7 @@ int LocateLinklist(LinkList head , DataType x)
 - 在 Head 的后面插入
 - 新节点的指向 Head 下一个节点。Hear 下一个节点指向新节点。最后让 hear->next = p 重置下
 
-![线性表-单链表头插法](imgDS\线性表-单链表头插法.png)
+![线性表-单链表头插法](imgDS/线性表-单链表头插法.png)
 
 ```C
 LinkList CreateLinkList1()
@@ -596,7 +596,7 @@ Linklist  CreateLinkList2(  )
 
 - 有两个指针域，指向后继节点和指向前驱节点
 
-![线性表-双向链表结构体](imgDS\线性表-双向链表结构体.png)
+![线性表-双向链表结构体](imgDS/线性表-双向链表结构体.png)
 
 ```C
 struct  dlnode
@@ -619,7 +619,7 @@ struct  dlnode
 - i = 3 等价于 **\*i_pointer** = 3。懂了吧？
 - 其含义是：将数值 3 赋值给 指针变量 **i_pointer**所指向的**\*i_pointer**这个指针变量
 
-![线性表-指针变量概念](imgDS\线性表-指针变量概念.png)
+![线性表-指针变量概念](imgDS/线性表-指针变量概念.png)
 
 - 定义一个指针变量
 
@@ -641,7 +641,7 @@ struct  dlnode
     pointer_2 ＝ &j;
     ```
 
-![线性表-指针变量赋值](imgDS\线性表-指针变量赋值.png)
+![线性表-指针变量赋值](imgDS/线性表-指针变量赋值.png)
 
 - **！！注意！！**
 - 一：在用指针变量的时候，指针变量名是 <code>pointer_1</code>，不是<code>\* pointer_1 </code>，没有 星号的啊！！用的时候别加
@@ -801,7 +801,7 @@ int EmptyStack(SeqStk *stk)
 }
 ```
 
-![栈与队列与数组-栈简易运算图](imgDS\栈与队列与数组-栈简易运算图.png)
+![栈与队列与数组-栈简易运算图](imgDS/栈与队列与数组-栈简易运算图.png)
 
 - 进栈
   - 修改栈顶指针，插入元素
@@ -855,7 +855,7 @@ DataType GetTop(SeqStk *sq)
   - <code>LS->next == NULL</code>
 - 可不考虑栈满
 
-![栈与队列与数组-链式栈基本图](imgDS\栈与队列与数组-链式栈基本图.png)
+![栈与队列与数组-链式栈基本图](imgDS/栈与队列与数组-链式栈基本图.png)
 
 - 类型说明
 
@@ -896,7 +896,7 @@ int EmptyStack(LkStk *LS)
   - 生成新结点
   - 将新结点插入链栈中并使之成为新的栈顶结点
 
-  ![栈与队列与数组-链式栈插入运算图](imgDS\栈与队列与数组-链式栈插入运算图.png)
+  ![栈与队列与数组-链式栈插入运算图](imgDS/栈与队列与数组-链式栈插入运算图.png)
 
 ```C
 void Push (LkStk *LS, DataType x)
@@ -955,7 +955,7 @@ DataType  GetTop(LkStk *LS)
 - 特点
   - 先进先出
 
-![image-20210217143848319](imgDS\栈与队列与数组-队列基本图.png)
+![image-20210217143848319](imgDS/栈与队列与数组-队列基本图.png)
 
 - 基本运算
 
@@ -1023,7 +1023,7 @@ SeqQue  sq;
 - 尾指针 rear
   - 指向实际队尾元素
 
-![栈与队列与数组-循环队列基本图](imgDS\栈与队列与数组-循环队列基本图.png)
+![栈与队列与数组-循环队列基本图](imgDS/栈与队列与数组-循环队列基本图.png)
 
 ---
 
@@ -1132,7 +1132,7 @@ DataType  GetHead(CycQue CQ)
 - 尾指针 rear
   - 指向链表的最后一个结点（即队尾结点）
 
-![栈与队列与数组-链式队列基本图](imgDS\栈与队列与数组-链式队列基本图.png)
+![栈与队列与数组-链式队列基本图](imgDS/栈与队列与数组-链式队列基本图.png)
 
 - 类型说明
 
@@ -1352,7 +1352,7 @@ DataType  GetHead (LkQue LQ)
   - 满足定义：aij = aji 0≤i，j≤n-1
   - **元素总数**：n \* ( n + 1 ) /2
 
-![栈与队列与数组-对称矩形](imgDS\栈与队列与数组-对称矩形.png)
+![栈与队列与数组-对称矩形](imgDS/栈与队列与数组-对称矩形.png)
 
 - 下标转换公式
 
@@ -1363,7 +1363,7 @@ DataType  GetHead (LkQue LQ)
 - i < j ，上三角形
   - k = j \* ( j + 1 ) / 2 + i
 
-![栈与队列与数组-对称矩形下三角形](imgDS\栈与队列与数组-对称矩形下三角形.png)
+![栈与队列与数组-对称矩形下三角形](imgDS/栈与队列与数组-对称矩形下三角形.png)
 
 ---
 
@@ -1377,7 +1377,7 @@ DataType  GetHead (LkQue LQ)
 
 - 三元表
 
-![三元表](imgDS\栈与队列与数组-三元表.png)
+![三元表](imgDS/栈与队列与数组-三元表.png)
 
 - 置换前和置换后是相反的
 - 置换前：
@@ -1472,13 +1472,13 @@ DataType  GetHead (LkQue LQ)
   - **递归是树的固有特性**
 - 树的逻辑表示，有四种办法
   - 一般表示法
-    - ![树与广义表-树的一般表示法](imgDS\树与广义表-树的一般表示法.png)
+    - ![树与广义表-树的一般表示法](imgDS/树与广义表-树的一般表示法.png)
   - 文氏图法
-    - ![树与广义表-树的文式图表示法](imgDS\树与广义表-树的文式图表示法.png)
+    - ![树与广义表-树的文式图表示法](imgDS/树与广义表-树的文式图表示法.png)
   - 嵌套括号法
-    - ![树与广义表-树的嵌套括号表示法](imgDS\树与广义表-树的嵌套括号表示法.png)
+    - ![树与广义表-树的嵌套括号表示法](imgDS/树与广义表-树的嵌套括号表示法.png)
   - 凹入法表示
-    - ![树与广义表-树的凹入法表示法](imgDS\树与广义表-树的凹入法表示法.png)
+    - ![树与广义表-树的凹入法表示法](imgDS/树与广义表-树的凹入法表示法.png)
 
 ---
 
@@ -1538,7 +1538,7 @@ DataType  GetHead (LkQue LQ)
   - 子树有左、右之分且**次序不能颠倒**
 - 二叉树与树的对比
 
-![树与广义表-二叉树与树的比较](imgDS\树与广义表-二叉树与树的比较.png)
+![树与广义表-二叉树与树的比较](imgDS/树与广义表-二叉树与树的比较.png)
 
 - 性质：
 
@@ -1551,7 +1551,7 @@ DataType  GetHead (LkQue LQ)
     - 如果 i = 1，**结点 i 无双亲**，**是根节点**。如果 i > 1，则 i 的双亲 Parent(A)是 **结点[i/2]** 。
     - 如果 2 _ i <= n，\*\*则左孩子是节点 2 _ i\*\* 。否则，节点 i 无左孩子且为叶子结点（终端结点）。
     - 如果 2 _ i + 1 <= n，\*\*则右孩子是节点 2 _ i + 1\*\* 。否则，节点 i 无右孩子。
-    - ![树与广义表-二叉树节点计算](imgDS\树与广义表-二叉树节点计算.png)
+    - ![树与广义表-二叉树节点计算](imgDS/树与广义表-二叉树节点计算.png)
   - **性质五补充**：如果 i 是从 0 开始，则左孩子 2 _ i + 1。右孩子 2 _ i + 2。加一，以此类推
     - 从 1 开始的话，左孩子是 2i，右孩子是 2i+1
 
@@ -1588,7 +1588,7 @@ DataType  GetHead (LkQue LQ)
   - 缺点是，不能经常插入删除树的结点
   - 用于完全二叉树，节省内存，结点位置确定方便
 
-![树与广义表-二叉树的顺序存储结构](imgDS\树与广义表-二叉树的顺序存储结构.png)
+![树与广义表-二叉树的顺序存储结构](imgDS/树与广义表-二叉树的顺序存储结构.png)
 
 #### 二叉树遍历
 
@@ -1661,7 +1661,7 @@ void preorder ( bitreptr  r ){
     - H 输出 →E 输出 →C 输出 →A 输出
     - 结果就是：XX F G D B H E C A
 
-![树与广义表-前中后序遍历](imgDS\树与广义表-前中后序遍历.png)
+![树与广义表-前中后序遍历](imgDS/树与广义表-前中后序遍历.png)
 
 - 二叉树层次遍历
   - **从二叉树的根结点的这一层开始，逐层向下遍历，在每一层上按从左到右的顺序对结点逐个访问**
@@ -1837,26 +1837,26 @@ Node slist[size];
 - **双亲表示法**
   - 数据域和双亲域，双亲域是存放结点在数组中的编号
 
-![树与广义表-树的存储结构双亲表示法](imgDS\树与广义表-树的存储结构双亲表示法.png)
+![树与广义表-树的存储结构双亲表示法](imgDS/树与广义表-树的存储结构双亲表示法.png)
 
 - **孩子链表表示法**
   - 树中每个节点的孩子串成一单链表，**孩子链表**
   - n 个节点，n 个孩子链表
 
-![树与广义表-树的存储结构孩子链表表示法](imgDS\树与广义表-树的存储结构孩子链表表示法.png)
+![树与广义表-树的存储结构孩子链表表示法](imgDS/树与广义表-树的存储结构孩子链表表示法.png)
 
-![树与广义表-树的存储结构孩子链表表示法实例](imgDS\树与广义表-树的存储结构孩子链表表示法实例.png)
+![树与广义表-树的存储结构孩子链表表示法实例](imgDS/树与广义表-树的存储结构孩子链表表示法实例.png)
 
 - **双亲孩子表示法**
   - 同时用一维数组顺序存储树中的各结点，数组元素除了包括结点本身的信息和该结点的孩子链表的头指针之外，还增设一个域，用来**存储结点双亲结点在数组中的序号**。
 
-![树与广义表-树双亲孩子表示法](imgDS\树与广义表-树的存储结构双亲孩子表示法.png)
+![树与广义表-树双亲孩子表示法](imgDS/树与广义表-树的存储结构双亲孩子表示法.png)
 
 - **孩子兄弟链表表示，二叉链表表示**
 
-![树与广义表-树的存储结构孩子兄弟链表表示法](imgDS\树与广义表-树的存储结构孩子兄弟链表表示法.png)
+![树与广义表-树的存储结构孩子兄弟链表表示法](imgDS/树与广义表-树的存储结构孩子兄弟链表表示法.png)
 
-![树与广义表-树的存储结构孩子兄弟链表表示法实例](imgDS\树与广义表-树的存储结构孩子兄弟链表表示法实例.png)
+![树与广义表-树的存储结构孩子兄弟链表表示法实例](imgDS/树与广义表-树的存储结构孩子兄弟链表表示法实例.png)
 
 ---
 
@@ -1866,12 +1866,12 @@ Node slist[size];
 - 对任一结点，除**最左孩子外**，抹掉该结点与其余孩子的各枝
 - 以根为轴心，将连线顺时针转 450
 
-![树、森林与二叉树的转换](imgDS\树与广义表-树、森林与二叉树的转换.png)
+![树、森林与二叉树的转换](imgDS/树与广义表-树、森林与二叉树的转换.png)
 
 - **森林转二叉树**
   - 森林的一个结点，如果只有一个孩子，则作为**左孩子**。如果有多个，则作为**该左孩子的右孩子**。
 
-![树与广义表-森林转二叉树](imgDS\树与广义表-森林转二叉树.png)
+![树与广义表-森林转二叉树](imgDS/树与广义表-森林转二叉树.png)
 
 - 二叉树转森林
 
@@ -1895,13 +1895,13 @@ Node slist[size];
 - **结点数为：2n-1**
 - **带权路径长度**
 
-![树与广义表-哈夫曼树带权路径长度计算](imgDS\树与广义表-哈夫曼树带权路径长度计算.png)
+![树与广义表-哈夫曼树带权路径长度计算](imgDS/树与广义表-哈夫曼树带权路径长度计算.png)
 
 - WPL = $∑(p_k×l_k)$
   - n = 叶子数。$p_k$ = 第 k 个叶子的权。 $l_k$ = 从根到第 k 个叶子的路径长度（分支数）
   - WPL 其实就是计算每个叶子的路径长度，将他们相加，结果就是 WPL
 
-![树与广义表-哈夫曼树WPL计算](imgDS\树与广义表-哈夫曼树WPL计算.png)
+![树与广义表-哈夫曼树WPL计算](imgDS/树与广义表-哈夫曼树WPL计算.png)
 
 - 带权路径长最小的二叉树
 - 特性是：
@@ -1917,10 +1917,10 @@ Node slist[size];
   - 初始：给权值排个序，从小到大
     - F = { 2, 4, 5, 7 }
   - 第一步：取权最小的 2 个，生成一个二叉树，插入到树中
-    - ![树与广义表-哈夫曼树生成第一步](imgDS\树与广义表-哈夫曼树生成第一步.png)
+    - ![树与广义表-哈夫曼树生成第一步](imgDS/树与广义表-哈夫曼树生成第一步.png)
   - 第二步：将第一步生成的树插入，剩下重复
-    - ![树与广义表-哈夫曼树生成第二步](imgDS\树与广义表-哈夫曼树生成第二步.png)
-    - ![树与广义表-哈夫曼树生成第三步](imgDS\树与广义表-哈夫曼树生成第三步.png)
+    - ![树与广义表-哈夫曼树生成第二步](imgDS/树与广义表-哈夫曼树生成第二步.png)
+    - ![树与广义表-哈夫曼树生成第三步](imgDS/树与广义表-哈夫曼树生成第三步.png)
 
 > 例题：**如何变成哈夫曼树**，50,10,16,8,12
 >
@@ -1947,7 +1947,7 @@ Node slist[size];
   - 因此 C=1；A=4；S=2；T=3；└┘=3；
   - 然后构建一个哈夫曼树
 
-![树与广义表-哈夫曼编码的应用](imgDS\树与广义表-哈夫曼编码的应用.png)
+![树与广义表-哈夫曼编码的应用](imgDS/树与广义表-哈夫曼编码的应用.png)
 
 ---
 
@@ -2044,7 +2044,7 @@ Node slist[size];
   - 最少 n - 1 条边
 - **要保持非连通状态**边需要 + 1（！！重要！！）
 
-![ ](imgDS\图-有向图和无向图的集.png)
+![ ](imgDS/图-有向图和无向图的集.png)
 
 ---
 
@@ -2102,7 +2102,7 @@ Node slist[size];
 - **连通**
   - 无向图中，若从顶点 Vi 到 Vj 顶点有路径，则称 Vi 和 Vj 是连通的。
 
-![图-连通图和连通分量](imgDS\图-连通图和连通分量.png)
+![图-连通图和连通分量](imgDS/图-连通图和连通分量.png)
 
 ---
 
@@ -2132,7 +2132,7 @@ Node slist[size];
 - 图的邻接矩阵的定义
   - 设 G=(V,E)是 n 个顶点的图，则 G 的邻接矩阵为下列 n 阶方阵
 
-![图-图的邻接矩阵定义](imgDS\图-图的邻接矩阵定义.png)
+![图-图的邻接矩阵定义](imgDS/图-图的邻接矩阵定义.png)
 
 - **一、图的邻接矩阵表示法**
 - 无向图的邻接矩阵是**对称的**
@@ -2145,11 +2145,11 @@ Node slist[size];
   - ID(Vi) = **矩阵中第 i 列的 1 总和**
   - 相加就是有向图的度总和
 
-![图-图的邻接矩阵表示法](imgDS\图-图的邻接矩阵表示法.png)
+![图-图的邻接矩阵表示法](imgDS/图-图的邻接矩阵表示法.png)
 
 - **二、带权图（网）的邻接矩阵**
 
-![图-带权图网的邻接矩阵](imgDS\图-带权图网的邻接矩阵.png)
+![图-带权图网的邻接矩阵](imgDS/图-带权图网的邻接矩阵.png)
 
 - 邻接矩阵的类型定义
 
@@ -2199,7 +2199,7 @@ Void CreatGraph(Graph *g)
 - 定义
   - 对图 G 中每个顶点都建立一个单链表，第 i 个单链表（称边表）链接图中与顶点 Vi 相邻接的所有顶点
 
-![图-邻接表表示法的结点形式](imgDS\图-邻接表表示法的结点形式.png)
+![图-邻接表表示法的结点形式](imgDS/图-邻接表表示法的结点形式.png)
 
 - 每个链表均设一表头结点（以向量存储，称顶点表）
 - V [ i ]
@@ -2209,7 +2209,7 @@ Void CreatGraph(Graph *g)
 - V [ i ].firstarc
   - 指向 V i 的邻接链表的第一个结点
 
-![图-邻接表表示法的表头结点](imgDS\图-邻接表表示法的表头结点.png)
+![图-邻接表表示法的表头结点](imgDS/图-邻接表表示法的表头结点.png)
 
 - **邻接表总结！死记！**
 - 一：
@@ -2228,7 +2228,7 @@ Void CreatGraph(Graph *g)
 - 如何计算图的度？
   - 对于无向图，第 i 个链表的结点数为顶点 Vi 的度
 
-![图-邻接表表示法的向量图例](imgDS\图-邻接表表示法的向量图例.png)
+![图-邻接表表示法的向量图例](imgDS/图-邻接表表示法的向量图例.png)
 
 - 类型定义
 
@@ -2251,7 +2251,7 @@ Typedef  struct gp
 
 - 带权图邻接表
 
-![图-带权图邻接表](imgDS\图-带权图邻接表.png)
+![图-带权图邻接表](imgDS/图-带权图邻接表.png)
 
 - 建立有向图的邻接表的方法：
   - 将邻接表表头数组初始化;
@@ -2284,7 +2284,7 @@ Typedef  struct gp
 
 - 从图 G(V,E)中任一顶点 Vi 开始，首先访问 Vi ，然后访问 Vi 的任一未访问过的邻接点 Vj ，再以 Vj 为新的出发点继续进行深度优先搜索，直到所有顶点都被访问过。
 
-![图-深度优先搜索](imgDS\图-深度优先搜索.png)
+![图-深度优先搜索](imgDS/图-深度优先搜索.png)
 
 - 算法分析
   - 为克服顶点的重复访问，设立一标志向量 visited [n];
@@ -2311,7 +2311,7 @@ void  Dfs (  Graph g , int  v  )  {
 }
 ```
 
-![图-深度优先搜索邻接表](imgDS\图-深度优先搜索邻接表.png)
+![图-深度优先搜索邻接表](imgDS/图-深度优先搜索邻接表.png)
 
 - 深度优先遍历图，邻接矩阵
 
@@ -2349,7 +2349,7 @@ void  Dfs (  Graph g , int  v  )  {
     - 当前队头元素顶点出队
     - 重复进行，直到队空时结束
 
-![图-广度优先搜索](imgDS\图-广度优先搜索.png)
+![图-广度优先搜索](imgDS/图-广度优先搜索.png)
 
 ```C
 int  visited[N]=0 ;    /*对访问标记visited数组初始化*/
@@ -2385,7 +2385,7 @@ void bfs (Graph g , int  v )  {
 }/*bfs*/
 ```
 
-![图-广度优先搜索邻接表](imgDS\图-广度优先搜索邻接表.png)
+![图-广度优先搜索邻接表](imgDS/图-广度优先搜索邻接表.png)
 
 - 广度优先遍历，邻接矩阵
 
@@ -2475,7 +2475,7 @@ void trace( Graph G ) {
   - 最后：如果 U=V，则算法结束；否则重复 2、3 步
 - 最后得到最小生成树 MinT=<V,T>,其中 T 为最小生成树的边的集合
 
-![图-最小生成树Prim法](imgDS\图-最小生成树Prim法.png)
+![图-最小生成树Prim法](imgDS/图-最小生成树Prim法.png)
 
 - 设 G=（V，E）是个无向带权图，U 是最小生成树的顶点集合，T 是最小生成树的边集合，则 Prim 算法描述如下：
 
@@ -2507,7 +2507,7 @@ Prim ( Graph G )  {
 
 - **用 Kruskal 方法构造的最小生成树不唯一，但权和相同**
 
-![图-最小生成树Kruskal法](imgDS\图-最小生成树Kruskal法.png)
+![图-最小生成树Kruskal法](imgDS/图-最小生成树Kruskal法.png)
 
 - 原则
   - 按权值递增次序构造 Tmin ；即每次选权最小且不构成回路的边,直至 n-1 条。
@@ -2541,11 +2541,11 @@ while ( E(T)中边数 < n-1 ）
 - 所有活动完成整个工程完成
 - 活动间有一定的先后关系
 
-![图-拓扑排序基本](imgDS\图-拓扑排序基本.png)
+![图-拓扑排序基本](imgDS/图-拓扑排序基本.png)
 
 - AOV 网络：
 
-![图-AOV网络](imgDS\图-AOV网络.png)
+![图-AOV网络](imgDS/图-AOV网络.png)
 
 - 定义一：
   - 若有向图 G 中，顶点表示活动或任务，
@@ -2578,7 +2578,7 @@ while ( E(T)中边数 < n-1 ）
   - n 个顶点全部输出，则此图中无回路，且**得到拓扑序列**
   - ＜ n 个顶点被输出，则说明图中有回路，**说明工程不通过**
 
-![图-拓扑排序计算过程](imgDS\图-拓扑排序计算过程.png)
+![图-拓扑排序计算过程](imgDS/图-拓扑排序计算过程.png)
 
 ---
 
@@ -2612,7 +2612,7 @@ while ( E(T)中边数 < n-1 ）
     - 3：顶点集有【5，3，2】，以此类推
       - 2→0 需要 1，**最短因此选 0**
     - **以此类推**
-      - ![图-最小生成树Prim法](imgDS\图-最小生成树Prim法.png)
+      - ![图-最小生成树Prim法](imgDS/图-最小生成树Prim法.png)
   - Kruskal
     - 原理是**根据最短路径去选择**
     - **返回结果是图**
@@ -2622,7 +2622,7 @@ while ( E(T)中边数 < n-1 ）
       - 下一个是 1 和 2（需要 16）
       - 下一个是 4 和 5（需要 18）
       - **从小到大**
-      - ![图-最小生成树Kruskal法](imgDS\图-最小生成树Kruskal法.png)
+      - ![图-最小生成树Kruskal法](imgDS/图-最小生成树Kruskal法.png)
   - Dijkstra
     - **从一个点出发，计算该点去其他节点的，最短路径**
 - **拓扑排序**
@@ -3097,9 +3097,7 @@ void MergeSort(SeqList R, SeqList MR, int n)
 ---
 
 - 例题
--
-
----
+- ***
 
 ### 总结
 
@@ -3149,7 +3147,7 @@ void MergeSort(SeqList R, SeqList MR, int n)
   - n 很大，但关键字位数较小时采用链式基数排序比较好
   - 关键字比较次数与记录的初始排序顺序无关时采用选择排序
 
-![排序-总结](imgDS\排序-总结.png)
+![排序-总结](imgDS/排序-总结.png)
 
 ---
 
@@ -3230,7 +3228,7 @@ int  binsearch( sqtable R,   keytype  K ) {
  }
 ```
 
-![查找-二分查找过程](imgDS\查找-二分查找过程.png)
+![查找-二分查找过程](imgDS/查找-二分查找过程.png)
 
 ---
 
@@ -3244,7 +3242,7 @@ int  binsearch( sqtable R,   keytype  K ) {
   - 将查找关键字 k 与索引表中每一元素（即各块中最大关键字）进行比较，以确定所查元素所在块号
 - 第三步：在相应块中按顺序查找关键字为 k 的记录
 
-![查找-分块查找过程](imgDS\查找-分块查找过程.png)
+![查找-分块查找过程](imgDS/查找-分块查找过程.png)
 
 ---
 
@@ -3349,9 +3347,9 @@ int  binsearch( sqtable R,   keytype  K ) {
 - 缺点
   - **常发生冲突，影响查找效率**
 
-![查找-线性探测法过程](imgDS\查找-线性探测法过程.png)
+![查找-线性探测法过程](imgDS/查找-线性探测法过程.png)
 
-![查找-线性探测法过程例子](imgDS\查找-线性探测法过程例子.png)
+![查找-线性探测法过程例子](imgDS/查找-线性探测法过程例子.png)
 
 2. 拉链法
 
@@ -3361,9 +3359,9 @@ int  binsearch( sqtable R,   keytype  K ) {
 
 - 例：已知一组关键字为（13，41，15，44，06，68，25，12，38，64，19，49），按散列函数 H(key)=key mod 13 和链地址法处理冲突构造散列表。
 
-![查找-链地址法](imgDS\查找-链地址法.png)
+![查找-链地址法](imgDS/查找-链地址法.png)
 
-**![查找-拉链法2](imgDS\查找-拉链法2.png)**
+**![查找-拉链法2](imgDS/查找-拉链法2.png)**
 
 ---
 
