--- a/数据结构复习.md
+++ b/数据结构复习.md
@@ -63,9 +63,9 @@
   - 有向图：n，最多：n(n-1)
   - **要保持非连通状态**边需要 + 1（！！重要！！）
   - 邻接矩阵：0 和 1 组成
-    - ![图-图的邻接矩阵表示法](imgDS\图-图的邻接矩阵表示法.png)
+    - ![图-图的邻接矩阵表示法](imgDS/图-图的邻接矩阵表示法.png)
   - 邻接表：自己指向谁，逆邻接表：谁指向自己
-    - ![图-邻接表表示法的向量图例](imgDS\图-邻接表表示法的向量图例.png)
+    - ![图-邻接表表示法的向量图例](imgDS/图-邻接表表示法的向量图例.png)
 - 最小生成树
   - Prim，**根据顶点集找到最短的路径，根据顶点的连接关系找**
   - Kruskal，**根据最短路径去选择**
@@ -80,8 +80,7 @@
   - B.**若左子树非空，则左子树上所有结点的值均小于根节点的值**
   - **平衡二叉树**
     - 小的放在左边，大的放在右边
-  - B 树
-    -
+  - ## B 树
 - 散列函数
   - 直接地址法：H(key) = key + C
   - 数字分析法
@@ -95,4 +94,4 @@
   - 开放定址法——二次探查法
     - $h_i = （H（key） \pm \ i^2）$% m
   - 拉链法
-    - ![查找-拉链法2](imgDS\查找-拉链法2.png)
+    - ![查找-拉链法2](imgDS/查找-拉链法2.png)
