--- a/离散数学.md
+++ b/离散数学.md
@@ -18,8 +18,7 @@ $\varnothing$
 
 > 202304 复习规划
 >
-> - 1
->   -
+> - ## 1
 
 ## 第一章 命题
 
@@ -303,7 +302,7 @@ A$\leftrightarrow$B 是描述他们两个的运算
 - 1 先消除箭头
 - 2 消除括号外部的**否定**
 
-![合取范式例题1](img\合取范式例题1.png)
+![合取范式例题1](img/合取范式例题1.png)
 
 - n 个命题变元的简单合取式，称为布尔合取或极小项，简称：**小项**
 - 小项的编码：（$\neg$P$\wedge$Q$\wedge$R）=$m_{011}$=$m_3$
@@ -432,13 +431,13 @@ A$\leftrightarrow$B 是描述他们两个的运算
 
 例：用归谬法证明：$(P \vee Q) \wedge (P \rightarrow R) \wedge (Q \rightarrow S) \Rightarrow S \vee R$
 
-![image-20221218161925719](img\间接推理归谬法例题答案1.png)
+![image-20221218161925719](img/间接推理归谬法例题答案1.png)
 
 > CP 规则
 
 - 证明：$S \Rightarrow (A \rightarrow B)$
 
-![image-20221218163050346](D:\mdFile\理论学习\img\间接推理CP规则定义.png)
+![image-20221218163050346](D:\mdFile\理论学习\img/间接推理CP规则定义.png)
 
 P50 看书
 
@@ -910,7 +909,7 @@ P50 看书
 
 - 关系图：A 为节点集，R 为边集，有关系就划有向边。
 
-![image-20230111150931342](img\关系图.png)
+![image-20230111150931342](img/关系图.png)
 
 例：$X=\{x1,x2,x3\},Y=\{y1,y2,y3,y4,y5\}$，以及下面的关系矩阵，给出关系 R 中的二元组
 
@@ -1062,8 +1061,7 @@ $R1\circ R2 =\{<1,3>,<2,2>,<2,3>,<2,3>\}$
   - C13=R1 第一行与 R2`第三列`做运算
   - C21=R1 第二行与 R2`第一列`做运算
   - C22=R1 第二行与 R2`第二列`做运算
-  - C23=R1 第二行与 R2`第三列`做运算
-    -
+  - ## C23=R1 第二行与 R2`第三列`做运算
 
 $$
 M_{R1}·M_{R2}=
@@ -1225,7 +1223,7 @@ $R=\{<1,1>,<2,2>,<2,3>,<3,2>,<3,3>,<4,4>\}$
 
 例 P99：
 
-![image-20230113163511393](img\image-20230113163511393.png)
+![image-20230113163511393](img/image-20230113163511393.png)
 
 - a,b,c
   - 上界：e f j h
@@ -1478,7 +1476,7 @@ P100，自己看书。
   - $=((c*b)*a)*b=a*b$
     - 将扩充 1 代入
 
-![image-20230113185451431](img\image-20230113185451431.png)
+![image-20230113185451431](img/image-20230113185451431.png)
 
 例：$x\circ y=x+y+x*y$
 
@@ -1766,9 +1764,9 @@ $1\oplus 3=4、2\oplus 3=0、3\oplus4=2$
 
 例：求 M、$M^2$、$M^3$、$M^4$。建议刷 202104 第三十题的矩阵，比较简单
 
-![image-20230409162206265](img\image-20230409162206265.png)
+![image-20230409162206265](img/image-20230409162206265.png)
 
-![image-20230409161425608](img\image-20230409161425608.png)
+![image-20230409161425608](img/image-20230409161425608.png)
 
 1、M=
 
@@ -1851,7 +1849,7 @@ $$
   - 有向图 D 是欧拉图：每个顶点的入度等于出度
   - 有向图 D 是欧拉通路：有两个奇度顶点，其中一个入度比出度大 1，另一个出度比入度大 1，其余顶点的入度等于出度。
 
-![image-20221219152832476](D:\mdFile\理论学习\img\欧拉图.png)
+![image-20221219152832476](D:\mdFile\理论学习\img/欧拉图.png)
 
 例：
 
@@ -1859,7 +1857,7 @@ $$
 
 图 2：无向图结点度数是 44422....，都是偶数，所以是欧拉图。图 3 也是一样的。
 
-![image-20221219153905173](D:\mdFile\理论学习\img\欧拉图2.png)
+![image-20221219153905173](D:\mdFile\理论学习\img/欧拉图2.png)
 
 > 哈密顿图
 
@@ -1896,7 +1894,7 @@ $$
 
 - **用 Kruskal 方法构造的最小生成树不唯一，但权和相同**
 
-![图-最小生成树Kruskal法](考过\imgDS\图-最小生成树Kruskal法.png)
+![图-最小生成树Kruskal法](考过\imgDS/图-最小生成树Kruskal法.png)
 
 > 二叉树
 
@@ -1921,7 +1919,7 @@ $$
     - H 输出 →E 输出 →C 输出 →A 输出
     - 结果就是：XX F G D B H E C A
 
-![树与广义表-前中后序遍历](考过\imgDS\树与广义表-前中后序遍历.png)
+![树与广义表-前中后序遍历](考过\imgDS/树与广义表-前中后序遍历.png)
 
 ### 总结
 
@@ -1952,7 +1950,7 @@ $$
 - Kruskal 克鲁斯卡尔
   - 从路径最小的开始
 
-![图-最小生成树Kruskal法](考过\imgDS\图-最小生成树Kruskal法.png)
+![图-最小生成树Kruskal法](考过\imgDS/图-最小生成树Kruskal法.png)
 
 - 完全二叉树有 (n+1)/2 个结点
 - 用二叉树表示算术表达式$a*(b+c)-d$
@@ -1966,7 +1964,7 @@ $$
   - 后序
     - XX F G D B H E C A
 
-![树与广义表-前中后序遍历](考过\imgDS\树与广义表-前中后序遍历.png)
+![树与广义表-前中后序遍历](考过\imgDS/树与广义表-前中后序遍历.png)
 
 - 习题书 P98
   - 选择题、填空题、计算题重点
@@ -2104,12 +2102,12 @@ $$
   - 2 个图，加上对方的部分，就可以成为完全图（同时边要尽可能的少）
     - BD 无法构成完全图，C 已经是完全图了
 
-![image-20230409180732503](img\image-20230409180732503.png)
+![image-20230409180732503](img/image-20230409180732503.png)
 
 - B。>202010
   - 边要尽可能的少，因此 B
 
-![image-20230410145245450](img\image-20230410145245450.png)
+![image-20230410145245450](img/image-20230410145245450.png)
 
 ### 重点
 
@@ -2145,18 +2143,18 @@ $$
   - 25>$2^n-1$
   - 28>TTT，FFF。
   - 30
-    - ![image-20230409161425608](img\image-20230409161425608.png)
+    - ![image-20230409161425608](img/image-20230409161425608.png)
   - 31
-    - ![image-20230409172043163](img\image-20230409172043163.png)
-    - ![image-20230409172002500](img\image-20230409172002500.png)
+    - ![image-20230409172043163](img/image-20230409172043163.png)
+    - ![image-20230409172002500](img/image-20230409172002500.png)
   - 32
-    - ![image-20230409171946327](img\image-20230409171946327.png)
+    - ![image-20230409171946327](img/image-20230409171946327.png)
   - 33
-    - ![image-20230409171927461](img\image-20230409171927461.png)
+    - ![image-20230409171927461](img/image-20230409171927461.png)
   - 34
-    - ![image-20230409171908158](img\image-20230409171908158.png)
+    - ![image-20230409171908158](img/image-20230409171908158.png)
   - 35
-    - ![image-20230409171822542](img\image-20230409171822542.png)
+    - ![image-20230409171822542](img/image-20230409171822542.png)
 
 - 202010
   - CBDAD、CBCDB、BAACD
