--- a/计算机系统结构.md
+++ b/计算机系统结构.md
@@ -22,7 +22,7 @@
     - **以软件为主**实现的机器称为：**虚拟机器**
   - **“机器”**被定义为能存储和执行相应语言**程序**的**算法**和**数据结构**的几何体。只有二进制机器指令，能够直接被硬件识别和执行。
 
-![概论-计算机系统的多级层次结构.png](imgSytemS\概论-计算机系统的多级层次结构.png)
+![概论-计算机系统的多级层次结构.png](imgSytemS/概论-计算机系统的多级层次结构.png)
 
 - **计算机系统结构的定义和内涵**
   - 从计算机系统的**层次结构**的角度看，系统结构是对计算机系统中**各级界面**的定义集齐上下的**功能分配**
@@ -180,7 +180,7 @@
 
 - 计算机系统的软、硬件功能分配比例
 
-![概论-计算机系统的软、硬件功能分配比例](imgSytemS\概论-计算机系统的软、硬件功能分配比例.png)
+![概论-计算机系统的软、硬件功能分配比例](imgSytemS/概论-计算机系统的软、硬件功能分配比例.png)
 
 > 例题：8. 简述软、硬件功能分配比例对计算机系统性能的影响。
 >
@@ -327,7 +327,7 @@
   - **一：时间重叠**
     - **在并行性概念中引入时间因素，即多个处理过程在时间上相互错开，轮流重叠地使用同一套硬件设备的各个部分，以加快硬件周转而赢得速度。**
   - **时间重叠流水（并发）**
-    - ![概论-时间重叠流水](imgSytemS\概论-时间重叠流水.png)
+    - ![概论-时间重叠流水](imgSytemS/概论-时间重叠流水.png)
   - **二：资源重复**
     - **在并行性概念中引入空间因素，通过重复设置硬件资源，可以大幅度提高并行处理能力。**
   - **三：资源共享**
@@ -399,11 +399,11 @@
 
 - a：SISD，b：SIMD
 
-![概论-计算机系统的结构分类ab](imgSytemS\概论-计算机系统的结构分类ab.png)
+![概论-计算机系统的结构分类ab](imgSytemS/概论-计算机系统的结构分类ab.png)
 
 - c：MISD，d：MIMD
 
-![概论-计算机系统的结构分类cd](imgSytemS\概论-计算机系统的结构分类cd.png)
+![概论-计算机系统的结构分类cd](imgSytemS/概论-计算机系统的结构分类cd.png)
 
 > 例题：24. 按弗林(Flynn)提出的计算机系统分类方法，并行处理机属于**（）**系统。(2012 年填空题)
 >
@@ -476,7 +476,7 @@
   - 为了缩短高级语言与机器语言的语义差距，可以让机器中每个数据都**带类型标志位**
     - 无符号数：64+32+8=104
     - BCD 码（带类型标志位）：0110=6；1000=8；所以就是 68
-    - ![数据表示、寻址方式和指令系统-带有类型标志位](imgSytemS\数据表示、寻址方式和指令系统-带有类型标志位.png)
+    - ![数据表示、寻址方式和指令系统-带有类型标志位](imgSytemS/数据表示、寻址方式和指令系统-带有类型标志位.png)
   - **标志符数据表示的优点：**
     - （1）**简化了指令系统**和程序设计。
     - （2）**简化了编译程序**。
@@ -497,7 +497,7 @@
   - **基地址**：存放第一个向量数据的地址
   - **向量长度**：向量数据个数
   - **位移量**：与基地址的距离
-* ![数据表示、寻址方式和指令系统-向量数据表示](imgSytemS\数据表示、寻址方式和指令系统-向量数据表示.png)
+* ![数据表示、寻址方式和指令系统-向量数据表示](imgSytemS/数据表示、寻址方式和指令系统-向量数据表示.png)
 
 - **堆栈数据表示**
   - 堆栈数据结构在编译和子程序调用中很有用，为了高效实现，不少机器都设有堆栈数据表示。**有堆栈数据表示**的机器称为**堆栈计算机**
@@ -577,7 +577,7 @@
 
 - **采用尾基为$r_m$的浮点数表示的特性**
 
-![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](imgSytemS\数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
+![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](imgSytemS/数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
 
 - 可表示数的范围
   - 随 $r_m$ 的增大，可表示数的最小值 $r_m^{-1}$ 将减少
@@ -976,20 +976,20 @@
 - 图解：
   - **中断级屏蔽位就是响应次序**
   - 第一行：**中断处理次序**为第**一**级的时候（打横看），与**响应次序**第一级比，是同级的，因此是**0**。屏蔽位第 2，3，4 级比处理级低，必然是 0
-    - ![存储、中断、总线与IO系统-中断图3-2-1](imgSytemS\存储、中断、总线与IO系统-中断图3-2-1.png)
+    - ![存储、中断、总线与IO系统-中断图3-2-1](imgSytemS/存储、中断、总线与IO系统-中断图3-2-1.png)
   - 第二行：**中断处理次序**为第**二**级的时候（打横看），与**响应次序**第一级比，**低一级**，因此是**1**。剩下同理
-    - ![存储、中断、总线与IO系统-中断图3-2-2](imgSytemS\存储、中断、总线与IO系统-中断图3-2-2.png)
+    - ![存储、中断、总线与IO系统-中断图3-2-2](imgSytemS/存储、中断、总线与IO系统-中断图3-2-2.png)
 
-![存储、中断、总线与IO系统-中断图3-2](imgSytemS\存储、中断、总线与IO系统-中断图3-2.png)
+![存储、中断、总线与IO系统-中断图3-2](imgSytemS/存储、中断、总线与IO系统-中断图3-2.png)
 
 - 下一步，根据表画程序的执行过程
   - 第一步：开始进来，收到 2，3 级，2 级比 3 级高，先执行二级，`回到断点`
   - 第二步：2 级执行到一半，**收到 4 级中断请求**，但是 4 级级别没有 2 高。最后在执行 4
-    - ![image-20210310214419716](imgSytemS\存储、中断、总线与IO系统-中断图3-2程序执行过程1.png)
+    - ![image-20210310214419716](imgSytemS/存储、中断、总线与IO系统-中断图3-2程序执行过程1.png)
   - 第三步：收到 2，去到执行 2 级，**但是执行到一半收到 1 级的中断请求**，1 级别比 2 高，然后就去执行 1 级，1 级执行完继续执行 2 级，最后结束
-    - ![存储、中断、总线与IO系统-中断图3-2程序执行过程2](imgSytemS\存储、中断、总线与IO系统-中断图3-2程序执行过程2.png)
+    - ![存储、中断、总线与IO系统-中断图3-2程序执行过程2](imgSytemS/存储、中断、总线与IO系统-中断图3-2程序执行过程2.png)
   - `--------------------------`
-  - ![存储、中断、总线与IO系统-中断图3-2程序执行过程](imgSytemS\存储、中断、总线与IO系统-中断图3-2程序执行过程.png)
+  - ![存储、中断、总线与IO系统-中断图3-2程序执行过程](imgSytemS/存储、中断、总线与IO系统-中断图3-2程序执行过程.png)
 - **中断处理次序改为 1→4→3→2**
   - 第一行：**中断处理次序**第一级，根据中断处理次序（1→4→3→2）的第一位是第 1 级，因此先处理第一级，但是由于是同级的，因此填**0**。剩下就不用管
   - 第二行：**中断处理次序**第二级
@@ -1005,23 +1005,23 @@
     - 根据中断处理次序（1→4→3→2）的第一个是**第 1 级**，因此**响应次序的第一级填 1**
     - 根据中断处理次序（1→4→3→2）的第三个是**第 4 级**，由于是**同级**的，因此中断，剩下填**0**
 
-![存储、中断、总线与IO系统-中断图3-3](imgSytemS\存储、中断、总线与IO系统-中断图3-3.png)
+![存储、中断、总线与IO系统-中断图3-3](imgSytemS/存储、中断、总线与IO系统-中断图3-3.png)
 
 - **执行过程**
   - 第一步：收到 2，3 中断请求，因为 2 级别高，所以然后先去 2 那**响应一下**。然后看下屏蔽位（1→4→3→2），2 在后面，3 在前面。因此就去处理 3
-    - ![存储、中断、总线与IO系统-中断图3-3程序执行过程1](imgSytemS\存储、中断、总线与IO系统-中断图3-3程序执行过程1.png)
+    - ![存储、中断、总线与IO系统-中断图3-3程序执行过程1](imgSytemS/存储、中断、总线与IO系统-中断图3-3程序执行过程1.png)
   - 第二步：3 在处理的时候，来了个**中断请求 4**，4 的级别比 3 高，又跑去执行 4 了
-    - ![存储、中断、总线与IO系统-中断图3-3程序执行过程2](imgSytemS\存储、中断、总线与IO系统-中断图3-3程序执行过程2.png)
+    - ![存储、中断、总线与IO系统-中断图3-3程序执行过程2](imgSytemS/存储、中断、总线与IO系统-中断图3-3程序执行过程2.png)
   - 第三步：回来继续执行 3，然后执行 2，然后回到**断点**
-    - ![存储、中断、总线与IO系统-中断图3-3程序执行过程3](imgSytemS\存储、中断、总线与IO系统-中断图3-3程序执行过程3.png)
+    - ![存储、中断、总线与IO系统-中断图3-3程序执行过程3](imgSytemS/存储、中断、总线与IO系统-中断图3-3程序执行过程3.png)
   - 第四步：收到 2，去到执行 2 级，**但是执行到一半收到 1 级的中断请求**，1 级别比 2 高，然后就去执行 1 级，1 级执行完继续执行 2 级，最后结束
-    - ![存储、中断、总线与IO系统-中断图3-2程序执行过程2](imgSytemS\存储、中断、总线与IO系统-中断图3-2程序执行过程2.png)
+    - ![存储、中断、总线与IO系统-中断图3-2程序执行过程2](imgSytemS/存储、中断、总线与IO系统-中断图3-2程序执行过程2.png)
 
-![存储、中断、总线与IO系统-中断图3-3程序执行过程](imgSytemS\存储、中断、总线与IO系统-中断图3-3程序执行过程.png)
+![存储、中断、总线与IO系统-中断图3-3程序执行过程](imgSytemS/存储、中断、总线与IO系统-中断图3-3程序执行过程.png)
 
 #### 中断系统例题
 
-> 例题：17. ![存储、中断、总线与IO系统-中断例题](imgSytemS\存储、中断、总线与IO系统-中断例题.png)
+> 例题：17. ![存储、中断、总线与IO系统-中断例题](imgSytemS/存储、中断、总线与IO系统-中断例题.png)
 >
 > （1）当中断响应优先次序为 1→2 一 3 一 4 时，其**中断处理次序是什么**?
 >
@@ -1043,21 +1043,21 @@
 >
 > 四：（目前待处理的是 2→4）回到 2 那里响应下，发现 3 的级别比 2 高，那么去处理 3，处理完 3 了，就处理 2。
 >
-> ![存储、中断、总线与IO系统-中断例题流程图答案](imgSytemS\存储、中断、总线与IO系统-中断例题流程图答案.png)
+> ![存储、中断、总线与IO系统-中断例题流程图答案](imgSytemS/存储、中断、总线与IO系统-中断例题流程图答案.png)
 
 > 例题：18. 若机器共有 5 级中断，中断响应优先次序为 1→2→3→4→5，要求其实际的中断处理次序为 1→4→5→2→3。
 >
 > （1）设计各级中断处理程序的中断级屏蔽位(令“1”对应于开放，“0”对应于屏蔽，反之也行)
 >
-> 正：![image-20210310223831438](imgSytemS\存储、中断、总线与IO系统-中断例题答案1.png)
+> 正：![image-20210310223831438](imgSytemS/存储、中断、总线与IO系统-中断例题答案1.png)
 >
-> 反：![存储、中断、总线与IO系统-中断例题答案1.1](imgSytemS\存储、中断、总线与IO系统-中断例题答案1.1.png)
+> 反：![存储、中断、总线与IO系统-中断例题答案1.1](imgSytemS/存储、中断、总线与IO系统-中断例题答案1.1.png)
 >
 > （2）若在运行用户程序时，同时出现第 4，2 级中断请求，而在处理第 2 级中断未完成时，又同时出现第 1，3，5 级中断请求，请画出此程序运行过程示意图。
 >
 > - **重点：在处理完第 2 级的时候，应该返回用户程序，因为在第一次的中断请求的 4 和 2 已经完成了。**
 >
-> ![存储、中断、总线与IO系统-中断例题答案2](imgSytemS\存储、中断、总线与IO系统-中断例题答案2.png)
+> ![存储、中断、总线与IO系统-中断例题答案2](imgSytemS/存储、中断、总线与IO系统-中断例题答案2.png)
 
 > 例题：19. 机器有 5 级中断，中断响应次序为 1→2→3→4>5，现要求实际中断处理次序为 2→3→1→5→4。
 >
@@ -1067,7 +1067,7 @@
 >
 > - **重点：在 1 级未完成的时候，插入了（2,3,4,5），当完成了第 2 级的时候，回到 1，然后在去完成第 3 级**
 >
-> ![存储、中断、总线与IO系统-中断例题19答案](imgSytemS\存储、中断、总线与IO系统-中断例题19答案.png)
+> ![存储、中断、总线与IO系统-中断例题19答案](imgSytemS/存储、中断、总线与IO系统-中断例题19答案.png)
 
 > 例题：20. 机器有 5 级中断，中断响应次序为 1>2→3→4>5，现要求实际中断处理次序为 1→4→5→2→3。
 >
@@ -1075,9 +1075,9 @@
 >
 > （2）若运行用户程序时，同时发生 4、2 级中断请求，而在第 2 级中断服务未完成时，又发生 1，3，5 级中断，请画出处理机执行程序全过程的示意图。
 >
-> ![存储、中断、总线与IO系统-中断例题20答案1](imgSytemS\存储、中断、总线与IO系统-中断例题20答案1.png)
+> ![存储、中断、总线与IO系统-中断例题20答案1](imgSytemS/存储、中断、总线与IO系统-中断例题20答案1.png)
 >
-> ![存储、中断、总线与IO系统-中断例题20答案2](imgSytemS\存储、中断、总线与IO系统-中断例题20答案2.png)
+> ![存储、中断、总线与IO系统-中断例题20答案2](imgSytemS/存储、中断、总线与IO系统-中断例题20答案2.png)
 
 ---
 
@@ -1111,14 +1111,14 @@
 - **集中式串行链接**
   - 优点：**只用 3 根线**就能按一定的优先次序来**实现总线控制**，并很容易扩充。
   - 缺点：对查询链的故障很敏感，如果第 i 个部件中的查询链电路有故障，那么第 i 个以后的部件都不能工作。
-  - ![存储、中断、总线与IO系统-集中式串行链接](imgSytemS\存储、中断、总线与IO系统-集中式串行链接.png)
+  - ![存储、中断、总线与IO系统-集中式串行链接](imgSytemS/存储、中断、总线与IO系统-集中式串行链接.png)
 - **集中式定时查询**
   - 总线上的每个部件通过**“总线请求”线**发出请求，若总线处于**空闲**，**“总线忙”**信号**未建立**，则总线控制器收到请求后，让**计数器开始计数**，**定时查询**各部件以确定是谁发的请求。当查询线上的计数值与发出请求的部件号一致时，该部件就**建立“总线忙”**，使得计数器**停止计数**，也即控制器**中止查询**。定时查询方式的**控制线数较多**，对于 n 个部件，共需 $2+[log_2n]$ 根线。
-  - ![存储、中断、总线与IO系统-集中式定时查询](imgSytemS\存储、中断、总线与IO系统-集中式定时查询.png)
+  - ![存储、中断、总线与IO系统-集中式定时查询](imgSytemS/存储、中断、总线与IO系统-集中式定时查询.png)
 - **集中式独立请求方式**
   - 共享总线的**每个部件**各自都**有一对“总线请求”**和**“总线准许”线**。当部件请求使用总线时，**送“总线请求”信号到总线控制器**。
   - 优点：**响应时间快**，然而这是以**增加控制线数和硬件电路**为代价的。对于**n 个部件**，控制线的数目将达**2n ＋ 1**根。此方式对优先次序的控制也是相当灵活的，它可以预先固定，也可以通过程序来改变优先次序。
-  - ![存储、中断、总线与IO系统-集中式独立请求方式](imgSytemS\存储、中断、总线与IO系统-集中式独立请求方式.png)
+  - ![存储、中断、总线与IO系统-集中式独立请求方式](imgSytemS/存储、中断、总线与IO系统-集中式独立请求方式.png)
 
 > 例题： 22. 简要举出集中式串行链接，定时查询和独立请求 3 种总线控制方式的优缺点。
 >
@@ -1271,12 +1271,12 @@
 - **选择方式**是**该通道所接各设备的字节传送速率中之最大值**
   - $f_{select·j} = \max^{Pj}_{i=1} f_{i*j}$
 - 为了保证第 j 号通道上所挂设备在满负荷的最坏情况下者不丢失信息，必须使设备要求**通道的实际最大流量不超过通道的极限流量**，因此，上述三类通道应分别满足
-  - ![存储、中断、总线与IO系统-三种通道最大](imgSytemS\存储、中断、总线与IO系统-三种通道最大.png)
+  - ![存储、中断、总线与IO系统-三种通道最大](imgSytemS/存储、中断、总线与IO系统-三种通道最大.png)
 
 > 例题：39. 如果通道在数据传送期中，选择设备需**9.8 us**，传送一个字节数据需**0.2us**。某低速设备每隔**500us**发出一个字节数据请求，那么至多可接几台这种低速设备?
 >
 > 对于如下**A-F6 种高速设备**，一次通信传送的字节数**不少于 1024 个字节**，则哪些设备可挂，哪些不能挂?其中，A~F 设备每发一个字节数据传送请求的时间间隔分别如表所示。
-> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间](imgSytemS\存储、中断、总线与IO系统-例题A-F设备法请求间隔时间.png)
+> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间](imgSytemS/存储、中断、总线与IO系统-例题A-F设备法请求间隔时间.png)
 >
 > 答：**设备的速率 $f_i$ 实际上就是设备发出字节传送请求的间隔时间的倒数**
 >
@@ -1294,17 +1294,17 @@
 
 > 例题：40. 如果通道在数据传送期中，**选择设备的时间 $T_s$ 为 10us**，**传送一个字节数据需要的时间 $T_D$ 为 0.5us**。(1)某低速设备每隔 500us 发出一个字节数据请求，至多可接几台这种设备?(2)对于题 28 表所示的低速设备，一次通信传送的字节数不少于 1024 个字节，则哪些设备可挂?哪些设备不可挂?201604
 >
-> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2](imgSytemS\存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2.png)
+> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2](imgSytemS/存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2.png)
 >
-> ![存储、中断、总线与IO系统-例题答案1](imgSytemS\存储、中断、总线与IO系统-例题答案1.png)
+> ![存储、中断、总线与IO系统-例题答案1](imgSytemS/存储、中断、总线与IO系统-例题答案1.png)
 >
-> ![存储、中断、总线与IO系统-例题答案1.5](imgSytemS\存储、中断、总线与IO系统-例题答案1.5.png)
+> ![存储、中断、总线与IO系统-例题答案1.5](imgSytemS/存储、中断、总线与IO系统-例题答案1.5.png)
 
 > 例题：41. 设通道在数据传送期内，选择设备需 4.9us，传送一个字节数据需 0.1us。⑴ 某低速设备每隔 250u s 发出一个字节数据传送请求，问至多可接几台这种低速设备?。(2)对于如下 5 种高速设备 A~E，要求字节传送请求的时间间隔如题 28 表所示。若一次通信传送的字节数不少于 1024 字节，问哪些设备可以挂在此通道上﹖哪些不能?
 >
-> ![存储、中断、总线与IO系统-例题2](imgSytemS\存储、中断、总线与IO系统-例题2.png)
+> ![存储、中断、总线与IO系统-例题2](imgSytemS/存储、中断、总线与IO系统-例题2.png)
 >
-> ![存储、中断、总线与IO系统-例题答案2](imgSytemS\存储、中断、总线与IO系统-例题答案2.png)
+> ![存储、中断、总线与IO系统-例题答案2](imgSytemS/存储、中断、总线与IO系统-例题答案2.png)
 
 > 例题：42. 有 10 台外设，各设备要求传送信息的工作速率如表所示，现设计的通道在数据传送期，每选择一次设备需 2us，每送一个字节数据需要 0.5us，若用作**字节多路通道**，则：201910
 >
@@ -1316,9 +1316,9 @@
 >
 > （4）请问应选哪些设备挂在此通道上?为什么?
 >
-> ![存储、中断、总线与IO系统-例题3](imgSytemS\存储、中断、总线与IO系统-例题3.png)
+> ![存储、中断、总线与IO系统-例题3](imgSytemS/存储、中断、总线与IO系统-例题3.png)
 >
-> ![存储、中断、总线与IO系统-例题答案3](imgSytemS\存储、中断、总线与IO系统-例题答案3.png)
+> ![存储、中断、总线与IO系统-例题答案3](imgSytemS/存储、中断、总线与IO系统-例题答案3.png)
 
 > 例题：43. **简述数组多路通道的数据传输方式**。P119，2016.4
 > 答：数组多路通道在每**选择好一台设备后**，要连续传送完固定**K 个**字节的成组数据后，才能释放总线，通道再去选择下一台设备，再传送该设备的 K 个字节。如此，**以成组方式轮流交叉地为多台高速设备服务**。设备要想传送**N 个字节**，就需要先给**【N/K】次申请**使用通道总线才行。
@@ -1350,7 +1350,7 @@
   - 存储体系是让构成存储系统的几种不同的存储器之间，配上辅助软、硬件或辅助硬件，使之从应用程序员角度来看，它们在逻辑上是一个整体。
 - **虚拟存储器**是因为**主存容量**满足不了要求而提出来的。在**主存和辅存**之间，**增设辅助的软、硬件设备**，让它们构成一个整体，所以也称之为**主存-辅存**存储层次，如图 4- 1 所示。
 
-![存储体系-主存辅存存储层次](imgSytemS\存储体系-主存辅存存储层次.png)
+![存储体系-主存辅存存储层次](imgSytemS/存储体系-主存辅存存储层次.png)
 
 - **虚地址与实地址**
 - **应用程序员**可用**机器指令的地址**对整个程序**统一编址**，称该地址为**虚地址**。
@@ -1361,17 +1361,17 @@
 - **从 CPU 看，速度是接近于主存的，容量是辅存的，每位价格是接近于辅存的。**
 - 因**主存速度**满足不了要求而引出了**Cache 存储器**。在**CPU 和主存之间**增设**高速、小容量**、每位价格较高的**Cache**，用辅助硬件将其和主存构成整体，如图 4- 2 所示，称之为**Cache 存储器**(或称为**Cache-主存存储层次**)。
 
-![存储体系-Cache主存存储层次](imgSytemS\存储体系-Cache主存存储层次.png)
+![存储体系-Cache主存存储层次](imgSytemS/存储体系-Cache主存存储层次.png)
 
 - **存储体系的性能参数**
 - **位价格**
   - 设 $c_i$ 为 $M_i$ 的每位价格，$Sm_i$为 $M_i$ 的以位计算的存贮容量，$TA_i$为 CPU 访问到 $M_i$ 中的信息所需要的时间。
   - 为评价存储层次的性能，引入存贮层次的每位价格 c、命中率 H 和等效访问时间 $T_A$。
   - 存储层次的每位价格为：
-    - ![存储体系-存储层次的每位价格](imgSytemS\存储体系-存储层次的每位价格.png)
+    - ![存储体系-存储层次的每位价格](imgSytemS/存储体系-存储层次的每位价格.png)
 - **命中率**
   - 命中率 H 定义为**CPU 产生的逻辑地址能在 $M_1$ 中访问到(命中到)的概率**。命中率可用实验或模拟方法来获得，即执行或模拟一组有代表性的程序，若逻辑地址流的信息能在 $M_1$ 中访问到的次数为 $R_1$ ，当时在 $M_2$ 中还未调到 $M_1$ 的次数为 $R_2$ ，则命中率:
-    - ![存储体系-命中率](imgSytemS\存储体系-命中率.png)
+    - ![存储体系-命中率](imgSytemS/存储体系-命中率.png)
 
 > 例题：1. 系统存储体系的平均成本应取决于：D 。
 >
@@ -1397,7 +1397,7 @@
 - **页式虚拟存储器**一般都采用让每道程序的**任何虚页可以映像装入到任何实页**位置的**全相联映像**。
 - 按**内容**访问的**相联存储器**不同于**按地址**访问的**随机存储器**。
 
-![存储体系-全相联映像](imgSytemS\存储体系-全相联映像.png)
+![存储体系-全相联映像](imgSytemS/存储体系-全相联映像.png)
 
 > 例题：2. 虚拟存储器的管理方式有**（）**、**（）**和**（）**。P129
 >
@@ -1436,7 +1436,7 @@
 >
 > 时间 T5：后面最先使用的是 2→5→3，3 是最后才使用，所以**下一个被替换的是 2**。
 >
-> ![存储体系-3种替换算法对这3页的使用和替换过程](imgSytemS\存储体系-3种替换算法对这3页的使用和替换过程.png)
+> ![存储体系-3种替换算法对这3页的使用和替换过程](imgSytemS/存储体系-3种替换算法对这3页的使用和替换过程.png)
 
 > 例题：5. 当处理机要用到的指令或数据不在主存时，会产生页面失效，这时需去辅存中将含该指令或数据的一页调入主存，将调入动作称为：**（）**。P137
 >
@@ -1445,25 +1445,25 @@
 - 命中率与分配给程序的主存页数有关
 - **一般来说，分配给程序的主存页数越多**，虚页装入主存的机会越多，**命中率也就可能越高**，但能否提高还和替换算法有关。
 - **FIFO 算法就不一定**。由下图可知，主存页数由 3 页增至 4 页时，命中率反而由 3/12 降低到 2/12。而**LPU 算法则不会发生这种情况**，随着分配给程序的主存页数的增加，其命中率一般都能提高，至少不会下降。
-  - ![存储体系-全命中率与分配给程序的主存页数有关](imgSytemS\存储体系-全命中率与分配给程序的主存页数有关.png)
+  - ![存储体系-全命中率与分配给程序的主存页数有关](imgSytemS/存储体系-全命中率与分配给程序的主存页数有关.png)
 - **命中率与页地址流有关**
 
 - **堆栈型替换算法**
 - 由于堆栈型替换算法具有上述包含性质，因此命中率随主存页数的增加只有可能提高，至少不会下降。只要是堆栈型替换算法，只要采用堆栈处理技术对地址流模拟一次，即可同时求得对此地址流在不同主存页数时的命中率。
 - 用堆栈模拟时，主存在 t 时间点的状况用堆栈 $S_t$ 表示 $S_t$ 是 $L_t$ 个不同页面号在堆栈中的有序集，$S_t$(1)是 t 时间点的 $S_t$ 的栈顶项，$S_t$(2)是 t 时间点的 $S_t$ 的次栈顶项，依次类推。由于堆栈型算法的包含性，必有
-  - ![存储体系-堆栈型替换算法](imgSytemS\存储体系-堆栈型替换算法.png)
+  - ![存储体系-堆栈型替换算法](imgSytemS/存储体系-堆栈型替换算法.png)
 - 下图的页地址流采用 LRU 算法进行堆栈处理的 $S_t$ 变化过程
   - 主存页数 n 取不同值时的命中率。只要取栈顶的前 n 项，若 $A_t \in S_{t-1}$ 则为命中，否则不命中
   - 这样就可以算个各个 n 值的命中率 H\*
   - 例如：在 n=4 中，$S_5={5，1，2，3}$，$A_6 = 2 \in S_5$中，因此命中。A 就是页地址流，A6 就是 2。
   - 例如 2：以 n=2 为准，S3 中，2 来了，就把 3 往下压，2 进来。**这就是命中了**
   - 例如 3：以 n=4 为准，在 S8 中，5 来了，就把 2 往下压住原本的 5，新的 5 在栈顶加入
-    - ![存储体系-全命中率与分配给程序的主存页数有关1](imgSytemS\存储体系-全命中率与分配给程序的主存页数有关1.png)
-    - ![存储体系-页地址流采用LRU算法进行堆栈处理](imgSytemS\存储体系-页地址流采用LRU算法进行堆栈处理.png)
+    - ![存储体系-全命中率与分配给程序的主存页数有关1](imgSytemS/存储体系-全命中率与分配给程序的主存页数有关1.png)
+    - ![存储体系-页地址流采用LRU算法进行堆栈处理](imgSytemS/存储体系-页地址流采用LRU算法进行堆栈处理.png)
 - 计算命中率
   - 命中率 = 命中次数 / 页地址流（时间 t）
     - n2=2/12=0.1666≈0.17，n3=5/12=0.41666≈0.42
-      - ![存储体系-页地址流采用LRU算法进行堆栈处理的命中率](imgSytemS\存储体系-页地址流采用LRU算法进行堆栈处理的命中率.png)
+      - ![存储体系-页地址流采用LRU算法进行堆栈处理的命中率](imgSytemS/存储体系-页地址流采用LRU算法进行堆栈处理的命中率.png)
 
 > 例题：6. .考虑一个 920 个字的程序，其访问虚存的地址流为 20，22，208，214，146，618，370，490，492，868，916，728。
 >
@@ -1474,21 +1474,21 @@
 > 求模公式：INT（地址/页面大小），将地址整除于页面大小，得 INT(20/200)=0，以此类推，**页地址流**为：0，0，1， 1，0，3 ，1， 2，2，4，4，3
 > 虚存地址流 20，22，208，214，146，618，370，490，492，868，916，728
 >
-> ![存储体系-页面替换算法例题答题](imgSytemS\存储体系-页面替换算法例题答题.png)
+> ![存储体系-页面替换算法例题答题](imgSytemS/存储体系-页面替换算法例题答题.png)
 >
-> ![存储体系-页面替换算法例题答案1](imgSytemS\存储体系-页面替换算法例题答案1.png)
+> ![存储体系-页面替换算法例题答案1](imgSytemS/存储体系-页面替换算法例题答案1.png)
 >
 > (2)若页面大小为 100 字，再做一遍;
 >
 > H=25%
 >
-> ![存储体系-页面替换算法例题答案2](imgSytemS\存储体系-页面替换算法例题答案2.png)
+> ![存储体系-页面替换算法例题答案2](imgSytemS/存储体系-页面替换算法例题答案2.png)
 >
 > (3)若页面大小为 400 字，再做一遍;
 >
 > H=50%
 >
-> ![存储体系-页面替换算法例题答案3](imgSytemS\存储体系-页面替换算法例题答案3.png)
+> ![存储体系-页面替换算法例题答案3](imgSytemS/存储体系-页面替换算法例题答案3.png)
 >
 > (4)由(1)、(2)、(3)的结果可得出什么结论?
 >
@@ -1504,20 +1504,20 @@
 >
 > (2)求出此期间主存的命中率 H。
 >
-> ![存储体系-页面替换算法例题3答案1](imgSytemS\存储体系-页面替换算法例题3答案1.png)
+> ![存储体系-页面替换算法例题3答案1](imgSytemS/存储体系-页面替换算法例题3答案1.png)
 
 > 例题：9.设有一道程序，有 1-5 页，执行时的页地址流（即依次用到的程序页页号）为:2，3，2，5，1，5，3，4，3，5 若分配给该道程序的主存有 3 页，给出采用 FIFO 替换算法的装入和替换过程。
 >
-> ![存储体系-页面替换算法例题4答案1](imgSytemS\存储体系-页面替换算法例题4答案1.png)
+> ![存储体系-页面替换算法例题4答案1](imgSytemS/存储体系-页面替换算法例题4答案1.png)
 
 > 例题：10. 设有一道程序，有 0 ～ 4 共 5 个页，分配给该程序的主存有 3 页，若执行时的页地址流为 1、2、1、0、4、1、3、4、3，采用 LRU 算法进行页面替换。
 > (1)请按访存的各个时刻，画出页面替换过程模拟图，并标出命中情况;(2)计算主存的命中率 H。
 >
-> ![存储体系-页面替换算法例题5答案1](imgSytemS\存储体系-页面替换算法例题5答案1.png)
+> ![存储体系-页面替换算法例题5答案1](imgSytemS/存储体系-页面替换算法例题5答案1.png)
 
 > 例题：11.采用**LRU 替换算法**的页式虚拟存储器共有 9 页空间准备分配给 A、B 两道程序。已知 B 道程序若给其分配 4 页时，命中率为 8/15;若分配 5 页时，命中率可达 10/15。现在给出**A 道程序的页地址流**为 2、3、2、1、5、2、4、5、3、2、5、2、1、4、5。(1)画出用堆栈对 A 道程序页地址流的模拟处理过程图;(2)统计给其分配 4 页和 5 页时的命中率。P141/p166/p295 4-8 2017.10
 >
-> ![存储体系-页面替换算法例题6答案1](imgSytemS\存储体系-页面替换算法例题6答案1.png)
+> ![存储体系-页面替换算法例题6答案1](imgSytemS/存储体系-页面替换算法例题6答案1.png)
 
 > 例题：12.有一个 Cache 存储器，主存有 0 ～ 7 共 8 块，Cache 为 4 块，采用**组相联映像**，设 Cache 已先后预取进了主存的第 1、5、3、7 块，现访存块地址流又为 1、2、1、3、7、0、1、2、5、6 时，在 Cache 分 2 组的条件下:(P168/p301 4-16)201710
 > (1)画出用**FIFO 替换算法**时，Cache 内各块的实际替换过程图，并标出命中时刻。
@@ -1525,32 +1525,32 @@
 >
 > **（0145）是一组，（2367）是一组**
 >
-> - ![存储体系-页面替换算法例题8答案解析](imgSytemS\存储体系-页面替换算法例题8答案解析.png)
+> - ![存储体系-页面替换算法例题8答案解析](imgSytemS/存储体系-页面替换算法例题8答案解析.png)
 >
-> ![存储体系-页面替换算法例题7答案1](imgSytemS\存储体系-页面替换算法例题7答案1.png)
+> ![存储体系-页面替换算法例题7答案1](imgSytemS/存储体系-页面替换算法例题7答案1.png)
 
 > 例题：13. 有一个 Cache 存储器，主存有 0 ～ 7 共 8 块，Cache 有 4 块，采用**组相联映像，分 2 组**。假设 Cache 已**先后访问并预取**进了主存的第 5、1、3、7 块，现访存块地址流又为 3、2、6、5、6、5、O、4、1、5、7、6 时:
 > (1 画出用**LRU 替换算法**时，Cache 内各块的实际替换过程图，并标出命中时刻。
 > (2)求出此期问的 Cache 命中率。
 >
-> ![存储体系-页面替换算法例题8答案1](imgSytemS\存储体系-页面替换算法例题8答案1.png)
+> ![存储体系-页面替换算法例题8答案1](imgSytemS/存储体系-页面替换算法例题8答案1.png)
 
 > 例题：14. 在一个采用**组相联映象**的**Cache**系统中，主存由 0~15 共 16 块组成，Cache 分为 2 组，每组 2 块，每块大小为 16 个存储字。在某个程序执行时，访存的主存块地址流为:6、2、4、1、4、6、3、0、4、5、7、3。 P154，p167\p300，4-14
 > (1)写出主存块地址和 Cache 块地址的格式，并指出各字段的长度。
 >
-> ![存储体系-页面替换算法例题9答案1](imgSytemS\存储体系-页面替换算法例题9答案1.png)
+> ![存储体系-页面替换算法例题9答案1](imgSytemS/存储体系-页面替换算法例题9答案1.png)
 >
 > (2)采用 LRU 替换算法时，画出 Cache 内各块实际替换过程图，并计算 Cache 命中率
 >
-> ![存储体系-页面替换算法例题9答案2](imgSytemS\存储体系-页面替换算法例题9答案2.png)
+> ![存储体系-页面替换算法例题9答案2](imgSytemS/存储体系-页面替换算法例题9答案2.png)
 
 > 例题：15. 考虑一个 1000 个字的程序，其访问虚存的地址流为 16、219,136、156、332、480、503、868、916 , 999。若页面大小为**200 字**，主存容量为**400 字**，采用**FIFO 替换算法**，请按访存的各个时刻，写出其虚页地址流，计算主存命中率。
 >
-> ![存储体系-页面替换算法例题10答案1](imgSytemS\存储体系-页面替换算法例题10答案1.png)
+> ![存储体系-页面替换算法例题10答案1](imgSytemS/存储体系-页面替换算法例题10答案1.png)
 
 > 例题：16. 考虑一个 920 个字的程序，其访问**虚存的地址流**为 23、216、156、618、382、490、492、868、916、728。若页面大小为**200 字**，主存容量为**400 字**，采用**FIFO 替换算法**，请按访存的各个时刻，写出其虚页地址流，计算主存命中率。
 >
-> ![存储体系-页面替换算法例题11答案1](imgSytemS\存储体系-页面替换算法例题11答案1.png)
+> ![存储体系-页面替换算法例题11答案1](imgSytemS/存储体系-页面替换算法例题11答案1.png)
 
 ---
 
@@ -1582,14 +1582,14 @@
 
 - 解释一条机器指令的微操作可归并成**取指令**、**分析和执行**三部分，时间关系如图所示。
 
-  - ![标量处理机-取指令分析执行时间关系](imgSytemS\标量处理机-取指令分析执行时间关系.png)
+  - ![标量处理机-取指令分析执行时间关系](imgSytemS/标量处理机-取指令分析执行时间关系.png)
 
 - **指令的顺序结算与重叠结算**
 - 重叠解释**虽不能加快一条指令的解释**，却能**加快相邻两条指令**以至**整段程序的解释**。
   - **顺序解释**
-    - ![标量处理机-顺序解释](imgSytemS\标量处理机-顺序解释.png)
+    - ![标量处理机-顺序解释](imgSytemS/标量处理机-顺序解释.png)
   - **重叠解释**
-    - ![标量处理机-重叠解释](imgSytemS\标量处理机-重叠解释.png)
+    - ![标量处理机-重叠解释](imgSytemS/标量处理机-重叠解释.png)
 - **实现指令的重叠解释**必须在计算机组成上**满足以下几点要求**
   - （1）要解决**访主存的冲突。**
   - （2）要解决“**分析”与“执行”操作的并行**。
@@ -1625,7 +1625,7 @@
 >
 > ![标量处理机-例题1答案1](imgSytemS/标量处理机-例题1答案1.png)
 >
-> ![标量处理机-例题1答案2](imgSytemS\标量处理机-例题1答案2.png)
+> ![标量处理机-例题1答案2](imgSytemS/标量处理机-例题1答案2.png)
 
 - **相关处理**
 - 转移指令的处理
@@ -1642,7 +1642,7 @@
 
   - **“分析$_{k+1}$”与“执行$_k$”的一次重叠**是把指令的解释过程分解成**“分析”**与**“执行”**两个子过程，在独立的分析部件和执行部件上**时间重叠**地进行。若“分析”与“执行”子过程都需要 At,的时间
   - 如下图所示，则一条指令的解释需要 2At,完成，但机器每隔 △t,就能解释完一条指令。
-    - ![标量处理机-流水方式工作图](imgSytemS\标量处理机-流水方式工作图.png)
+    - ![标量处理机-流水方式工作图](imgSytemS/标量处理机-流水方式工作图.png)
 
 - 流水与重叠在概念上没有差别，二者的区别在于**“一次重叠”是把一条指令的解释分成两个子过程**，而**流水则是分为更多个子过程**。
 - **如果把“分析”子过程再细分成“取指令”、“指令译码”和“取操作数”3 个子过程**
@@ -1654,7 +1654,7 @@
   - 执行
 - 让经过的时间都等于 At.，则指令解释的时(间)空(间)关系，如图 b 所示。图中的 1、2、3、4、5 表示处理机所处理的**第 1、2、3、4、5 条指令**。
 
-  - ![标量处理机-流水处理过程](imgSytemS\标量处理机-流水处理过程.png)
+  - ![标量处理机-流水处理过程](imgSytemS/标量处理机-流水处理过程.png)
 
 - **流水的分类**
 - （1）**依据向下扩展和向上扩展**的思路，可分为**计算机功能子过程的流水线**和**处理机间的流水线**。
@@ -1691,9 +1691,9 @@
 - **静、动态多功能流水线时空图，a 静态，b 动态**
   - 静态：等全部浮点算完，在去定乘
   - 动态：浮点还没完成就进入定乘
-  - ![标量处理机-静、动态多功能流水线时空图](imgSytemS\标量处理机-静、动态多功能流水线时空图.png)
+  - ![标量处理机-静、动态多功能流水线时空图](imgSytemS/标量处理机-静、动态多功能流水线时空图.png)
 - **非线性流水线**
-  - ![标量处理机-非线性流水线](imgSytemS\标量处理机-非线性流水线.png)
+  - ![标量处理机-非线性流水线](imgSytemS/标量处理机-非线性流水线.png)
 
 ---
 
@@ -1705,7 +1705,7 @@
   - 效率：$\eta$
 - 吞吐率：$T_p$
   - **吞吐率**是流水线**单位时间里能流出的任务数**或**结果数**。吞吐率受限于流水线中最慢子过程所需要的时间。称流水线中经过时间最长的子过程为瓶颈子过程。
-  - ![标量处理机-吞吐率](imgSytemS\标量处理机-吞吐率.png)
+  - ![标量处理机-吞吐率](imgSytemS/标量处理机-吞吐率.png)
 
 > **打横看！！打横看！！打横看！！打横看！！一行一行看！！**
 
@@ -1720,39 +1720,39 @@
   - 图 b：时空图
     - 在第一段（行）处理 **1** 需要 **$\Delta$t0**
     - 第二段（行）处理 **1** 需要 **$3\Delta$t0**，你可以看出，在第二行的时候处理时间就拉长了
-      - ![标量处理机-瓶颈子过程再细分解析1](imgSytemS\标量处理机-瓶颈子过程再细分解析1.png)
+      - ![标量处理机-瓶颈子过程再细分解析1](imgSytemS/标量处理机-瓶颈子过程再细分解析1.png)
   - 例如：
 
-  - ![标量处理机-最大吞吐率取决于瓶颈段的时间](imgSytemS\标量处理机-最大吞吐率取决于瓶颈段的时间.png)
+  - ![标量处理机-最大吞吐率取决于瓶颈段的时间](imgSytemS/标量处理机-最大吞吐率取决于瓶颈段的时间.png)
 
 - **消除瓶颈**
 
 - 消除瓶颈的一种办法是**将瓶颈子过程再细分**。例如将 2 段再**细分成 21、22、23 三个子段**，如图 a 所示。让各子段经过时间都减少到 $\Delta t_0$ ，这样，最大吞吐率就可提高到 $1/ \Delta t_0$ 。图 b，是将瓶颈子过程再细分后的时空图。
 
-  - ![标量处理机-瓶颈子过程再细分](imgSytemS\标量处理机-瓶颈子过程再细分.png)
+  - ![标量处理机-瓶颈子过程再细分](imgSytemS/标量处理机-瓶颈子过程再细分.png)
 
 - 例如 2 段已不能再细分了，则可以**通过重复设置多套(如此例用 3 套)瓶颈段并联，让它们交叉并行**，如图 5 - 22(a)所示。
 
-  - ![标量处理机-瓶颈子过程再细分交叉并行](imgSytemS\标量处理机-瓶颈子过程再细分交叉并行.png)
+  - ![标量处理机-瓶颈子过程再细分交叉并行](imgSytemS/标量处理机-瓶颈子过程再细分交叉并行.png)
 
 - **加速比 $S_p$**
   - 如果用加速比 Sp 表示**流水方式相对于非流水顺序方式速度提高的比值**，那么非流水顺序方式连续完成 n 个任务需要
     - $n·m·△t_0$ 的时间
     - 因此，流水线方式工作的加速比为:
-      - ![标量处理机-加速比Sp](imgSytemS\标量处理机-加速比Sp.png)
+      - ![标量处理机-加速比Sp](imgSytemS/标量处理机-加速比Sp.png)
 - **效率**
   - **流水线的效率**是指流水线中**设备的实际使用时间与整个运行时间之比**，也称流水线设备的**时间利用率**。
   - 如果是线性流水线、任务间不相关且各段经过的时间相同，如图 5 - 23 所示那样，则在 T 时间里，流水线各段的效率都相同，均为$\eta_0$，即 ○
-    - ![标量处理机-效率](imgSytemS\标量处理机-效率.png)
+    - ![标量处理机-效率](imgSytemS/标量处理机-效率.png)
 - **整个流水线的效率**
-  - ![标量处理机-整个流水线的效率](imgSytemS\标量处理机-整个流水线的效率.png)
-  - ![标量处理机-整个流水线的效率2](imgSytemS\标量处理机-整个流水线的效率2.png)
+  - ![标量处理机-整个流水线的效率](imgSytemS/标量处理机-整个流水线的效率.png)
+  - ![标量处理机-整个流水线的效率2](imgSytemS/标量处理机-整个流水线的效率2.png)
 
 #### 流水线例题
 
-> 例题：6. 设向量 A 和 B 各有 4 个元素，要在图 5 - 24(a)所示的静态双功能流水线上计算向量点积：![标量处理机-向量点积](imgSytemS\标量处理机-向量点积.png)，按此算法可画出流水线工作的时空图如图 5- 24(b)所示。
+> 例题：6. 设向量 A 和 B 各有 4 个元素，要在图 5 - 24(a)所示的静态双功能流水线上计算向量点积：![标量处理机-向量点积](imgSytemS/标量处理机-向量点积.png)，按此算法可画出流水线工作的时空图如图 5- 24(b)所示。
 >
-> ![标量处理机-例题2](imgSytemS\标量处理机-例题2.png)
+> ![标量处理机-例题2](imgSytemS/标量处理机-例题2.png)
 >
 > 解析：
 >
@@ -1764,15 +1764,15 @@
 > - 然后根据刚刚计算的**式子**，就可以画图了
 >   - 1→2→3→5 是加法流水线，1→4→5 是乘法
 >   - 先算乘法，$(a_1*b_1)  (a_2*b_2)  (a_3*b_3)  (a_4*b_4)$
->     - ![标量处理机-例题2解析1](imgSytemS\标量处理机-例题2解析1.png)
+>     - ![标量处理机-例题2解析1](imgSytemS/标量处理机-例题2解析1.png)
 >   - 然后算加法，
 >     - **注意一下，这里只能两两相加，或相乘**
 >     - 所以 6-7 是 a1b1+a2b2。7-8 是 a3b3+a4b4
->       - ![标量处理机-例题2解析2](imgSytemS\标量处理机-例题2解析2.png)
+>       - ![标量处理机-例题2解析2](imgSytemS/标量处理机-例题2解析2.png)
 >   - 最后在相加
 > - **流水线的效率计算**
 >   - 可用阴影区面积和全部 5 个段的总时空区面积之比
->     - ![标量处理机-例题2答案2](imgSytemS\标量处理机-例题2答案2.png)
+>     - ![标量处理机-例题2答案2](imgSytemS/标量处理机-例题2答案2.png)
 >     - 虽然效率连 1/3 都不到，但解题速度却提高为串行的 1.6 倍，而且如果向量 A、B 的元素数增加时，还会使解题速度和效率进一步提高。
 
 > 例题：7. 现有**长度为 8 的向量 A 和 B**，请分别画出下列 2 种结构的处理器上求点积 A·B 的时空图，并求完成全部结果的最少时钟拍数。设处理器中每个部件的输出均可直接送到任何部件的输入或存入缓冲器中，其间的传送延时不计，指令和源操作数均能连续提供。201704,P202
@@ -1783,7 +1783,7 @@
 > - **第二问：必须先有 2 个数相乘，才能在算加法**
 > - 2 次乘法+7 次加法**（max(加法,乘法)，加法是 7，乘法是 8-2=6，取最大值）**
 >
-> ![标量处理机-例题3答案1](imgSytemS\标量处理机-例题3答案1.png)
+> ![标量处理机-例题3答案1](imgSytemS/标量处理机-例题3答案1.png)
 
 - **标量流水机的相关处理和控制机构**
   - 标量流水线只有连续不断地流动，不出现断流，才能获得高效率。造成流水线断流的原因除了编译形成的目标程序不能发挥流水结构的作用，或存储系统供不上为连续流动所需的指令和操作数以外，还可能是由于出现了相关和中断。
@@ -1817,7 +1817,7 @@
 > 例题：9.，**9 拍=8 位，8 拍=7 位，以此类推**
 
 - 例题：现设**流水线由 5 段组成**，**段号 k 分别为 1~5**，任务经过流水线总共需**9 拍**，其预约表如图 5 - 28(a)所示。求延迟禁止表，求冲突向量，画单功能流水的状态转移事宜图，求平均间隔拍数（平均延迟）。
-- ![标量处理机-例题4题目](imgSytemS\标量处理机-例题4题目.png)
+- ![标量处理机-例题4题目](imgSytemS/标量处理机-例题4题目.png)
   - **求延迟禁止表：**
     - **看段号 k，用拍数大的减小的**
       - 段号 1：9-1=8
@@ -1847,15 +1847,15 @@
         - 10110001
         - **10111101**
       - 结果就是：**10111101**
-        - ![标量处理机-例题4答案解析1](imgSytemS\标量处理机-例题4答案解析1.png)
+        - ![标量处理机-例题4答案解析1](imgSytemS/标量处理机-例题4答案解析1.png)
       - **发现结果中还有 0，那么我们继续移位**
       - 这次移位的是，第二个 0
         - 最后结果是：10111111
-          - ![标量处理机-例题4答案解析2](imgSytemS\标量处理机-例题4答案解析2.png)
+          - ![标量处理机-例题4答案解析2](imgSytemS/标量处理机-例题4答案解析2.png)
     - 下一个 0，**是第三位的 0**
       - 那么我就右移 3 位在进行或运算
       - **结果是：10110111**
-        - ![标量处理机-例题4答案解析3](imgSytemS\标量处理机-例题4答案解析3.png)
+        - ![标量处理机-例题4答案解析3](imgSytemS/标量处理机-例题4答案解析3.png)
       - **发现结果中还有 0，那么我们继续移位**
       - 这次移位的是：第 4 个 0
         - **结果：10111011**
@@ -1864,43 +1864,43 @@
       - **结果：10111011**
         - ![标量处理机-例题4答案解析4](imgSytemS/标量处理机-例题4答案解析4.png)
     - **全体，下一个 0 是第七个 0，记得给箭头给原本的**
-  - ![标量处理机-例题4答案](imgSytemS\标量处理机-例题4答案.png)
+  - ![标量处理机-例题4答案](imgSytemS/标量处理机-例题4答案.png)
   - **各个调度方案的平均间隔拍数的例子**
     - 调度方案 2,2,7，（数字其实就是 0 移动的位数）
       - 从 2 下来到 2，最后回到 7。
       - (2+2+7)/3=3.67，那么平均间隔拍数就是 3.67
-      - ![标量处理机-例题4答案解析5](imgSytemS\标量处理机-例题4答案解析5.png)
+      - ![标量处理机-例题4答案解析5](imgSytemS/标量处理机-例题4答案解析5.png)
     - **调度方案 3,4，可以不回 7**
   - 结论：由表 5-1 可知，**采用先隔 3 拍后隔 4 拍轮流给流水线送入任务的调度方案是最佳的**，平均每隔 3.5 拍即可流入一个任务，吞吐率最高。
   - 尽管(4，3)调度方案平均间隔拍数也是 3.5 拍，但若**实际流入任务数**是**循环所需任务数的整数倍**，**则其实际吞吐率相对会低些**，**所以不作为最佳调度方案**。
   - **一句话：反正取前面第一个数小的就对了**
-    - ![标量处理机-例题4的各个调度方案的平均间隔拍数的例子](imgSytemS\标量处理机-例题4的各个调度方案的平均间隔拍数的例子.png)
+    - ![标量处理机-例题4的各个调度方案的平均间隔拍数的例子](imgSytemS/标量处理机-例题4的各个调度方案的平均间隔拍数的例子.png)
 
 > 例题：10
 
 - 在一个 4 段的流水线处理机上需经 7 拍才能完成一个任务，其预约表如表 5-2 所示。
   - 状态转移图如图 5 - 29 所示。
   - 各种调度方案及其相应的平均延迟如表 5-3 所示。
-  - ![标量处理机-例题5状态预约表](imgSytemS\标量处理机-例题5状态预约表.png)
+  - ![标量处理机-例题5状态预约表](imgSytemS/标量处理机-例题5状态预约表.png)
   - 求延迟禁止表，求冲突向量，画单功能流水的状态转移事宜图，求平均间隔拍数（平均延迟）
-  - ![标量处理机-例题5答案1](imgSytemS\标量处理机-例题5答案1.png)
-  - ![标量处理机-例题5答案2](imgSytemS\标量处理机-例题5答案2.png)
+  - ![标量处理机-例题5答案1](imgSytemS/标量处理机-例题5答案1.png)
+  - ![标量处理机-例题5答案2](imgSytemS/标量处理机-例题5答案2.png)
 
 > 例题：11. 现设流水线由 5 段组成，段号 k 分别为 1 ~5，任务经过流水线总共需要 9 拍，其预约表如表所示，201904，P1931p312,5-11
 >
-> ![标量处理机-例题6状态预约表](imgSytemS\标量处理机-例题6状态预约表.png)(1)写出延迟禁止表 F、冲突向量 C;
+> ![标量处理机-例题6状态预约表](imgSytemS/标量处理机-例题6状态预约表.png)(1)写出延迟禁止表 F、冲突向量 C;
 > (2)画出流水线状态转移图;
 > (3)求出最佳调度方案、最小平均延迟及流水线的最大吞吐率。
 >
-> ![标量处理机-例题6答案](imgSytemS\标量处理机-例题6答案.png)
+> ![标量处理机-例题6答案](imgSytemS/标量处理机-例题6答案.png)
 
 > 例题：12. 在一个 5 段的流水线处理机上需经 9 拍才能完成一个任务，其预约表如题 28 表所示。P193，P202Np312，5-11，201804
 >
-> ![标量处理机-例题7状态预约表](imgSytemS\标量处理机-例题7状态预约表.png)(1)分别写出延迟禁止表 F、冲突向量 C;
+> ![标量处理机-例题7状态预约表](imgSytemS/标量处理机-例题7状态预约表.png)(1)分别写出延迟禁止表 F、冲突向量 C;
 > (2)画出流水线状态转移图;
 > (3)求出最小平均延迟及流水线的最大吞吐率。
 >
-> ![标量处理机-例题7答案](imgSytemS\标量处理机-例题7答案.png)
+> ![标量处理机-例题7答案](imgSytemS/标量处理机-例题7答案.png)
 
 ---
 
@@ -1936,10 +1936,10 @@
 
 - 第一、二条指令无任何冲突，可以并行执行。第三条指令与第一、二条指令出现 $V_i$ 冲突，存在先写后读数相关，本来是不能并行执行的，但若能把第一、二条指令的结果分量直接链接进第三条指令所用的功能部件，那第三条指令就能与第一、二条指令在大部分时间内并行。它们的链接过程如图 6- 3 所示。P207
 
-  - ![向量处理机-通过链接技术实现并行](imgSytemS\向量处理机-通过链接技术实现并行.png)
+  - ![向量处理机-通过链接技术实现并行](imgSytemS/向量处理机-通过链接技术实现并行.png)
 
 - 例题-接上图：
-  - ![向量处理机-例题1题目](imgSytemS\向量处理机-例题1题目.png)
+  - ![向量处理机-例题1题目](imgSytemS/向量处理机-例题1题目.png)
 - 解析：
   - （1）第一条指令：$V_3←存储器$
     - 启动访存**1 周期**，访问访存**6 周期**，最后存入$V_3$又是**1 周期**
@@ -1965,7 +1965,7 @@
   - **第三题：链接技术，12 并行，3 是链接**
     - 这里要和上面有一个地方不同，**链接技术不用加 N，最后相乘的地方加就可以**
     - **(1+6+1)+8+N=16+N 拍**
-  - ![向量处理机-例题1答案1](imgSytemS\向量处理机-例题1答案1.png)
+  - ![向量处理机-例题1答案1](imgSytemS/向量处理机-例题1答案1.png)
 
 ---
 
@@ -2013,9 +2013,9 @@
 
 - **ILLIACIV 的处理单元阵列结构**
   - 由于阵列处理机上的并行算法的研究是与结构紧密联系在一起的，因此，下面先介绍 ILLIAC IV 阵列机上处理单元的互连结构。ILLIACIV 采用如图 6 - 5 所示的分布存储器构形，其处理单元阵列结构如图 6- 7 所示。
-    - ![向量处理机-ILLIAC IV处理单元的互连结构](imgSytemS\向量处理机-ILLIAC IV 处理单元的互连结构.png)
+    - ![向量处理机-ILLIAC IV处理单元的互连结构](imgSytemS/向量处理机-ILLIAC IV 处理单元的互连结构.png)
 
-> 例题：9. ![向量处理机-例题2题目](imgSytemS\向量处理机-例题2题目.png)
+> 例题：9. ![向量处理机-例题2题目](imgSytemS/向量处理机-例题2题目.png)
 >
 > 解析：
 >
@@ -2023,7 +2023,7 @@
 >   - 根据题意得出，从 i 从 0 开始到 15。看图
 >   - **哎，摸了，这题绝了**
 >
-> ![向量处理机-例题2答案1](imgSytemS\向量处理机-例题2答案1.png)
+> ![向量处理机-例题2答案1](imgSytemS/向量处理机-例题2答案1.png)
 
 ---
 
@@ -2047,7 +2047,7 @@
   - **立方体单级网络**
     - 三维立方体结构
     - **x 坐标是 001。y 坐标是 010，Z 坐标是 100**
-    - ![向量处理机-三维立方体结构](imgSytemS\向量处理机-三维立方体结构.png)
+    - ![向量处理机-三维立方体结构](imgSytemS/向量处理机-三维立方体结构.png)
 
 - **三维的立方体单级网络**
   - 解释下，从右边起第 i 位上的 0、1 相反
@@ -2060,7 +2060,7 @@
     - Cube0 中，0 和 1 相连，2 和 3 相连，4 和 5 相连，6 和 7 相连，加 1（自己换成二进制算）
     - Cube1 中，0 和 2 相连，1 和 3 相连，4 和 6 相连，5 和 7 相连，加 2
     - Cube2 中，0 和 4 相连，1 和 5 相连，2 和 6 相连，3 和 7 相连，加 4
-  - ![向量处理机-三维的立方体单级网络](imgSytemS\向量处理机-三维的立方体单级网络.png)
+  - ![向量处理机-三维的立方体单级网络](imgSytemS/向量处理机-三维的立方体单级网络.png)
 
 > 例题：10. 编号为 0、1、2、...、15 的 16 个处理器，用单级互连网络互连，用 Cube0 互连函数时，与第 10 号处理器相连的处理器的编号是：C。
 >
@@ -2097,9 +2097,9 @@
       - j = 7，$7 - 2^1=5$，**那么 7→5 相连**
       - j = 6，$6 - 2^1=4$，**那么 6→4 相连**
       - 以此类推
-  - ![向量处理机-PM2I单级网络](imgSytemS\向量处理机-PM2I单级网络.png)
+  - ![向量处理机-PM2I单级网络](imgSytemS/向量处理机-PM2I单级网络.png)
 - **PM2I 互联网络的部分连接图**
-  - ![向量处理机-PM2I互联网络的部分连接图](imgSytemS\向量处理机-PM2I互联网络的部分连接图.png)
+  - ![向量处理机-PM2I互联网络的部分连接图](imgSytemS/向量处理机-PM2I互联网络的部分连接图.png)
 
 > 例题：13. 编号为 0、1、2、...、15 的 16 个处理器，用单级互连网络互连，用 $PM2_{+1}$，互连函数时，与第 7 号处理器相连的处理器的编号是：B。
 >
@@ -2117,7 +2117,7 @@
 >
 > （2）3 号处理单元用单级 PM2I 网络可以将数据直接传送到哪些处理单元上。
 >
-> ![向量处理机-例题3答案](imgSytemS\向量处理机-例题3答案.png)
+> ![向量处理机-例题3答案](imgSytemS/向量处理机-例题3答案.png)
 
 #### 混洗交换单级网络
 
@@ -2125,8 +2125,8 @@
   - 原理
     - 向左移动 1 位，意思就是 001→010 这样
     - 在举个例子：101→011，懂了吧？
-  - ![向量处理机-混洗交换单级网络](imgSytemS\向量处理机-混洗交换单级网络.png)
-  - ![向量处理机-8个处理单元的全混连接](imgSytemS\向量处理机-8个处理单元的全混连接.png)
+  - ![向量处理机-混洗交换单级网络](imgSytemS/向量处理机-混洗交换单级网络.png)
+  - ![向量处理机-8个处理单元的全混连接](imgSytemS/向量处理机-8个处理单元的全混连接.png)
 
 > 例题：16. 编号为 0，1，...，15 的 16 个处理器，当互连网络函数为 Shuffle 时，9 号处理器连接到的处理器的号数是：D。p219
 >
@@ -2144,8 +2144,8 @@
 
 - **蝶形单级网络**
   - 最高位和最低位交换位置，例如（001→100）（101→101）（011→110）
-  - ![向量处理机-蝶形单级网络](imgSytemS\向量处理机-蝶形单级网络.png)
-  - ![向量处理机-8个处理单元的蝶形单级互联](imgSytemS\向量处理机-8个处理单元的蝶形单级互联.png)
+  - ![向量处理机-蝶形单级网络](imgSytemS/向量处理机-蝶形单级网络.png)
+  - ![向量处理机-8个处理单元的蝶形单级互联](imgSytemS/向量处理机-8个处理单元的蝶形单级互联.png)
 
 #### 基本的多级互连网络
 
@@ -2159,7 +2159,7 @@
   - **懂了懂了。草**
     - 首先要先知道 0 级是代表 Cube0，1 级是代表 Cube1
     - 第一步：写出 Cube0，0 到 7 的值（01234567），对应图中 0 级
-      - ![向量处理机-多级立方体互连网络解析1](imgSytemS\向量处理机-多级立方体互连网络解析1.png)
+      - ![向量处理机-多级立方体互连网络解析1](imgSytemS/向量处理机-多级立方体互连网络解析1.png)
       - 第二步：写出 Cube1，0 到 7 的值（02134657），对应图中 1 级
         - 图我就不截了，看下面总图
       - 第三步：写出 Cube2，0 到 7 的值（04152637），对应图中 2 级
@@ -2174,9 +2174,9 @@
     - 第二列：a00 在分体号 2，他的**后一位需要空着**。那么 a10 在 4 号位，以此类推
   - ![image-20210401160423151](imgSytemSRe/image-20210401160423151.png)
 
-> 例题：19. ![向量处理机-例题4题目](imgSytemS\向量处理机-例题4题目.png)
+> 例题：19. ![向量处理机-例题4题目](imgSytemS/向量处理机-例题4题目.png)
 >
-> ![向量处理机-例题4答案](imgSytemS\向量处理机-例题4答案.png)
+> ![向量处理机-例题4答案](imgSytemS/向量处理机-例题4答案.png)
 >
 > - **一般式就是找规律：**
 >   - 首先我们发现，**中间是不变化的**，**所以中间一定是直连**
@@ -2328,21 +2328,21 @@
     - $T_P$：表示**多处理机运算**的级数，既是**树的高度**
     - $T_1$：表示**单处理机运算**的级数
     - **具体怎么求看下面的图，下面我会说**
-  - ![多处理机-例题1](imgSytemS\多处理机-例题1.png)
+  - ![多处理机-例题1](imgSytemS/多处理机-例题1.png)
     - 7-17 树形流程图：a 图从左往右看。b 图从上往下看
       - a：
         - **从左往右看**
         - 第一步：a 加(b 乘 x)，左边第一部分完成了
-          - ![多处理机-例题1树形流程图解析1-1](imgSytemS\多处理机-例题1树形流程图解析1-1.png)
+          - ![多处理机-例题1树形流程图解析1-1](imgSytemS/多处理机-例题1树形流程图解析1-1.png)
         - 第二步：加 c 乘 (x 乘 x)
           - ![多处理机-例题1树形流程图解析1-2](imgSytemS/多处理机-例题1树形流程图解析1-2.png)
         - 剩下同理
       - b：
         - **从上往下看**
         - 第一步：a 加 x ， x 在乘 b，b 在加上后面的东西
-          - ![多处理机-例题1树形流程图解析3](imgSytemS\多处理机-例题1树形流程图解析3.png)
+          - ![多处理机-例题1树形流程图解析3](imgSytemS/多处理机-例题1树形流程图解析3.png)
       - 因此图 a 的**P=3**，有 3 个处理机是**并行**的。$T_P=4$，**树的高度是 4**
-        - ![多处理机-例题1树形流程图解析4](imgSytemS\多处理机-例题1树形流程图解析4.png)
+        - ![多处理机-例题1树形流程图解析4](imgSytemS/多处理机-例题1树形流程图解析4.png)
       - 图 b 同理，P=1，单处理机。$T_1=6$，高度为 6,
     - ![多处理机-例题1树形流程图](imgSytemS/多处理机-例题1树形流程图.png)
   - **第四步：求加速比和效率：**
@@ -2382,16 +2382,16 @@
 >   - 我们用这个表达式作为例子
 >     - $abc+ad(ef+gh+gij)$
 >   - 三个字母相乘一律可以用该图：（abc，往下填就可以）
->     - ![多处理机-小技巧画树1](imgSytemS\多处理机-小技巧画树1.png)
+>     - ![多处理机-小技巧画树1](imgSytemS/多处理机-小技巧画树1.png)
 >   - 第二步：分析，ef 和 gh，他们 2 个其实可以合二为一
 >     - ![多处理机-小技巧画树2](imgSytemS/多处理机-小技巧画树2.png)
 >   - 第三步：合并在一起，剩下的其实就没什么难点了。
 
 > 例题：9.
 >
-> ![多处理机-例题2](imgSytemS\多处理机-例题2.png)
+> ![多处理机-例题2](imgSytemS/多处理机-例题2.png)
 >
-> ![多处理机-例题2答案](imgSytemS\多处理机-例题2答案.png)
+> ![多处理机-例题2答案](imgSytemS/多处理机-例题2答案.png)
 >
 > - 多处理器的树，画画技巧
 >
@@ -2399,33 +2399,33 @@
 >
 > - 上图不是最终结果，**可以在利用分配率在进一步降低树的高度**
 >   - **这里，我们把 b 乘 c、b 乘 g 拿了出来！！**
->   - ![多处理机-例题2答案2](imgSytemS\多处理机-例题2答案2.png)
->   - ![多处理机-例题2答案3](imgSytemS\多处理机-例题2答案3.png)
+>   - ![多处理机-例题2答案2](imgSytemS/多处理机-例题2答案2.png)
+>   - ![多处理机-例题2答案3](imgSytemS/多处理机-例题2答案3.png)
 
 > 例题：10.
 >
-> ![多处理机-例题3题目](imgSytemS\多处理机-例题3题目.png)
+> ![多处理机-例题3题目](imgSytemS/多处理机-例题3题目.png)
 >
-> ![多处理机-例题3答案](imgSytemS\多处理机-例题3答案.png)
+> ![多处理机-例题3答案](imgSytemS/多处理机-例题3答案.png)
 >
 > - **小技巧！！！求单处理器运算的级数=所有不同字母的数量-1**
 >   - 例如上题中存在（a,b,c,d,e,f,g,i,j）9 个字母，那么单处理器的级数就是 9-1=8
 > - 小技巧 2
 >   - 画图的时候根据**最简表达式画**，从左往右画
 
-> 例题：11. ![多处理机-例题4题目](imgSytemS\多处理机-例题4题目.png)
+> 例题：11. ![多处理机-例题4题目](imgSytemS/多处理机-例题4题目.png)
 >
-> ![多处理机-例题4答案](imgSytemS\多处理机-例题4答案.png)
+> ![多处理机-例题4答案](imgSytemS/多处理机-例题4答案.png)
 
-> 例题：12. ![多处理机-例题5题目](imgSytemS\多处理机-例题5题目.png)
+> 例题：12. ![多处理机-例题5题目](imgSytemS/多处理机-例题5题目.png)
 >
 > - **答案有点问题，应该是 E=ab+acd+acef**
 >
 > ![多处理机-例题5答](imgSytemS/多处理机-例题5答.png)
 
-> 例题：13. ![多处理机-例题6题目](imgSytemS\多处理机-例题6题目.png)
+> 例题：13. ![多处理机-例题6题目](imgSytemS/多处理机-例题6题目.png)
 >
-> ![多处理机-例题6答案](imgSytemS\多处理机-例题6答案.png)
+> ![多处理机-例题6答案](imgSytemS/多处理机-例题6答案.png)
 
 - **并行语言与并行编译**
 - 并行算法需要用并行程序来实现
@@ -2442,19 +2442,19 @@
     - 例如第二次的时候（\*1C），他这里用了**1**，**那么就算一次**
     - 剩下同理
     - 例如第六次的时候（=5Z），他这里用了**5**，**那么就算一次**
-    - ![多处理机-例题7题目](imgSytemS\多处理机-例题7题目.png)
+    - ![多处理机-例题7题目](imgSytemS/多处理机-例题7题目.png)
   - **采用并行编译：**
     - 之所以是 3 级运算是因为，第 3，5，6 调用了。**一共 3 次**
-    - ![多处理机-例题8题目](imgSytemS\多处理机-例题8题目.png)
+    - ![多处理机-例题8题目](imgSytemS/多处理机-例题8题目.png)
 
 > **第一个 FORK 不用给语句数字**
 
 - **FORK 语句**
-  - ![多处理机-FORK语句](imgSytemS\多处理机-FORK语句.png)
-  - ![多处理机-FORK语句2](imgSytemS\多处理机-FORK语句2.png)
+  - ![多处理机-FORK语句](imgSytemS/多处理机-FORK语句.png)
+  - ![多处理机-FORK语句2](imgSytemS/多处理机-FORK语句2.png)
 - 例如：
-  - ![多处理机-FORK语句例题](imgSytemS\多处理机-FORK语句例题.png)
-  - ![多处理机-FORK语句例题并行程序数据相关图](imgSytemS\多处理机-FORK语句例题并行程序数据相关图.png)
+  - ![多处理机-FORK语句例题](imgSytemS/多处理机-FORK语句例题.png)
+  - ![多处理机-FORK语句例题并行程序数据相关图](imgSytemS/多处理机-FORK语句例题并行程序数据相关图.png)
   - 改写为程序：解析
     - 第一步：前面的**数字 10,20,30,40,50 代表**第几条语句
     - 第二步：**FORK→ 代表并行**
@@ -2463,11 +2463,11 @@
     - **第三步：JOIN→ 每个进程下面必有一个 JOIN 2，代表进程结束**
     - 第四步：**GOTO→ 并行结束后**，下一次去**第几条语句**
       - 例如：S1 和 S2 中间的 GOTO 30，意思是下次 GOTO 去的地方在**第 30 条语句。**
-    - ![多处理机-利用FORK和JOIN程序改写](imgSytemS\多处理机-利用FORK和JOIN程序改写.png)
+    - ![多处理机-利用FORK和JOIN程序改写](imgSytemS/多处理机-利用FORK和JOIN程序改写.png)
   - 图
-    - ![多处理机-FORK语句例题并行程序过程](imgSytemS\多处理机-FORK语句例题并行程序过程.png)
+    - ![多处理机-FORK语句例题并行程序过程](imgSytemS/多处理机-FORK语句例题并行程序过程.png)
 
-> 例题：14. ![多处理机-例题9题目](imgSytemS\多处理机-例题9题目.png)
+> 例题：14. ![多处理机-例题9题目](imgSytemS/多处理机-例题9题目.png)
 >
 > - 首先从 10 开始
 > - 遇到 FORK 30
@@ -2480,15 +2480,15 @@
 > - 执行完后，**找到 GOTO 70，然后从第 70 条语句开始**
 >   - 可以写在上面，也可以写在下面。
 >
-> ![多处理机-例题9答案](imgSytemS\多处理机-例题9答案.png)
+> ![多处理机-例题9答案](imgSytemS/多处理机-例题9答案.png)
 
 > 例题：15.
 >
-> ![多处理机-例题10题目](imgSytemS\多处理机-例题10题目.png)
+> ![多处理机-例题10题目](imgSytemS/多处理机-例题10题目.png)
 >
 > - **第一个 FORK 不用给语句数字**
 >
-> ![多处理机-例题10答案](imgSytemS\多处理机-例题10答案.png)
+> ![多处理机-例题10答案](imgSytemS/多处理机-例题10答案.png)
 
 ---
 
