--- a/计算机系统结构复习.md
+++ b/计算机系统结构复习.md
@@ -251,7 +251,7 @@
 >   - $m' = m/[log_2r_m]$，`！！向上取整！！3.1=4`
 >   - **规格化正尾数**
 >     - 所谓**规格化正尾数**，就是**正尾数**小数点后的第 **1** 个 $r_m$ 进制数位不是 **0** 的数。
->   - ![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](imgSytemS\数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
+>   - ![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](imgSytemS/数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
 > - **浮点数尾数下溢处理方法**
 >   - **截断法**
 >     - 实现简单，不增加硬件，不需要处理时间
@@ -431,7 +431,7 @@
 ### 大题
 
 - 数据表示图
-  - ![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](imgSytemS\数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
+  - ![数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性](imgSytemS/数据表示、寻址方式和指令系统-采用尾基为rm的浮点数表示的特性.png)
 
 > 例题：9. 浮点数系统使用的阶基$r_p$=2，阶值位数 P=2，尾数基值$r_m$=10,以$r_m$为基的尾数，位数 m'=1。在非负阶、正尾数、规格化情况下，试计算:
 >
@@ -617,9 +617,9 @@
 ---
 
 - **中断系统**
-  - ![存储、中断、总线与IO系统-中断图3-2](imgSytemS\存储、中断、总线与IO系统-中断图3-2.png)
+  - ![存储、中断、总线与IO系统-中断图3-2](imgSytemS/存储、中断、总线与IO系统-中断图3-2.png)
 
-> 例题：17. ![存储、中断、总线与IO系统-中断例题](imgSytemS\存储、中断、总线与IO系统-中断例题.png)
+> 例题：17. ![存储、中断、总线与IO系统-中断例题](imgSytemS/存储、中断、总线与IO系统-中断例题.png)
 >
 > （1）当中断响应优先次序为 1→2 一 3 一 4 时，其**中断处理次序是什么**?
 >
@@ -648,17 +648,17 @@
 > 例题：39. 如果通道在数据传送期中，选择设备需**9.8 us**，传送一个字节数据需**0.2us**。某低速设备每隔**500us**发出一个字节数据请求，那么至多可接几台这种低速设备?
 >
 > 对于如下**A-F6 种高速设备**，一次通信传送的字节数**不少于 1024 个字节**，则哪些设备可挂，哪些不能挂?其中，A~F 设备每发一个字节数据传送请求的时间间隔分别如表所示。
-> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间](imgSytemS\存储、中断、总线与IO系统-例题A-F设备法请求间隔时间.png)
+> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间](imgSytemS/存储、中断、总线与IO系统-例题A-F设备法请求间隔时间.png)
 >
 > （2）**一次传送**，意味着是**选择通道**，如果有 n 台设备，意味着选择通道的极限流量为：
 >
 > 例题：40. 如果通道在数据传送期中，**选择设备的时间 $T_s$ 为 10us**，**传送一个字节数据需要的时间 $T_D$ 为 0.5us**。(1)某低速设备每隔 500us 发出一个字节数据请求，至多可接几台这种设备?(2)对于题 28 表所示的低速设备，一次通信传送的字节数不少于 1024 个字节，则哪些设备可挂?哪些设备不可挂?201604
 >
-> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2](imgSytemS\存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2.png)
+> ![存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2](imgSytemS/存储、中断、总线与IO系统-例题A-F设备法请求间隔时间2.png)
 >
 > 例题：41. 设通道在数据传送期内，选择设备需 4.9us，传送一个字节数据需 0.1us。⑴ 某低速设备每隔 250u s 发出一个字节数据传送请求，问至多可接几台这种低速设备?。(2)对于如下 5 种高速设备 A~E，要求字节传送请求的时间间隔如题 28 表所示。若一次通信传送的字节数不少于 1024 字节，问哪些设备可以挂在此通道上﹖哪些不能?
 >
-> ![存储、中断、总线与IO系统-例题2](imgSytemS\存储、中断、总线与IO系统-例题2.png)
+> ![存储、中断、总线与IO系统-例题2](imgSytemS/存储、中断、总线与IO系统-例题2.png)
 >
 > 例题：42. 有 10 台外设，各设备要求传送信息的工作速率如表所示，现设计的通道在数据传送期，每选择一次设备需 2us，每送一个字节数据需要 0.5us，若用作**字节多路通道**，则：201910
 >
@@ -670,7 +670,7 @@
 >
 > （4）请问应选哪些设备挂在此通道上?为什么?
 >
-> ![存储、中断、总线与IO系统-例题3](imgSytemS\存储、中断、总线与IO系统-例题3.png)
+> ![存储、中断、总线与IO系统-例题3](imgSytemS/存储、中断、总线与IO系统-例题3.png)
 
 ## 第四章 存储体系
 
@@ -841,7 +841,7 @@
 >
 > （1）顺序方式（2）仅“执行,”与“取指,”重叠;（3）仅“执行,”、“分析 k:”与“取指 k”重叠。
 >
-> 例题：6. 设向量 A 和 B 各有 4 个元素，要在图 5 - 24(a)所示的静态双功能流水线上计算向量点积：![标量处理机-向量点积](imgSytemS\标量处理机-向量点积.png)，按此算法可画出流水线工作的时空图如图 5- 24(b)所示。
+> 例题：6. 设向量 A 和 B 各有 4 个元素，要在图 5 - 24(a)所示的静态双功能流水线上计算向量点积：![标量处理机-向量点积](imgSytemS/标量处理机-向量点积.png)，按此算法可画出流水线工作的时空图如图 5- 24(b)所示。
 >
 > **（1）流水线的效率是多少？**
 
@@ -857,24 +857,24 @@
 
 > 例题：现设**流水线由 5 段组成**，**段号 k 分别为 1~5**，任务经过流水线总共需**9 拍**，其预约表如图 5 - 28(a)所示。求延迟禁止表，求冲突向量，画单功能流水的状态转移事宜图，求平均间隔拍数（平均延迟）。
 >
-> ![标量处理机-例题4题目](imgSytemS\标量处理机-例题4题目.png)
+> ![标量处理机-例题4题目](imgSytemS/标量处理机-例题4题目.png)
 
 > 在一个 4 段的流水线处理机上需经 7 拍才能完成一个任务，其预约表如表 5-2 所示。
 >
 > - 状态转移图如图 5 - 29 所示。
 > - 各种调度方案及其相应的平均延迟如表 5-3 所示。
-> - ![标量处理机-例题5状态预约表](imgSytemS\标量处理机-例题5状态预约表.png)
+> - ![标量处理机-例题5状态预约表](imgSytemS/标量处理机-例题5状态预约表.png)
 > - 求延迟禁止表，求冲突向量，画单功能流水的状态转移事宜图，求平均间隔拍数（平均延迟）
 
 > 例题：11. 现设流水线由 5 段组成，段号 k 分别为 1 ~5，任务经过流水线总共需要 9 拍，其预约表如表所示，201904，P1931p312,5-11
 >
-> ![标量处理机-例题6状态预约表](imgSytemS\标量处理机-例题6状态预约表.png)(1)写出延迟禁止表 F、冲突向量 C;
+> ![标量处理机-例题6状态预约表](imgSytemS/标量处理机-例题6状态预约表.png)(1)写出延迟禁止表 F、冲突向量 C;
 > (2)画出流水线状态转移图;
 > (3)求出最佳调度方案、最小平均延迟及流水线的最大吞吐率。
 >
 > 例题：12. 在一个 5 段的流水线处理机上需经 9 拍才能完成一个任务，其预约表如题 28 表所示。P193，P202Np312，5-11，201804
 >
-> ![标量处理机-例题7状态预约表](imgSytemS\标量处理机-例题7状态预约表.png)(1)分别写出延迟禁止表 F、冲突向量 C;
+> ![标量处理机-例题7状态预约表](imgSytemS/标量处理机-例题7状态预约表.png)(1)分别写出延迟禁止表 F、冲突向量 C;
 > (2)画出流水线状态转移图;
 > (3)求出最小平均延迟及流水线的最大吞吐率。
 
@@ -990,11 +990,11 @@
 
 ### 大题
 
-> ![向量处理机-例题1题目](imgSytemS\向量处理机-例题1题目.png)
+> ![向量处理机-例题1题目](imgSytemS/向量处理机-例题1题目.png)
 
 > 重点提示：-1mod16 如何计算？$-1=-1*16+X$,这个 X 就是答案
 
-> 例题：19. ![向量处理机-例题4题目](imgSytemS\向量处理机-例题4题目.png)
+> 例题：19. ![向量处理机-例题4题目](imgSytemS/向量处理机-例题4题目.png)
 >
 > ![image-20210401160423151](imgSytemSRe/image-20210401160423151.png)
 
@@ -1086,25 +1086,25 @@
 
 ### 大题
 
-> 例题：9. ![多处理机-例题2答案2](imgSytemS\多处理机-例题2答案2.png)
+> 例题：9. ![多处理机-例题2答案2](imgSytemS/多处理机-例题2答案2.png)
 >
 > 例题：10.
 >
-> ![多处理机-例题3题目](imgSytemS\多处理机-例题3题目.png)
+> ![多处理机-例题3题目](imgSytemS/多处理机-例题3题目.png)
 >
-> 例题：11. ![多处理机-例题4题目](imgSytemS\多处理机-例题4题目.png)
+> 例题：11. ![多处理机-例题4题目](imgSytemS/多处理机-例题4题目.png)
 >
-> 例题：12. ![多处理机-例题5题目](imgSytemS\多处理机-例题5题目.png)
+> 例题：12. ![多处理机-例题5题目](imgSytemS/多处理机-例题5题目.png)
 >
-> 例题：13. ![多处理机-例题6题目](imgSytemS\多处理机-例题6题目.png)
+> 例题：13. ![多处理机-例题6题目](imgSytemS/多处理机-例题6题目.png)
 
 - **FORK 语句**
 
-> 例题：14. ![多处理机-例题9题目](imgSytemS\多处理机-例题9题目.png)
+> 例题：14. ![多处理机-例题9题目](imgSytemS/多处理机-例题9题目.png)
 >
 > 例题：15.
 >
-> ![多处理机-例题10题目](imgSytemS\多处理机-例题10题目.png)
+> ![多处理机-例题10题目](imgSytemS/多处理机-例题10题目.png)
 
 ## 第八章 数据流计算机和归约机
 
