--- a/计算机组成原理复习.md
+++ b/计算机组成原理复习.md
@@ -109,7 +109,7 @@
 
   - 操作数的地址存放在**指令给出的地址码**
 
-  3.4 程序的机器级表示，过程式程序设计的程序有三种结构：**顺序、选择和循环结构**三种
+    3.4 程序的机器级表示，过程式程序设计的程序有三种结构：**顺序、选择和循环结构**三种
 
 5、早期计算机的定时方式采用：`机器周期、节拍和脉冲` 三级时序对数据通路操作进行定时控制。P4.2.2 数据通路的时序控制
 
@@ -191,7 +191,7 @@
 - 0.0101=$0*2^{-1}+1*2^{-2}+0*{-3}+1*{-4}=0*0.5+1*0.25+0*0.125+1*0.625=0.3125$
 - 101=$1*2^{-1}+0*2^{-2}+1*{-3}=1*0.5+0*+*0.25+1*0.125=0.625$
 
-![img](imgOrganization\420ab3e2e6d1e17c1dfc4886e3569b22.jpg)
+![img](imgOrganization/420ab3e2e6d1e17c1dfc4886e3569b22.jpg)
 
 2）十进制转二进制：整数部分 `除2` 取余数倒计法。小数部分是 `乘2` 取整数顺计法。
 
@@ -282,7 +282,7 @@
 
 某计算机的时钟周期为 2.5ns
 
-![概论-真题](D:\mdFile\理论学习\imgOrganization\概论-真题.png)(1)该计算机的峰值 MIPS 是多少?(2)×1 和 ×2 的执行时间分别是多少?(3)×1 和 X2 的平均 CPI 分别是多少?
+![概论-真题](D:\mdFile\理论学习\imgOrganization/概论-真题.png)(1)该计算机的峰值 MIPS 是多少?(2)×1 和 ×2 的执行时间分别是多少?(3)×1 和 X2 的平均 CPI 分别是多少?
 
 - 求峰值 MIPS？$MIPS=1÷(时钟周期*CPI)*10^3$
   - **`CPI取最小的`**
