--- a/计算机网络原理.md
+++ b/计算机网络原理.md
@@ -257,19 +257,19 @@ https://blog.csdn.net/weixin_42835409/article/details/107768971?spm=1001.2014.30
     - 建立电路->传输数据->拆除电路
     - 必须事先申请信道，通信期间始终占用该信道
     - 在源节点与目的节点直接建立一条专用的通路，用于传输数据。
-  - ![概述-计算机网络的分类电路交换网络](imgCNet\概述-计算机网络的分类电路交换网络.png)
+  - ![概述-计算机网络的分类电路交换网络](imgCNet/概述-计算机网络的分类电路交换网络.png)
   - **报文交换**：
     - **采用存储-转发交换方式**
     - 用户数据加上源地址、目的地址、校验码等辅助信息，然后**封装成报文**、这个报文传送到相邻结点，全部存储后，再转发给下一个结点，重复这一过程直到到达目的结点，每个报文可以单独选择到达目的结点的路径。
-  - ![概述-计算机网络的分类报文交换网络](imgCNet\概述-计算机网络的分类报文交换网络.png)
+  - ![概述-计算机网络的分类报文交换网络](imgCNet/概述-计算机网络的分类报文交换网络.png)
   - **分组交换**：
     - 也称**包交换网络**，ARPANet 首先使用
     - 发送端将数据划分为等长的单位（分组）以**存储-转发方式进行传输**
     - 将分析交换需要的报文的**拆分**与**重组**
-- ![概述-计算机网络的分类分组交换网络](imgCNet\概述-计算机网络的分类分组交换网络.png)
+- ![概述-计算机网络的分类分组交换网络](imgCNet/概述-计算机网络的分类分组交换网络.png)
 - 三种交换的比较
 
-![概述-计算机网络的分类三种交换网络的比较](imgCNet\概述-计算机网络的分类三种交换网络的比较.png)
+![概述-计算机网络的分类三种交换网络的比较](imgCNet/概述-计算机网络的分类三种交换网络的比较.png)
 
 - 按用户属性分类
   - 公有网
@@ -380,7 +380,7 @@ https://blog.csdn.net/weixin_42835409/article/details/107768971?spm=1001.2014.30
     - **会话层：允许主机间各个进程直接的会话**
     - **表示层：处理通信系统间交换信息的方式**
 
-![概述-OSI参考模型](imgCNet\概述-OSI参考模型.png)
+![概述-OSI参考模型](imgCNet/概述-OSI参考模型.png)
 
 - TCP/IP 参考模型与 OSI 的特点
 
@@ -444,7 +444,7 @@ TCP/IP
 
   - 对于突发性数据传输，信道利用率低，且传输速率单一
 
-  9.什么是报文交换？什么是分组交换？试比较两者的优劣。
+    9.什么是报文交换？什么是分组交换？试比较两者的优劣。
 
 - **报文交换:**发送方把要发送的信息附加上发送/接受主机的地址及其他控制信息，构成一个完整的报文，然后以报文为单位在交换网络的各节点之间以**存储-转发**的方式发送，直至送达目的主机。
 - **分组交换：**需要将带传数据(即报文)分割成较小的数据块，每个数据块附加上地址、序号等控制信息构成数据分组，每个分组独立传输到目的地，目的地将收到的分组重新组装，还原为报文。分组传输过程通常也采用存储-转发交换方式。
@@ -473,11 +473,11 @@ TCP/IP
   - 一般来说 100Mbps=100*10^6。*
   - 250000\*10^3
 
-  14.假设主机 A 向主机 B 发送一个 L=1500B 的分组，主机 A 到大主机 B 的路径上有 3 段链路、2 个分组交换机，3 段链路长度分别为 D1=5000km、D2=4000km、D3=1000km;每段链路的传输速率均为 R=2Mbit/s，信号传输速率为 V=250,000km/s，分组减缓及处理每个分组的时延为 dc=3ms。试求：
+    14.假设主机 A 向主机 B 发送一个 L=1500B 的分组，主机 A 到大主机 B 的路径上有 3 段链路、2 个分组交换机，3 段链路长度分别为 D1=5000km、D2=4000km、D3=1000km;每段链路的传输速率均为 R=2Mbit/s，信号传输速率为 V=250,000km/s，分组减缓及处理每个分组的时延为 dc=3ms。试求：
 
-  1)若以存储-转发的分组交换方式，则该分组从主机 A 到达主机 B 的端到端时延是多少？
+    1)若以存储-转发的分组交换方式，则该分组从主机 A 到达主机 B 的端到端时延是多少？
 
-  2)若 dc=0，且不采取存储-转发的分组交换方式,而是分组交换机直接转发收到的每个分组(即直通交换)，则该分组从主机 A 到达主机 B 的端到端时延是多少?
+    2)若 dc=0，且不采取存储-转发的分组交换方式,而是分组交换机直接转发收到的每个分组(即直通交换)，则该分组从主机 A 到达主机 B 的端到端时延是多少?
 
 - 1.
 
@@ -551,7 +551,7 @@ TCP/IP
   - 基础结构域名/反向域名
     - arpa
 
-![网络应用-域名](imgCNet\网络应用-域名.png)
+![网络应用-域名](imgCNet/网络应用-域名.png)
 
 - **域名服务器的分类**
   - 本地域名服务器
@@ -566,9 +566,9 @@ TCP/IP
     - 将下一步要查询的服务器告知给客户端
     - 举例：提出请求时首先在本地域名服务器里进行查找，若无最终解析成果。则从根域名服务器开始查询，若无最终解析成果，则把下一步要查询的域名服务器响应给本地域名服务器。本地域名服务器再向上一步得到的域名服务器查询，如此反复直到得到最终解析成果交给主机。
 
-![网络应用-域名解析过程递归查询](imgCNet\网络应用-域名解析过程递归查询.png)
+![网络应用-域名解析过程递归查询](imgCNet/网络应用-域名解析过程递归查询.png)
 
-![网络应用-域名解析过程迭代查询](imgCNet\网络应用-域名解析过程迭代查询.png)
+![网络应用-域名解析过程迭代查询](imgCNet/网络应用-域名解析过程迭代查询.png)
 
 > 2.4 万维网应用
 
@@ -657,7 +657,7 @@ TCP/IP
 - **原始套接字 SOCK_RAW**
   - **绕过传输层**，直接调用网络层
 
-![网络应用-Socket接口模型](imgCNet\网络应用-Socket接口模型.png)
+![网络应用-Socket接口模型](imgCNet/网络应用-Socket接口模型.png)
 
 - **基于 TCP 的 Socket 编程**
 
@@ -704,7 +704,7 @@ TCP/IP
   - 服务器关闭监听端口（可以理解为 关机了）
     - `close(ms)`
 
-![网络应用-基于TCP的Socket编程](imgCNet\网络应用-基于TCP的Socket编程.png)
+![网络应用-基于TCP的Socket编程](imgCNet/网络应用-基于TCP的Socket编程.png)
 
 - **基于 UDP 的 Socket 编程**
 
@@ -740,7 +740,7 @@ TCP/IP
   - 服务器关闭端口
     - `close(uss)`
 
-![网络应用-基于UDP的Socket编程](imgCNet\网络应用-基于UDP的Socket编程.png)
+![网络应用-基于UDP的Socket编程](imgCNet/网络应用-基于UDP的Socket编程.png)
 
 ### 习题
 
@@ -829,9 +829,10 @@ TCP/IP
   - HTTP1.1 的特点：非并行，只需建立一次连接。
   - 无流水：2(请求 index) + 8(八个图片)=10RTTh
   - 流水：2+1=3RTTh
+
     - 流水模式下，发出应用对象请求，返回所有引用对象。故 8 个图片文件只需 1 个 RTTh
 
-  10.电子邮件主要由那几部分构成？P67
+      10.电子邮件主要由那几部分构成？P67
 
 - 邮件服务器、简单邮件传输协议（SMTP）、用户代理和邮件读取协议。
 
@@ -844,7 +845,7 @@ TCP/IP
 
   - 用途：数据连接用于实际传送文件内容
 
-  13.考虑向 N 个对等方（用户）分发 F=15Gb 的一个文件。该服务器具有 us=30Mbps 的上传速率，每个对等方的下载速率 di=2Mbps，上传速率为 u。请分别针对客户-服务器分发模式和 P2P 分发模式两种情况，对于 N=10、100 和 1000 以及 u=500kbps、1Mbps 和 2Mbps 的每种组合，绘制最小分发时间图表。
+    13.考虑向 N 个对等方（用户）分发 F=15Gb 的一个文件。该服务器具有 us=30Mbps 的上传速率，每个对等方的下载速率 di=2Mbps，上传速率为 u。请分别针对客户-服务器分发模式和 P2P 分发模式两种情况，对于 N=10、100 和 1000 以及 u=500kbps、1Mbps 和 2Mbps 的每种组合，绘制最小分发时间图表。
 
 - N=客户数量、F 文件大小、us 服务器上传速度、u 是客户下载速度
 - C/S 的公式
@@ -865,7 +866,7 @@ TCP/IP
 | 1000     | $500000$ | 28302       | 14563     | 7500      |
 | 用户数量 | 下载时间 |             |           |           |
 
-![作业4步骤](imgCNetRe\作业4步骤.png)
+![作业4步骤](imgCNetRe/作业4步骤.png)
 
 ## 第三章 传输层
 
@@ -948,7 +949,7 @@ TCP/IP
   - 客户端口号或短暂端口号，49152 ~ 65535，端口号不固定，动态
 - 常用端口号：
 
-![传输层-常用端口号](imgCNet\传输层-常用端口号.png)
+![传输层-常用端口号](imgCNet/传输层-常用端口号.png)
 
 - 传输层提供的服务有
   - 无连接服务
@@ -970,7 +971,7 @@ TCP/IP
 
 - **UDP 数据报格式**
 
-![传输层-UDP数据报格式](imgCNet\传输层-UDP数据报格式.png)
+![传输层-UDP数据报格式](imgCNet/传输层-UDP数据报格式.png)
 
 ### TCP
 
@@ -1012,7 +1013,7 @@ TCP/IP
     - 长度为 0~3 字节，取值全 0。
     - 保证首部长度为 4 字节 的倍数
 
-![传输层-TCP报文段格式](imgCNet\传输层-TCP报文段格式.png)
+![传输层-TCP报文段格式](imgCNet/传输层-TCP报文段格式.png)
 
 > 3.3 TCP 可靠传输
 
@@ -1028,7 +1029,7 @@ TCP/IP
   - 第三次握手：客户端 → 服务端
     - 客户端收到服务器的 SYNACK 段后，向服务器发送(ACK=1,seq=x+1,ack_seq=y+1)的 ACK 段，同时，客户端进入 ESTAB-LISHED 状态，客户端确认连接已建立；当服务器收到 ACK 段后，也进入 ESTAB-LISHER 状态，也确认连接已建立。至此，双方确认连接建立成功
 
-![传输层-三次握手](imgCNet\传输层-三次握手.png)
+![传输层-三次握手](imgCNet/传输层-三次握手.png)
 
 - **连接建立——四次挥手（连接释放）**
   - 第一步：
@@ -1040,7 +1041,7 @@ TCP/IP
   - 第四步：
     - 当客户收到服务器发送的 FIN 段后，向服务器发送 ACK 段(ACK=1,seq=u+1,ack_seq=w+1)，其状态由 FIN_WAIT_2 进入 TIME_WAIT,等待 2MSL 时间，然后进入 CLOSED 状态，最终释放连接；服务器再收到最好一次 ACK 段后，状态由 LAST_ACK 进入 CLOSED，最终释放连接。
 
-![传输层-四次挥手](imgCNet\传输层-四次挥手.png)
+![传输层-四次挥手](imgCNet/传输层-四次挥手.png)
 
 - 状态转移：
   - 断开连接过程中，客户端状态名称与含义如下：ESTAB-LISHED 状态，表示可以传送数据；FIN_WAIT_1 终止等待 1 状态，等待服务器端确认；FIN_WAIT_2 终止等待 2 状态，等待服务器端发出的连接释放报文段；TIME_WAIT 时间等待状态，表示等待 2 倍 MSL 时间后进入关闭状态 CLOSED。
@@ -1072,7 +1073,7 @@ TCP/IP
     - **拥塞窗口 CongWin**，从 1 开始，是**指数增加**，（1 2 4 8 12）
   - 以此类推
 
-![传输层-慢开始和拥塞流程](imgCNet\传输层-慢开始和拥塞流程.png)
+![传输层-慢开始和拥塞流程](imgCNet/传输层-慢开始和拥塞流程.png)
 
 - **快重传和快恢复**
   - **冗余 ACK**（三个重复的确认）当拥塞窗口 CongWin 满了时，收到三个**冗余 ACK**，就执行快重传和快恢复。
@@ -1094,7 +1095,7 @@ TCP/IP
     - 然后执行**快恢复**，将拥塞窗口降到**新的慢开始门限（ssthresh）**的位置
     - 而**新的慢开始门限（ssthresh）值**=**收到三个重复的确认（冗余 ACK）时拥塞窗口的值除以二**
 
-![传输层-快重传和快恢复](imgCNet\传输层-快重传和快恢复.png)
+![传输层-快重传和快恢复](imgCNet/传输层-快重传和快恢复.png)
 
 ### 习题
 
@@ -1196,7 +1197,7 @@ TCP/IP
   - ① 增加接收方缓存能力（接收窗口>1），缓存正确到达但失序的分组，
   - ② 仅要求发送方重传未被接收方确认的分组，等缺失分组到达后一并向上层按序提交。
 
-  8.请说明 TCP 滑动窗口机制，对比 TCP 滑动窗口与 GBN 协议的异同。 P104
+    8.请说明 TCP 滑动窗口机制，对比 TCP 滑动窗口与 GBN 协议的异同。 P104
 
 - TCP 滑动窗口协议：实质上就是将可靠数据传输的工作，抽象到分组序号空间，即发送方确保分组按序发送，接收方确保分组按序提交。发送方和接收方各维护一个窗口，分别称为发送窗口 Ws 和接收双扣 Wr。
 - 异同：
@@ -1204,7 +1205,7 @@ TCP/IP
   - GBN 接收窗口只有 1 个，TCP 可以有多个
   - GBN 只能接收基序号指向的分组无缓存能力，TCP 可以接收接收窗口范围里基序号和非基序号的多个分组。
 
-  10.TCP 如何实现拥塞控制？ P124
+    10.TCP 如何实现拥塞控制？ P124
 
 - 慢启动
 - 拥塞避免
@@ -1405,7 +1406,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
 - ！！！IP 数据包是发送给链路层的，因为链路层一个数据帧携带的数量比较小，这个时候就要把 IP 包分成几块发送！！！
 - **8 位=1B**
 
-![网络层-IPV4的数据报格式](imgCNet\网络层-IPV4的数据报格式.png)
+![网络层-IPV4的数据报格式](imgCNet/网络层-IPV4的数据报格式.png)
 
 > 4.5.2 IPv4 编址
 
@@ -1429,7 +1430,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
 - **最大主机数**：2 的 （主机号位数）次方 减 2
   - A 类，主机号数为 24 位，那么他的最大主机数是$2^{24}-2$
 
-![网络层-IP地址的分类](imgCNet\网络层-IP地址的分类.png)
+![网络层-IP地址的分类](imgCNet/网络层-IP地址的分类.png)
 
 - **特殊地址**
   - 0.0.0.0，源地址
@@ -1440,7 +1441,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
   - \*.255.255.255，直接广播地址，对**特定网络**上所有主机进行广播
   - 127.X.X.X，环回地址
 
-![网络层-特殊IP地址](imgCNet\网络层-特殊IP地址.png)
+![网络层-特殊IP地址](imgCNet/网络层-特殊IP地址.png)
 
 ### 子网划分
 
@@ -1448,7 +1449,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
 - 1985 年起，增加了 **子网号字段**，将二级 IP 地址变成**三级 IP 地址**，这种做法称为**子网划分**
 - 将三级 IP 地址与**三级 IP 地址的子网掩码**进行**“与”**运算，结果就是**子网的网络地址**
 
-![网络层-子网划分三级IP地址](imgCNet\网络层-子网划分三级IP地址.png)
+![网络层-子网划分三级IP地址](imgCNet/网络层-子网划分三级IP地址.png)
 
 > - 总结
 >   - 子网掩码：网络地址全 1
@@ -1497,7 +1498,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
     - 最小地址：子网地址 1 开始（**100**00000）
     - 最大地址：将后面全变成 1（**101**11111）
 
-![网络层-子网划分](imgCNet\网络层-子网划分.png)
+![网络层-子网划分](imgCNet/网络层-子网划分.png)
 
 - **构成超网**
 - **路由转发的过程采用：最长前缀优先匹配原则**
@@ -1610,7 +1611,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
     - 经过若干次更新后，所有路由器最终都会知道到达本自治系统任何一个网络的最短距离和下一跳路由器的地址，即“**收敛**”。
   - 具体：
 
-![网络层-RIP路由算法](imgCNet\网络层-RIP路由算法.png)
+![网络层-RIP路由算法](imgCNet/网络层-RIP路由算法.png)
 
 - **OSPF**
   - **链路状态路由选择算法**是一种**全局路由选择算法**，每个路由需要**构建整个网络的拓扑图**
@@ -1620,7 +1621,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
     - 第三步：从 x 出来，x 到 u 的路径是（ x , v , u）
     - 第四步：省略
 
-![网络层-OSPF路由算法](imgCNet\网络层-OSPF路由算法.png)
+![网络层-OSPF路由算法](imgCNet/网络层-OSPF路由算法.png)
 
 - BGP
   - 跨自治系统的路由信息交换
@@ -1715,7 +1716,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
   - 2）路由选择好之后，会存在转发表中，路由选择相当于预先设置，转发是执行者。
   - 3）路由是根据路由表查找到达目标网络的最佳路由表项；转发是根据最佳路由中的出口及下一跳 IP 转发数据包的过程。所以，路由选择是转发的基础，数据转发是路由的结果。
 
-  3.对比虚电路网络和数据报网络的优缺点。 P134
+    3.对比虚电路网络和数据报网络的优缺点。 P134
 
 - 数据报网络
   - 优点：
@@ -1732,9 +1733,10 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
     2. 不需要为每个分组携带完整的目的地址，控制信息部分比特数减少，降低了开销。
     3. 按序发送分组，分配内存资源，不会丢失数据
   - 缺点：
+
     1. 消耗资源多，成本高
 
-  4.虚电路网络如何建立虚电路？虚电路网络分组转发的依据是什么？ P133
+    4.虚电路网络如何建立虚电路？虚电路网络分组转发的依据是什么？ P133
 
 **回答三要素就可以了**
 
@@ -1763,7 +1765,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
   - 1）拥塞预防：流量感知路由；准入控制。
   - 2）拥塞消除：流量调节；负载脱落。
 
-  8.请将 IP 网络 183.164.128.0/17 划分为等长的 8 个子网，并分别给出每个子网的子网地址、广播地址、子网掩码、IP 地址总数、可分配 IP 地址数和可分配 IP 地址范围。 P151
+    8.请将 IP 网络 183.164.128.0/17 划分为等长的 8 个子网，并分别给出每个子网的子网地址、广播地址、子网掩码、IP 地址总数、可分配 IP 地址数和可分配 IP 地址范围。 P151
 
 | 子网地址         | 广播地址        | 子网掩码      | IP 总数 | 可分配 IP | 可分配 IP 地址范围            |
 | ---------------- | --------------- | ------------- | ------- | --------- | ----------------------------- |
@@ -1857,7 +1859,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
 
   13.某网络拓扑图如图所示，路由器 R1 通过接口 E1、E2 分别连接局域网 1、局域网 2，通过接口 L0 连接路由器 R2，并通过路由器 R2 连接域名服务器与互联网。R1 的 L0 接口的 IP 地址是 202.118.2.1；R2 的 L0 接口的 IP 地址是 202.118.2.2，L1 接口的 IP 地址是 130.11.120.1，E0 接口的 IP 地址是 202.118.3.1；域名服务器的 IP 地址是 202.118.3.2。 P153
 
-![img](imgCNet\watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjgzNTQwOQ==,size_16,color_FFFFFF,t_70)
+![img](imgCNet/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjgzNTQwOQ==,size_16,color_FFFFFF,t_70)
 
 （1）将 IP 地址空间 202.118.1.0/24 分配给局域网 1、局域网 2，每个局域网需分配的 IP 地址不少于 120 个。请给出分配结果，并分别写出局域网 1、局域网 2 的子网地址、广播地址、子网掩码、IP 地址总数、可分配 IP 地址数和可分配 IP 地址范围。
 （2）请给出 R1 的路由表，使其明确包括局域网 1 的路由、局域网 2 的路由、域名服务器的主机路由和互联网的路由。
@@ -1984,7 +1986,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
       - **因为结果中`X`最大的次方是 4。因此加 4 个 0**
     - 第二步：模 2 除法，数据加 0 后除多项式，余数为冗余码/FCS/CRC 校验码的比特序列
       - 异或：同 0 异 1
-      - ![数据链路层-循环冗余码CRC计算](imgCNet\数据链路层-循环冗余码CRC计算.png)
+      - ![数据链路层-循环冗余码CRC计算](imgCNet/数据链路层-循环冗余码CRC计算.png)
     - 最后：让发送的数据加上最后的余数结果为：1101011011`1110`
 
 ### 多路访问控制
@@ -2028,14 +2030,14 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
       - **频分复用的所有用户在同样的时间占用不同的带宽（频率带宽）资源**
     - 2、优点：容易实现
     - 3、缺点：会互相干扰
-    - ![数据链路层-频分多路复用](imgCNet\数据链路层-频分多路复用.png)
+    - ![数据链路层-频分多路复用](imgCNet/数据链路层-频分多路复用.png)
   - **时分多路复用 TDM**
     - 将信道的传输信号在时域里划分为多个等长的时隙，每路信号占用不同的时隙。
     - 频分复用：并行。时分复用：并发。
-    - ![数据链路层-时分多路复用](imgCNet\数据链路层-时分多路复用.png)
+    - ![数据链路层-时分多路复用](imgCNet/数据链路层-时分多路复用.png)
   - **波分多路复用 WDM**
     - 在一根光纤中传输多种不同波长（频率）的光信号。
-    - ![image-20210301120317863](imgCNet\数据链路层-波分多路复用.png)
+    - ![image-20210301120317863](imgCNet/数据链路层-波分多路复用.png)
   - **码分多路复用 CDM**
     - 采用不同编码区别各路原始信号，共享信道频率和时间。
     - 码分多路复用是**采用不同的编码来区分各路原始信号的一种复用方式**。与 FDM 和 TDM 不同，它既共享信道的频率，又共享时间。
@@ -2067,7 +2069,7 @@ $t_{Seg}$ 是传输速率，当 ACK 分组很小的时候可以忽略
       - 监听信道，空闲时以概率 P 直接传输数据，1-p 概率等到下一个时隙发送。忙则等待下一个时隙。
       - 优点：既能像非坚持算法那样减少冲突，又能像 1-坚持算法那样减少媒体空闲时间的这种方案
       - 缺点：发生冲突后还是要坚持把数据帧发送完，造成了浪费。
-    - ![数据链路层-三种CSMA对比](imgCNet\数据链路层-三种CSMA对比.png)
+    - ![数据链路层-三种CSMA对比](imgCNet/数据链路层-三种CSMA对比.png)
   - **CSMA/CD 协议**（带冲突检查的载波监听多路访问协议）
     - **CD：**碰撞检测（冲突检测），在使用 CSMA 协议发送数据的时候，当检测出碰撞，则立刻终止发送，等待一个随机时间，继续发送。
 
@@ -2318,7 +2320,7 @@ P82
 
   - 例如，如果差错编码采取二次重复码，即冗余信息是数据的两次复制，则编码集的汉明距离 ds=3，因此可以纠正一位差错。
 
-  4.假设在一个使用 CSMA/CD 协议的局域网中，两个结点同时经过一个速率为 R 的广播信道开始发送一个长度为 L 的帧，d(prop)为两个结点之间的单向传播延迟。如果 d(prop)<L/R，是否会发生冲突？如果会发生冲突，两个结点能检测到冲突吗？为什么？P194
+    4.假设在一个使用 CSMA/CD 协议的局域网中，两个结点同时经过一个速率为 R 的广播信道开始发送一个长度为 L 的帧，d(prop)为两个结点之间的单向传播延迟。如果 d(prop)<L/R，是否会发生冲突？如果会发生冲突，两个结点能检测到冲突吗？为什么？P194
 
 - 会发生冲突。d(prop)<L/R
   - （另一种说法是因为两个结点中间链路两个结点发送的信号会叠加起来，导致该链路上的其他结点无法识别信号。 ）
@@ -2330,7 +2332,7 @@ P82
 
   - 而每一段和序列相同，则结果为 1，第一段相同就 1，第二段 0，因此结果是：`1001`
 
-  6.考虑在低负载情况下，纯 ALOHA 与时隙 ALOHA 相比，哪个延迟更小？ P192
+    6.考虑在低负载情况下，纯 ALOHA 与时隙 ALOHA 相比，哪个延迟更小？ P192
 
 - 时隙 ALOHA 延迟更小
 
@@ -2344,7 +2346,7 @@ P82
 - 51.2×(2^10-1)=52377.6us≈52ms
   - 51.2 是最远主机的往返时延
 
-![](imgCNet\例题答案52.png)
+![](imgCNet/例题答案52.png)
 
 10.一个通过以太网传送的 IP 数据包总长度为 60 字节。是否需要在封装到以太网帧中时进行填充？如果需要，试问需要填充多少字节？ P202
 
@@ -2360,9 +2362,9 @@ P82
   2. 基于 MAC 地址划分
   3. 基于上层协议类型或地址划分
 
-  12.自己看书 P212
+     12.自己看书 P212
 
-![](imgCNet\例题答案51.jpg)
+![](imgCNet/例题答案51.jpg)
 
 ## 第六章 物理层
 
@@ -2376,7 +2378,7 @@ P82
   - 数字信号
     - 因变量是离散，传输数字信号，b。
 
-![物理层-数字信号与模拟信号](imgCNet\物理层-数字信号与模拟信号.png)
+![物理层-数字信号与模拟信号](imgCNet/物理层-数字信号与模拟信号.png)
 
 > 5.1 数据通信系统模型
 
@@ -2499,12 +2501,12 @@ $R_b=R log_2M$
 - 双极归零码
   - 1（前半周期是正，后半周期 0），0（前半周期是负，后半周期 0）。
 
-![物理层-四种编码与调制方式](imgCNet\物理层-四种编码与调制方式.png)
+![物理层-四种编码与调制方式](imgCNet/物理层-四种编码与调制方式.png)
 
 - 差分码
   - 对于 1 来说（起始信号相对于前一个，要进行跳变，）对于 0 来说（看前面一个信号是什么，他就是什么）
 
-![物理层-差分码](imgCNet\物理层-差分码.png)
+![物理层-差分码](imgCNet/物理层-差分码.png)
 
 > - AMI
 >   - 1 和-1 归零，0 不归
@@ -2522,7 +2524,7 @@ $R_b=R log_2M$
   - -1：前-1 后 0。
   - 1 和 0 固定不变。
 
-![物理层-AMI码](imgCNet\物理层-AMI码.png)
+![物理层-AMI码](imgCNet/物理层-AMI码.png)
 
 - 双相码 曼切斯特编码
   - 他有差分和普通的双向码。
@@ -2535,20 +2537,20 @@ $R_b=R log_2M$
       - 1 开头时：是 `-11`
       - 1 开头时：是 `1-1`
 
-![物理层-双相码码](D:\mdFile\理论学习\imgCNet\物理层-双相码码.png)
+![物理层-双相码码](D:\mdFile\理论学习\imgCNet/物理层-双相码码.png)
 
 - 米勒码
   - 0 不跳变，信息码连着 1 时，后面的 1 要交替编码。
   - **跟着前面的半截横线，当是双 0 时则跳变下。**
 
-![物理层-米勒码](imgCNet\物理层-米勒码.png)
+![物理层-米勒码](imgCNet/物理层-米勒码.png)
 
 - CMI 码
   - 0`归零,-11`，1 一条直线不归零。
   - 0：永恒固定不变。
   - 1 相对之前跳变：不是双 1 的跳变，是之前的跳变。
 
-![物理层-CMI码](D:\mdFile\理论学习\imgCNet\物理层-CMI码.png)
+![物理层-CMI码](D:\mdFile\理论学习\imgCNet/物理层-CMI码.png)
 
 - 二进制数字调制包括：
 
@@ -2556,25 +2558,25 @@ $R_b=R log_2M$
     - 全部电信号都是相同的。左高右高
     - **0 是空的！！！！**
 
-  ![物理层-2ASK](imgCNet\物理层-2ASK.png)
+  ![物理层-2ASK](imgCNet/物理层-2ASK.png)
 
   - 二进制**频**移键控（2FSK）
     - 1：左高右高，中间右 3 个山峰（2 个 W
     - 0：中间 1 个山峰（1 个 W
 
-  ![物理层-2FSK](D:\mdFile\理论学习\imgCNet\物理层-2FSK.png)
+  ![物理层-2FSK](D:\mdFile\理论学习\imgCNet/物理层-2FSK.png)
 
   - 二进制**相**移键控（2PSK）
     - 1：左低右高，反过来了！2 个山峰
     - 0：左高右低，
 
-  ![物理层-2PSK](D:\mdFile\理论学习\imgCNet\物理层-2PSK.png)
+  ![物理层-2PSK](D:\mdFile\理论学习\imgCNet/物理层-2PSK.png)
 
   - 二进制差分相移键控（2DPSK）
     - 1：左低右高，反过来了！0：左高右低。继承上面的规则
     - 加上差分，就是变频，其他没变
 
-  ![物理层-2DPSK](D:\mdFile\理论学习\imgCNet\物理层-2DPSK.png)
+  ![物理层-2DPSK](D:\mdFile\理论学习\imgCNet/物理层-2DPSK.png)
 
 ### 习题
 
@@ -2698,7 +2700,7 @@ $R_b=R log_2M$
   - 狭义信道：仅指信号传输介质
   - 广义信道：包括信号传输介质和通信系统的一些变换装置，如发送设备、接收设备、天线和调制器等(广义信道还有调制信号和编码信号，因为是主要分类就不往下拆分了)
 
-  6.一个用于发送二进制信号的 3kHz 信道，其信噪比为 30dB，试计算其可以获得的最大数据传输率是多少？
+    6.一个用于发送二进制信号的 3kHz 信道，其信噪比为 30dB，试计算其可以获得的最大数据传输率是多少？
 
 - $10log_{10}*S/N=30* log_{10}*S/N=3S/N=1000$
 - $C=3*10^3*log_2(1+1000) ≈ 30kbit/s$
@@ -2713,7 +2715,7 @@ $R_b=R log_2M$
 
   10.设某 2PSK 传输系统的码元速率为 1200Baud，载波频率为 2400Hz，发送数字信息为 10011101，试画出 2PSK 信号调制器原理框图，并画出 2PSK 信号的时间波形。 P234
 
-![](imgCNet\例题答案61jpg)
+![](imgCNet/例题答案61jpg)
 
 1 跳 0 会在上方画一个 m，0 跳 1 会在下方画一个 m，m 中心就在每格的界线上，一格内拐三次
 
@@ -3138,7 +3140,7 @@ $R_b=R log_2M$
   - A 用 B 的公钥和加密算法 去加密 报文 m，得到密文。$K_B^+(m)$
   - B 在用自己的私钥解密。$K_B^-(K_B^+(m))$
 
-![img](imgCNet\20200724112551384.png)
+![img](imgCNet/20200724112551384.png)
 
 - 简单报文认证
   - 图片的话看 P278
@@ -3157,7 +3159,7 @@ $R_b=R log_2M$
   - 2）用私钥对其进行加密，得到 $(m,K_m^-(H(m)))$，发送给 A
   - 解密就是，对 m 进行散列函数得到 Hm，对加密报文应用公钥得到 Hm，匹配是否相同。
 
-![img](imgCNet\20200724120243750.png)
+![img](imgCNet/20200724120243750.png)
 
 > - 替代密码-凯撒密码：字母后移 k 位
 >   - abcdef
@@ -3185,7 +3187,7 @@ cuerip pnori$ ottknl mrwpce
 >   - 根据题一解出来的秘钥是`code`，长度是`4`，字母顺序根据`cdefghijklmno`。所以顺序是`1，4，2，3`
 >   - 列顺序顺序是：`第一列→第四列→第二列→第三列`
 >   - 因为`code`长度是 4，所以第二段明文`4个为一段`
-> - ![应用题42](D:\mdFile\理论学习\imgCNetRe\应用题42.png)
+> - ![应用题42](D:\mdFile\理论学习\imgCNetRe/应用题42.png)
 
 > 网络安全通信所需要的基本属性：机密性、消息完整性、可抵赖性、身份认证
 >
@@ -3288,9 +3290,9 @@ cuerip pnori$ ottknl mrwpce
 
 - IP 欺骗
 
-  3.![20200724111705532](imgCNet\20200724111705532.png)
+  3.![20200724111705532](imgCNet/20200724111705532.png)
 
-![20200724111739152](imgCNet\20200724111739152.png)
+![20200724111739152](imgCNet/20200724111739152.png)
 
 4.利用 k=4 的凯撒密码加密明文“Bob. I love you. Alice”，得到的密文是什么？ P273
 
@@ -3309,7 +3311,7 @@ cuerip pnori$ ottknl mrwpce
 
   7.请绘制公开密钥密码的加密/解密过程，并说明公钥/私钥对满足的基本特性。 P276
 
-![img](imgCNet\20200724112551384.png)
+![img](imgCNet/20200724112551384.png)
 
 8.加密算法 AES、RSA、DES、3DES 中，计算量最大的是哪个？ P276
 
@@ -3317,7 +3319,7 @@ cuerip pnori$ ottknl mrwpce
 
   - RSA 算法是目前应用比较广泛的公开密钥算法，算法安全性高，但是计算量非常大，因此通常 RSA 会与对称密钥密码（如 DES 或 AES）结合使用。例如，利用 DES 加密/解密报文，利用 RSA 分发 DES 密钥。
 
-  9.什么是消息完整性？如何检验消息的完整性？校验消息完整性的意义是什么？P276
+    9.什么是消息完整性？如何检验消息的完整性？校验消息完整性的意义是什么？P276
 
 - 定义：报文/消息完整性，也成为报文/消息认证（或报文鉴别）。
 
@@ -3346,7 +3348,7 @@ cuerip pnori$ ottknl mrwpce
     - 强抗碰撞：已知原数据和 MD5，想找到一个具有相同 MD5 值的数据（即伪造数据）是非常困难的。
   - SHA-1：不可以从消息摘要中复原信息；两个不同的消息不会产生同样的消息摘要。
 
-  11.简述数字签名的原理，分析简单数字签名，签名报文摘要技术的相同和不同。 P279
+    11.简述数字签名的原理，分析简单数字签名，签名报文摘要技术的相同和不同。 P279
 
 - 数字签名原理
   - 用私有密钥加密的消息，所得到的密文，可以使用公钥解密。
@@ -3361,11 +3363,11 @@ cuerip pnori$ ottknl mrwpce
 
 **13.**请设计一个协议，使得 A、B 双方相互发送消息，协议能够保证消息的机密性、不可否认性、消息的完整性和身份认证，并画出示意图。 P280
 
-![img](imgCNet\20200724120243750.png)
+![img](imgCNet/20200724120243750.png)
 
 解析：
 
-![img](imgCNet\20200724120304768.png)
+![img](imgCNet/20200724120304768.png)
 
 14.KDC 和 CA 的作用是什么？ P283 P285
 
@@ -3387,7 +3389,7 @@ cuerip pnori$ ottknl mrwpce
 
   - 特点：鉴别用户身份或针对授权用户开放特定服务。
 
-  17.假设 Alice 想给 Bob 发送一封邮件；Bob 拥有公钥/私钥对，Alice 有 Bob 的证书，但是 Alice 没有公钥/私钥对；Alice 和 Bob 共享相同的散列函数请回答下列问题。 P277
+    17.假设 Alice 想给 Bob 发送一封邮件；Bob 拥有公钥/私钥对，Alice 有 Bob 的证书，但是 Alice 没有公钥/私钥对；Alice 和 Bob 共享相同的散列函数请回答下列问题。 P277
 
 1）在这种情况下，能否设计一个方案使得 Bob 可以核实邮件消息是由 Alice 创建的？
 
@@ -3436,7 +3438,7 @@ cuerip pnori$ ottknl mrwpce
 $(500/2500*10^3) * 10*10^6=2000$
 
 - MAC 没有 L，最大的 E。答案 D
-  - ![例题18MAC地址](imgCNetRe\例题18MAC地址.png)
+  - ![例题18MAC地址](imgCNetRe/例题18MAC地址.png)
 
 ### 错题本
 
@@ -3507,7 +3509,7 @@ $(500/2500*10^3) * 10*10^6=2000$
 
 （202210）
 
-![image-20230331184253621](imgCNet\image-20230331184253621.png)
+![image-20230331184253621](imgCNet/image-20230331184253621.png)
 
 - 1）发送 ACK0，将 0 号分组交付上层，接收窗口 Wr 滑动到 1
 - 2）将 1 号分组标记为已接收
